--- a/blog/build-terraform-providers/index.mdx
+++ b/blog/build-terraform-providers/index.mdx
@@ -24,14 +24,20 @@ Terraform with its provider plugin ecosystem can serve as a robust interface bet
 
 Terraform already helps your users solve their infrastructure problems:
 
-| Infrastructure Problem | Terraform Solution |
-|---|---|
-| Inconsistent environments | Promotes consistency across dev, staging, and production environments. |
-| Managing multicloud infrastructure | Provides a unified framework for managing GCP, AWS, Azure, and more. |
-| Scalability challenges | Automates provisioning and management of resources, aiding scalability. |
-| Wasted cloud resources | Includes modules to estimate infrastructure cost and scale down unused resources. |
-| Resource orchestration | Automatically handles dependencies between infrastructure resources. |
-| Auditing and versioning of infrastructure | Enables version control and auditing of infrastructure. |
+<Table 
+  data={[
+    { problem: "Inconsistent environments", solution: "Promotes consistency across dev, staging, and production environments." },
+    { problem: "Managing multicloud infrastructure", solution: "Provides a unified framework for managing GCP, AWS, Azure, and more." },
+    { problem: "Scalability challenges", solution: "Automates provisioning and management of resources, aiding scalability." },
+    { problem: "Wasted cloud resources", solution: "Includes modules to estimate infrastructure cost and scale down unused resources." },
+    { problem: "Resource orchestration", solution: "Automatically handles dependencies between infrastructure resources." },
+    { problem: "Auditing and versioning of infrastructure", solution: "Enables version control and auditing of infrastructure." }
+  ]}
+  columns={[
+    { key: "problem", header: "Infrastructure Problem" },
+    { key: "solution", header: "Terraform Solution" }
+  ]}
+/>
 
 Speakeasy makes it straightforward to create API surface areas that provide exceptional developer experience to your users. That includes SDKs in 7+ popular languages, but it also means [Terraform providers](/docs/create-terraform). We help you meet your users where they already are - the Terraform registry.
 
@@ -124,7 +130,7 @@ Clearly, publishing a Terraform provider could benefit most SaaS providers, so w
 
 We won't mince words here: Publishing a Terraform provider is difficult.
 
-Telling SaaS development teams to _“just publish a Terraform provider”_ would be misguided at best.
+Telling SaaS development teams to _"just publish a Terraform provider"_ would be misguided at best.
 
 ![If only it was as easy as drawing an owl](./assets/owl.jpg)
 
@@ -154,7 +160,7 @@ On 22 June, [Airbyte launched their Terraform provider](https://airbyte.com/blog
 
 This release came after months of collaboration between Airbyte and Speakeasy, and we are delighted to have played a role in Airbyte's continued success.
 
-> We looked for the best options in API tooling, so we didn’t have to build everything ourselves. We focus on what we do best: ensuring data is accessible everywhere it has value. For our API needs; we have Speakeasy.
+> We looked for the best options in API tooling, so we didn't have to build everything ourselves. We focus on what we do best: ensuring data is accessible everywhere it has value. For our API needs; we have Speakeasy.
 >
 > -- <cite>Riley Brook, Product @ Airbyte</cite>
 
@@ -166,16 +172,30 @@ We ran [Sloc Cloc and Code (scc)](https://github.com/boyter/scc/blob/master/READ
 $ scc terraform-provider-airbyte
 ```
 
-| Language  | Files | Lines  | Blank | Comment | Code   | Complexity | Bytes    |
-|-----------|------:|-------:|------:|--------:|-------:|-----------:|---------:|
-| Go        | 3024  | 267623 | 35706 | 10727   | 221190 | 37484      | 9886221  |
-| Markdown  | 240   | 17985  | 6760  | 0       | 11225  | 0          | 802305   |
-| YAML      | 5     | 65577  | 8     | 24      | 65545  | 0          | 2170810  |
-| JSON      | 1     | 6      | 0     | 0       | 6      | 0          | 83       |
-| Makefile  | 1     | 9      | 3     | 0       | 6      | 0          | 138      |
-| Terraform | 1     | 85     | 10    | 0       | 75     | 2          | 2106     |
-| gitignore | 1     | 4      | 0     | 0       | 4      | 0          | 44       |
-| Total     | 3273  | 351289 | 42487 | 10751   | 298051 | 37486      | 12861707 |
+
+
+<Table 
+  data={[
+    { language: "Go", files: "3024", lines: "267623", blank: "35706", comment: "10727", code: "221190", complexity: "37484", bytes: "9886221" },
+    { language: "Markdown", files: "240", lines: "17985", blank: "6760", comment: "0", code: "11225", complexity: "0", bytes: "802305" },
+    { language: "YAML", files: "5", lines: "65577", blank: "8", comment: "24", code: "65545", complexity: "0", bytes: "2170810" },
+    { language: "JSON", files: "1", lines: "6", blank: "0", comment: "0", code: "6", complexity: "0", bytes: "83" },
+    { language: "Makefile", files: "1", lines: "9", blank: "3", comment: "0", code: "6", complexity: "0", bytes: "138" },
+    { language: "Terraform", files: "1", lines: "85", blank: "10", comment: "0", code: "75", complexity: "2", bytes: "2106" },
+    { language: "gitignore", files: "1", lines: "4", blank: "0", comment: "0", code: "4", complexity: "0", bytes: "44" },
+    { language: "Total", files: "3273", lines: "351289", blank: "42487", comment: "10751", code: "298051", complexity: "37486", bytes: "12861707" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "files", header: "Files" },
+    { key: "lines", header: "Lines" },
+    { key: "blank", header: "Blank" },
+    { key: "comment", header: "Comment" },
+    { key: "code", header: "Code" },
+    { key: "complexity", header: "Complexity" },
+    { key: "bytes", header: "Bytes" }
+  ]}
+/>
 
 * Estimated Cost to Develop (organic) $10,705,339
 * Estimated Schedule Effort (organic) 33.86 months
