--- a/blog/choosing-a-docs-vendor/index.mdx
+++ b/blog/choosing-a-docs-vendor/index.mdx
@@ -63,17 +63,27 @@ There are good arguments for each depending on your use case. We'll explore the 
 
 ### Feature Matrix
 
-| **Feature** | **Mintlify** | **Scalar** | **Bump** | **ReadMe** | **Redoc** |
-|-------------|--------------|------------|----------|------------|-----------|
-| **OpenAPI support** | ✅ | ✅ | ✅ | ✅ | ✅ |
-| **Automated API reference generation** | ✅ | ✅ | ✅ | ✅ | ✅ |
-| **x-codeSamples** | ✅ | ✅ | ✅ | ❌ | ✅ |
-| **API client** | Limited | ✅ Full-featured (Postman-style) | ❌ | Limited | ❌ |
-| **Custom branding** | ✅ | ✅ | ✅ | Limited (online editor, less granular control) | ✅ Full control (CSS or JavaScript customization) |
-| **Collab tools** | ❌ | ✅ | ✅ | ❌ | ✅ |
-| **Performance** | ❌ | ❌ | ✅ | ❌ | ✅ |
-| **CI/CD** | ❌ | ❌ | ✅ | ❌ | ✅ |
-| **Open source** | ❌ | ✅ | ❌ | ❌ | ✅ |
+<Table 
+  data={[
+    { feature: "OpenAPI support", mintlify: "✅", scalar: "✅", bump: "✅", readme: "✅", redoc: "✅" },
+    { feature: "Automated API reference generation", mintlify: "✅", scalar: "✅", bump: "✅", readme: "✅", redoc: "✅" },
+    { feature: "x-codeSamples", mintlify: "✅", scalar: "✅", bump: "✅", readme: "❌", redoc: "✅" },
+    { feature: "API client", mintlify: "Limited", scalar: "✅ Full-featured (Postman-style)", bump: "❌", readme: "Limited", redoc: "❌" },
+    { feature: "Custom branding", mintlify: "✅", scalar: "✅", bump: "✅", readme: "Limited (online editor, less granular control)", redoc: "✅ Full control (CSS or JavaScript customization)" },
+    { feature: "Collab tools", mintlify: "❌", scalar: "✅", bump: "✅", readme: "❌", redoc: "✅" },
+    { feature: "Performance", mintlify: "❌", scalar: "❌", bump: "✅", readme: "❌", redoc: "✅" },
+    { feature: "CI/CD", mintlify: "❌", scalar: "❌", bump: "✅", readme: "❌", redoc: "✅" },
+    { feature: "Open source", mintlify: "❌", scalar: "✅", bump: "❌", readme: "❌", redoc: "✅" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "mintlify", header: "Mintlify" },
+    { key: "scalar", header: "Scalar" },
+    { key: "bump", header: "Bump" },
+    { key: "readme", header: "ReadMe" },
+    { key: "redoc", header: "Redoc" }
+  ]}
+/>
 
 ---
 
