--- a/blog/choosing-your-framework-python/index.mdx
+++ b/blog/choosing-your-framework-python/index.mdx
@@ -290,14 +290,21 @@ To help you select a framework, we've created a flowchart that simplifies the de
 ![A flowchart for choosing a Python framework](./assets/framework-decision-diagram.png)
 
 
-| **Use case**                | **Requirements**                             | **Recommended frameworks**          |
-|-----------------------------|---------------------------------------------|--------------------------------------|
-| **MVP with limited resources** | Quick setup, simplicity, flexibility         | Flask-RESTX, FastAPI                      |
-| **Complex project**          | Scalability, structure, robust tools         | Django + DRF                        |
-| **Secure enterprise application** | Strong security, maintainability, scalability | Django + DRF                        |
-| **Fully async workload**     | High concurrency, non-blocking performance   | FastAPI, Tornado                    |
-| **Real-time application**    | WebSocket support, low latency               | Tornado, Sanic                      |
-| **Existing project**         | Gradual migration to async or scaling needs  | Django (with ASGI), FastAPI         |
+<Table 
+  data={[
+    { useCase: "MVP with limited resources", requirements: "Quick setup, simplicity, flexibility", recommendedFrameworks: "Flask-RESTX, FastAPI" },
+    { useCase: "Complex project", requirements: "Scalability, structure, robust tools", recommendedFrameworks: "Django + DRF" },
+    { useCase: "Secure enterprise application", requirements: "Strong security, maintainability, scalability", recommendedFrameworks: "Django + DRF" },
+    { useCase: "Fully async workload", requirements: "High concurrency, non-blocking performance", recommendedFrameworks: "FastAPI, Tornado" },
+    { useCase: "Real-time application", requirements: "WebSocket support, low latency", recommendedFrameworks: "Tornado, Sanic" },
+    { useCase: "Existing project", requirements: "Gradual migration to async or scaling needs", recommendedFrameworks: "Django (with ASGI), FastAPI" }
+  ]}
+  columns={[
+    { key: "useCase", header: "Use case" },
+    { key: "requirements", header: "Requirements" },
+    { key: "recommendedFrameworks", header: "Recommended frameworks" }
+  ]}
+/>
 
 Consider:
 
