--- a/blog/contract-testing-with-openapi/index.mdx
+++ b/blog/contract-testing-with-openapi/index.mdx
@@ -132,7 +132,7 @@ Select the default options when prompted.
 
 We'll start by writing an OpenAPI specification for our API. In most cases, the provider will define the OpenAPI specification, as they are responsible for the implementation of the API.
 
-<ScrollyCoding className="ch-scrollycoding-full-height ch-scrollycoding-force-focus-scroll" fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -257,7 +257,7 @@ The `Subscription` schema defines the structure of the response object. It inclu
 # !focus(53:68)
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 This example OpenAPI specification only defines the happy path for the `/plan/{id}` endpoint. In a real-world scenario, you would define additional paths, operations, and error responses to cover all possible scenarios.
 
