--- a/blog/e2e-testing-arazzo/index.mdx
+++ b/blog/e2e-testing-arazzo/index.mdx
@@ -85,7 +85,7 @@ We'll use the example of an API called Build-a-bot, which allows users to create
 
 Let's examine the key components of an Arazzo specification using our Build-a-bot API example. The specification describes a workflow for creating, assembling, and activating a robot - a perfect example of a complex, multi-step process that would be difficult to test with traditional approaches.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -252,7 +252,7 @@ The `onSuccess` action specifies that after successful validation, the workflow 
 !from ./assets/arazzo.yaml.txt
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 This combination of validation patterns, data extraction, and flow control creates the foundation for testing complex API workflows.
 
@@ -852,7 +852,7 @@ The generator creates a test suite for each workflow in the Arazzo document. Eac
 
 Let's explore the structure of a generated test case.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -948,7 +948,7 @@ Finally, we extract the outputs from the step and store them in the `context` ob
 !from ./assets/generated.test.ts.txt
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 This structure repeats for each step in the workflow, creating a series of test cases that execute the workflow sequentially. The generated tests validate the API's behavior at each step, ensuring that the workflow progresses correctly.
 
