--- a/blog/how-to-build-sdks/index.mdx
+++ b/blog/how-to-build-sdks/index.mdx
@@ -110,19 +110,30 @@ To dive deeper into why SDKs are crucial for API adoption and developer experien
 
 When it comes to building SDKs for your API, you have three main routes. Each comes with specific costs, maintenance burdens, and control levels:
 
-| Handwritten                                                                                                                                                | Open Source                                                                                                                                                                                                                                                         | Speakeasy                                                                                                                                                                                                                                 |
-| :--------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ✅ Full DevEx control<br/>✅ Unlimited custom code<br/>✅ Aligned with internal coding style<br/>❌ High cost (~\$90K per SDK)<br/>❌ Upfront cost per language<br/>❌ Requires diverse in-house language expertise<br/>❌ Slow API feature updates<br/>❌ No automated documentation<br/> | ✅ No upfront cost<br/>❌ Feature gaps for common API features (OAuth 2.0, pagination, retries)<br/>❌ Non‐idiomatic code hurts DevEx<br/>❌ No CI/CD integration<br/>❌ High operational costs<br/>❌ Requires OpenAPI spec<br/>❌ Slow maintenance (4,000+ open GitHub issues)<br/>❌ Major customization limitations | ✅ Up‐to‐date, idiomatic code aligned with best practices<br/>✅ Strong DevEx control<br/>✅ Custom code support<br/>✅ Automated publishing<br/>✅ Docs integration<br/>✅ Full ownership of code<br/>❌ Paid solution<br/>❌ Requires OpenAPI spec<br/>❌ Small customization limitations<br/> |
+<Table 
+  data={[
+    { 
+      handwritten: "✅ Full DevEx control\n✅ Unlimited custom code\n✅ Aligned with internal coding style\n❌ High cost (~$90K per SDK)\n❌ Upfront cost per language\n❌ Requires diverse in-house language expertise\n❌ Slow API feature updates\n❌ No automated documentation",
+      openSource: "✅ No upfront cost\n❌ Feature gaps for common API features (OAuth 2.0, pagination, retries)\n❌ Non‐idiomatic code hurts DevEx\n❌ No CI/CD integration\n❌ High operational costs\n❌ Requires OpenAPI spec\n❌ Slow maintenance (4,000+ open GitHub issues)\n❌ Major customization limitations",
+      speakeasy: "✅ Up‐to‐date, idiomatic code aligned with best practices\n✅ Strong DevEx control\n✅ Custom code support\n✅ Automated publishing\n✅ Docs integration\n✅ Full ownership of code\n❌ Paid solution\n❌ Requires OpenAPI spec\n❌ Small customization limitations"
+    }
+  ]}
+  columns={[
+    { key: "handwritten", header: "Handwritten" },
+    { key: "openSource", header: "Open Source" },
+    { key: "speakeasy", header: "Speakeasy" }
+  ]}
+/>
 
 ### Hand-Written SDKs
 
 Building SDKs by hand offers maximum control over the developer experience and allows for perfect alignment with internal coding styles. However, this approach comes with significant trade-offs. The initial development cost is high (around $90,000 per SDK), and ongoing maintenance requires a dedicated team with expertise in multiple programming languages. Beyond the direct costs, several common pitfalls can undermine the success of hand-written SDKs:
 
-1.  **Neglected Maintenance:** APIs evolve. If your SDK doesn’t evolve alongside it, you’ll introduce breaking changes, outdated docs, and dissatisfied users.
-2.  **Inconsistent Language Support:** If you release multiple SDKs but treat one as a “primary” language, users in other languages may feel neglected.
-3.  **Improper Error Handling:** Failing to handle retries, rate limits, or authentication seamlessly can turn a developer’s first impression sour.
-4.  **Over-Engineering or Under-Engineering:** Trying to build a “perfect” SDK can lead to months of development. Conversely, a bare-bones approach can frustrate users with missing features.
-5.  **Incomplete Documentation:** Even the best SDK is useless if developers can’t find clear examples and usage instructions.
+1.  **Neglected Maintenance:** APIs evolve. If your SDK doesn't evolve alongside it, you'll introduce breaking changes, outdated docs, and dissatisfied users.
+2.  **Inconsistent Language Support:** If you release multiple SDKs but treat one as a "primary" language, users in other languages may feel neglected.
+3.  **Improper Error Handling:** Failing to handle retries, rate limits, or authentication seamlessly can turn a developer's first impression sour.
+4.  **Over-Engineering or Under-Engineering:** Trying to build a "perfect" SDK can lead to months of development. Conversely, a bare-bones approach can frustrate users with missing features.
+5.  **Incomplete Documentation:** Even the best SDK is useless if developers can't find clear examples and usage instructions.
 
 ---
 
@@ -136,7 +147,7 @@ Moreover, the quality and idiomatic correctness of the generated code can vary w
 
 While OpenAPI Generator remains a viable solution for projects with very specific needs or constraints—particularly where time-to-market is paramount—its challenges in maintenance, support, and consistency often prompt larger organizations to consider more comprehensive, enterprise-grade alternatives.
 
-For a deeper dive into these challenges and a detailed comparison with Speakeasy’s managed approach, [read our analysis.](/post/speakeasy-vs-openapi-generator)
+For a deeper dive into these challenges and a detailed comparison with Speakeasy's managed approach, [read our analysis.](/post/speakeasy-vs-openapi-generator)
 
 ---
 
