--- a/blog/how-to-generate-a-mock-server/index.mdx
+++ b/blog/how-to-generate-a-mock-server/index.mdx
@@ -146,7 +146,7 @@ Open the `gen.yaml` file in your text editor:
 
 
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps
 
@@ -175,7 +175,7 @@ generation:
     generateNewTests: true
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ### 5. Generate the mock server
 
@@ -403,17 +403,20 @@ Several other mock server solutions are available, each with its own set of feat
 
 The table below compares Speakeasy with these mock server solutions.
 
-| Feature                 | **Speakeasy**                                                      | **Prism**                                             | **MockServer**                                  | **Postman**                                    |
-|-------------------------|--------------------------------------------------------------------|-------------------------------------------------------|-------------------------------------------------|------------------------------------------------|
-| **Primary use case**    | Automated SDK generation and management                            | API mocking and validation based on OpenAPI documents | HTTP/HTTPS request-response mocking and testing | API development, testing, and collaboration    |
-| **SDK generation**      | ✅ Yes (automated SDK generation)                                   | ❌ No                                                  | ❌ No                                            | ❌ No                                           |
-| **Test generation**     | ✅ Yes                                                              | ❌ No                                                  | ❌ No                                            | ✅ Yes (pre-saved tests)                        |
-| **Supported languages** | 8+ languages, including Python, JavaScript, TypeScript, Java, and Go.                     | Language-agnostic                                     | Java only                                       | Language-agnostic                              |
-| **Testing types**       | SDK testing, unit testing, contract testing                        | Contract testing, API prototyping                     | Integration, functional, and system testing     | Functional, integration, and regression testing            |
-| **Mocking support**     | ✅ Yes, built-in for SDKs                                           | ✅ Yes (dynamic/static examples)                       | ✅ Yes (complex mocking with templates)          | ✅ Yes (mock servers with predefined responses) |
-| **Request validation**  | ✅ Built-in for SDKs (validates requests against OpenAPI documents) | ✅ Yes                                                 | ✅ Yes                                           | ⚠️ Limited (manually set up via tests)          |
-| **Response generation** | ✅ Handles SDK responses                                            | ✅ Static and dynamic responses                        | ✅ Templated responses                           | ⚠️ Static responses                            |
-| **OpenAPI support**     | ✅ Yes, creates mock expectations based on your OpenAPI document    | ✅ Yes                                                 | ✅ Yes                                           | ⚠️ Partial (import/export specs)               |
+<Table 
+  data={[
+    { feature: "Primary use case", speakeasy: "Automated SDK generation and management", prism: "API mocking and validation based on OpenAPI documents", mockServer: "HTTP/HTTPS request-response mocking and testing", postman: "API development, testing, and collaboration" },
+    { feature: "SDK generation", speakeasy: "✅ Yes (automated SDK generation)", prism: "❌ No", mockServer: "❌ No", postman: "❌ No" },
+    { feature: "Test generation", speakeasy: "✅ Yes", prism: "❌ No", mockServer: "❌ No", postman: "✅ Yes (pre-saved tests)" },
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "prism", header: "Prism" },
+    { key: "mockServer", header: "MockServer" },
+    { key: "postman", header: "Postman" }
+  ]}    
+/>
 
 ## Why choose Speakeasy for test generation and mocking?
 
