--- a/blog/openapi-servers/index.mdx
+++ b/blog/openapi-servers/index.mdx
@@ -58,7 +58,7 @@ In response to the need for more flexibility, OAS 3.0 introduces the optional `s
 
 Each server in the `servers` array consists of an object with at least one field, `url`. Each server object can also contain an optional `description` field, as well as an optional array of `variables`.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -160,7 +160,7 @@ This field is not used by the OpenAPI documentation generator, but it can be use
 !from ./assets/openapi-3.yaml
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Steps to Adapt Swagger 2.0 URL Definitions to OpenAPI 3.x
 
@@ -326,7 +326,7 @@ Stripe's OpenAPI document could be further enhanced by providing a fallback glob
 
 Datadog's API, known for its scalability and flexibility, leverages variables in server definitions to allow users to select their preferred region. This feature is particularly useful for global services where latency and data residency are critical considerations.
 
-<ScrollyCoding>
+<Spotlight>
 
 ## !!steps
 
@@ -444,7 +444,7 @@ Datadog also uses operation-level servers to direct log uploads to the appropria
 
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Conclusion: The Impact of Well-Defined Servers in API Usability
 
