--- a/blog/openapi-tips-webhooks-callbacks/index.mdx
+++ b/blog/openapi-tips-webhooks-callbacks/index.mdx
@@ -42,13 +42,20 @@ Both webhooks and callbacks are a way of defining asynchronous communication wit
 
 Callbacks were added to the OpenAPI Specification in [version 3](https://spec.openapis.org/oas/v3.0.0#callback-object) in 2017; webhooks in [version 3.1](https://spec.openapis.org/oas/v3.1.0#oasWebhooks) in 2021.
 
-| OpenAPI Version                               | Date    | Notes           |
-| --------------------------------------------- | ------- | --------------- |
-| [3.0.0](https://spec.openapis.org/oas/v3.0.0) | 2017-07 | Callbacks added |
-| [3.0.1](https://spec.openapis.org/oas/v3.0.1) | 2017-12 |                 |
-| [3.0.2](https://spec.openapis.org/oas/v3.0.2) | 2018-10 |                 |
-| [3.0.3](https://spec.openapis.org/oas/v3.0.3) | 2020-02 |                 |
-| [3.1.0](https://spec.openapis.org/oas/v3.1.0) | 2021-02 | Webhooks added  |
+<Table 
+  data={[
+    { openapiVersion: "[3.0.0](https://spec.openapis.org/oas/v3.0.0)", date: "2017-07", notes: "Callbacks added" },
+    { openapiVersion: "[3.0.1](https://spec.openapis.org/oas/v3.0.1)", date: "2017-12", notes: "" },
+    { openapiVersion: "[3.0.2](https://spec.openapis.org/oas/v3.0.2)", date: "2018-10", notes: "" },
+    { openapiVersion: "[3.0.3](https://spec.openapis.org/oas/v3.0.3)", date: "2020-02", notes: "" },
+    { openapiVersion: "[3.1.0](https://spec.openapis.org/oas/v3.1.0)", date: "2021-02", notes: "Webhooks added" }
+  ]}
+  columns={[
+    { key: "openapiVersion", header: "OpenAPI Version" },
+    { key: "date", header: "Date" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 In OpenAPI, webhooks and callbacks are defined as follows:
 
@@ -61,7 +68,7 @@ A valid API schema can comprise only webhooks. For your schema to be valid, it n
 
 Below is the same notification service described as a webhook.
 
-<ScrollyCoding fullHeight className="ch-scrollycoding-full-height">
+<Spotlight>
 
 ### !!steps Add a Webhook Description
 
@@ -146,13 +153,13 @@ paths:
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Creating a Callback in OpenAPI
 
 Let's create a simple callback example. We use YAML rather than JSON for readability.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ### !!steps Add a Subscription Path
 
@@ -258,7 +265,7 @@ paths:
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Syntax Rules
 
