--- a/blog/picking-a-javascript-api-framework/index.mdx
+++ b/blog/picking-a-javascript-api-framework/index.mdx
@@ -484,13 +484,20 @@ Use the flowchart to narrow your choices based on your project's needs and prior
 
 ![Flowchart to choose a JavaScript API framework](./assets/framework-js-selection.png)
 
-| Scenario                       | Recommended framework | Why?                                                                                               |
-|--------------------------------|-----------------------|----------------------------------------------------------------------------------------------------|
-| MVP with limited resources     | Hono, Fastify         | Lightweight, fast, and easy to set up. It is ideal for rapid iteration and serverless deployments. |
-| Enterprise-grade applications  | NestJS                | Provides a structured architecture, robust security, and maintainability for large-scale systems.  |
-| Heavily async workloads        | Fastify               | Optimized for high-throughput and non-blocking operations, outperforming Express in concurrency.   |
-| Familiarity with Node.js tools | Express               | A stable and well-documented ecosystem with extensive middleware options.                          |
-| Experimenting with Bun         | ElysiaJS              | High performance with unique developer tools, leveraging Bun's runtime for cutting-edge projects.  |
+<Table 
+  data={[
+    { scenario: "MVP with limited resources", recommendedFramework: "Hono, Fastify", why: "Lightweight, fast, and easy to set up. It is ideal for rapid iteration and serverless deployments." },
+    { scenario: "Enterprise-grade applications", recommendedFramework: "NestJS", why: "Provides a structured architecture, robust security, and maintainability for large-scale systems." },
+    { scenario: "Heavily async workloads", recommendedFramework: "Fastify", why: "Optimized for high-throughput and non-blocking operations, outperforming Express in concurrency." },  
+    { scenario: "Familiarity with Node.js tools", recommendedFramework: "Express", why: "A stable and well-documented ecosystem with extensive middleware options." },
+    { scenario: "Experimenting with Bun", recommendedFramework: "ElysiaJS", why: "High performance with unique developer tools, leveraging Bun's runtime for cutting-edge projects." },
+  ]}
+  columns={[
+    { key: "scenario", header: "Scenario" },
+    { key: "recommendedFramework", header: "Recommended Framework" },
+    { key: "why", header: "Why?" }
+  ]}
+/>
 
 To be concise, consider:
 
