--- a/blog/pydantic-vs-dataclasses.mdx
+++ b/blog/pydantic-vs-dataclasses.mdx
@@ -288,20 +288,27 @@ By using Pydantic's `@validate_call` decorator, we made our function safer and e
 
 ## Comparing Python Typing Methods
 
-The table below summarizes the key differences between the Python typing methods we discussed. Keep in mind that some points may have exceptions or nuances depending on your specific use case. The table is meant to provide a general overview only.
-
-| Feature                   | Type Annotations | Data Classes | `TypedDict` | Pydantic |
-| ------------------------- | :--------------: | :----------: | :---------: | :------: |
-| Static type checking      |        ✅        |      ✅      |     ✅      |    ✅    |
-| Runtime type checking     |        ❌        |      ❌      |     ❌      |    ✅    |
-| Automatic data validation |        ❌        |      ❌      |     ❌      |    ✅    |
-| JSON serialization        |        ❌        |      ❌      |     ❌      |    ✅    |
-| Nested object support     |        ✅        |      ✅      |     ✅      |    ✅    |
-| Custom validation rules   |        ❌        |      ❌      |     ❌      |    ✅    |
-| IDE autocomplete support  |        ✅        |      ✅      |     ✅      |    ✅    |
-| Performance overhead      |       None       |   Minimal    |    None     | Minimal  |
-| Compatibility with dicts  |        ❌        |      ❌      |     ✅      |    ✅    |
-| Standard Library          |        ✅        |      ✅      |     ✅      |    ❌    |
+<Table 
+  data={[
+    { feature: "Static type checking", annotations: "✅", dataclasses: "✅", typeddict: "✅", pydantic: "✅" },
+    { feature: "Runtime type checking", annotations: "❌", dataclasses: "❌", typeddict: "❌", pydantic: "✅" },
+    { feature: "Automatic data validation", annotations: "❌", dataclasses: "❌", typeddict: "❌", pydantic: "✅" },
+    { feature: "JSON serialization", annotations: "❌", dataclasses: "❌", typeddict: "❌", pydantic: "✅" },
+    { feature: "Nested object support", annotations: "✅", dataclasses: "✅", typeddict: "✅", pydantic: "✅" },
+    { feature: "Custom validation rules", annotations: "❌", dataclasses: "❌", typeddict: "❌", pydantic: "✅" },
+    { feature: "IDE autocomplete support", annotations: "✅", dataclasses: "✅", typeddict: "✅", pydantic: "✅" },
+    { feature: "Performance overhead", annotations: "None", dataclasses: "Minimal", typeddict: "None", pydantic: "Minimal" },
+    { feature: "Compatibility with dicts", annotations: "❌", dataclasses: "❌", typeddict: "✅", pydantic: "✅" },
+    { feature: "Standard Library", annotations: "✅", dataclasses: "✅", typeddict: "✅", pydantic: "❌" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "annotations", header: "Type Annotations" },
+    { key: "dataclasses", header: "Data Classes" },
+    { key: "typeddict", header: "TypedDict" },
+    { key: "pydantic", header: "Pydantic" }
+  ]}
+/>
 
 ## Why Speakeasy Chose Pydantic
 
