--- a/blog/python-http-clients-requests-vs-httpx-vs-aiohttp.mdx
+++ b/blog/python-http-clients-requests-vs-httpx-vs-aiohttp.mdx
@@ -316,18 +316,26 @@ This brings us to the question: which library should you choose for your next Py
 
 Here's a quick comparison of the key features of Requests, AIOHTTP, and HTTPX:
 
-| Feature / Characteristic | Requests  | AIOHTTP   | HTTPX     |
-| ------------------------ | --------- | --------- | --------- |
-| Synchronous operations   | ✅        | ❌        | ✅        |
-| Asynchronous operations  | ❌        | ✅        | ✅        |
-| Built-in HTTP/2 support  | ❌        | ❌        | ✅        |
-| WebSocket support        | ❌        | ✅        | Via addon |
-| Type hints               | Partial   | ✅        | ✅        |
-| Retries with backoff     | Via addon | ✅        | ✅        |
-| SOCKS proxies            | Via addon | Via addon | ✅        |
-| Event hooks              | ✅        | ❌        | ✅        |
-| Brotli support           | Via addon | ✅        | ✅        |
-| Asynchronous DNS lookup  | ❌        | ✅        | ✅        |
+<Table 
+  data={[
+    { feature: "Synchronous operations", requests: "✅", aiohttp: "❌", httpx: "✅" },
+    { feature: "Asynchronous operations", requests: "❌", aiohttp: "✅", httpx: "✅" },
+    { feature: "Built-in HTTP/2 support", requests: "❌", aiohttp: "❌", httpx: "✅" },
+    { feature: "WebSocket support", requests: "❌", aiohttp: "✅", httpx: "Via addon" },
+    { feature: "Type hints", requests: "Partial", aiohttp: "✅", httpx: "✅" },
+    { feature: "Retries with backoff", requests: "Via addon", aiohttp: "✅", httpx: "✅" },
+    { feature: "SOCKS proxies", requests: "Via addon", aiohttp: "Via addon", httpx: "✅" },
+    { feature: "Event hooks", requests: "✅", aiohttp: "❌", httpx: "✅" },
+    { feature: "Brotli support", requests: "Via addon", aiohttp: "✅", httpx: "✅" },
+    { feature: "Asynchronous DNS lookup", requests: "❌", aiohttp: "✅", httpx: "✅" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature / Characteristic" },
+    { key: "requests", header: "Requests" },
+    { key: "aiohttp", header: "AIOHTTP" },
+    { key: "httpx", header: "HTTPX" }
+  ]}
+/>
 
 ## Recommendations
 
