--- a/blog/release-custom-code-regions/index.mdx
+++ b/blog/release-custom-code-regions/index.mdx
@@ -15,7 +15,7 @@ tags:
 
 
 
-We’re excited to announce **Custom Code Regions**, a powerful new feature that puts you in complete control of your SDKs. Whether you need to add custom methods, integrate third-party libraries, or build bespoke functionality, Custom Code Regions let you do it all—directly in the generated SDK. And the best part? Your customizations persist across updates, with no need to edit your OpenAPI spec or deal with workarounds.  
+We're excited to announce **Custom Code Regions**, a powerful new feature that puts you in complete control of your SDKs. Whether you need to add custom methods, integrate third-party libraries, or build bespoke functionality, Custom Code Regions let you do it all—directly in the generated SDK. And the best part? Your customizations persist across updates, with no need to edit your OpenAPI spec or deal with workarounds.  
 
 ---
 
@@ -27,7 +27,7 @@ Whether you're adding helper methods, extending SDK functionality, or introducin
 
 #### **How It Works**
 
-Custom Code Regions leverage foldable region syntax, inspired by Visual Studio Code, to define and preserve custom code sections. Here’s an example:
+Custom Code Regions leverage foldable region syntax, inspired by Visual Studio Code, to define and preserve custom code sections. Here's an example:
 
   ```typescript
   import { ClientSDK } from "./lib/sdks.js";
@@ -53,7 +53,7 @@ During SDK generation, the generator identifies these regions and ensures your c
 For developers, flexibility is key. Before Custom Code Regions, SDK customization options were limited to overlays and hooks, which are powerful tools but sometimes require modifying the OpenAPI spec or working programmatically within the generation process. Custom Code Regions provide a simpler, more direct approach:  
 
 1. **Direct Control**: Write custom logic right in the SDK, bypassing spec modifications or hook configurations.  
-2. **Persistent Changes**: Customizations are preserved during SDK regenerations, so you don’t have to worry about losing your code when the spec changes.  
+2. **Persistent Changes**: Customizations are preserved during SDK regenerations, so you don't have to worry about losing your code when the spec changes.  
 3. **Unlimited Flexibility**: From helper methods to advanced integrations, you can do anything with Custom Code Regions.  
 
 ---
@@ -62,11 +62,18 @@ For developers, flexibility is key. Before Custom Code Regions, SDK customizatio
 
 Custom Code Regions complement overlays and hooks, giving developers three levels of control over their SDKs:  
 
-| **Customization Tool**    | **Purpose**                                                                 | **Key Use Case**                                         |
-|----------------------------|-----------------------------------------------------------------------------|---------------------------------------------------------|
-| **Overlays**               | Modify the OpenAPI spec for structural or schema-related changes.           | Adding paths, tweaking parameters, or updating models.  |
-| **Hooks**                  | Intercept and modify SDK generation programmatically during the build.      | Dynamic updates, injecting logic at specific stages.    |
-| **Custom Code Regions**    | Insert custom logic directly into the generated SDK code at runtime.        | Adding helper methods, third-party integrations, or SDK-specific tweaks. |
+<Table 
+  data={[
+    { customizationTool: "Overlays", purpose: "Modify the OpenAPI spec for structural or schema-related changes.", keyUseCase: "Adding paths, tweaking parameters, or updating models." },
+    { customizationTool: "Hooks", purpose: "Intercept and modify SDK generation programmatically during the build.", keyUseCase: "Dynamic updates, injecting logic at specific stages." },
+    { customizationTool: "Custom Code Regions", purpose: "Insert custom logic directly into the generated SDK code at runtime.", keyUseCase: "Adding helper methods, third-party integrations, or SDK-specific tweaks." }
+  ]}
+  columns={[
+    { key: "customizationTool", header: "Customization Tool" },
+    { key: "purpose", header: "Purpose" },
+    { key: "keyUseCase", header: "Key Use Case" }
+  ]}
+/>
 
 By combining these tools, you can build SDKs that are perfectly tailored to your needs.  
 
