--- a/blog/speakeasy-vs-apimatic/index.mdx
+++ b/blog/speakeasy-vs-apimatic/index.mdx
@@ -134,7 +134,7 @@ Let's create SDKs with Speakeasy and APIMatic from a single API specification, t
 
 We've created an OpenAPI document that describes a fictional bookstore API.
 
-<ScrollyCoding className="ch-scrollycoding-full-height">
+<Spotlight>
 
 ## !!steps
 
@@ -268,7 +268,7 @@ The remainder of the OpenAPI document defines the components used in the operati
 !from ./assets/openapi.yaml.txt 374:639
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 We'll save this as `openapi.yaml` in the root of our test repository.
 
