--- a/blog/speakeasy-vs-fern/index.mdx
+++ b/blog/speakeasy-vs-fern/index.mdx
@@ -55,18 +55,25 @@ Speakeasy gets high-quality products in the hands of our users fast.
 
 Everyone has that one odd language that is critically important to their business and seemingly to nobody else's. That's why we're committed to supporting the long tail. We've made a dent, but we've got further to go. Is there a language you need that we don't support? [Join our Slack community](https://join.slack.com/t/speakeasy-dev/shared_invite/zt-1cwb3flxz-lS5SyZxAsF_3NOq5xc8Cjw) to let us know.
 
-| Language           | Speakeasy | Fern |
-| ------------------ | --------- | ---- |
-| Go                 | ✅        | ✅   |
-| Python             | ✅        | ✅   |
-| TypeScript         | ✅        | ✅   |
-| Java               | ✅        | ✅   |
-| C#                 | ✅        | ✅   |
-| PHP                | ✅        | ✅   |
-| Ruby               | ✅        | ✅   |
-| Terraform          | ✅        | ❌   |
-| Swift              | ✅        | ❌   |
-| Unity              | ✅        | ❌   |
+<Table 
+  data={[
+    { language: "Go", speakeasy: "✅", fern: "✅" },
+    { language: "Python", speakeasy: "✅", fern: "✅" },
+    { language: "TypeScript", speakeasy: "✅", fern: "✅" },
+    { language: "Java", speakeasy: "✅", fern: "✅" },
+    { language: "C#", speakeasy: "✅", fern: "✅" },
+    { language: "PHP", speakeasy: "✅", fern: "✅" },
+    { language: "Ruby", speakeasy: "✅", fern: "✅" },
+    { language: "Terraform", speakeasy: "✅", fern: "❌" },
+    { language: "Swift", speakeasy: "✅", fern: "❌" },
+    { language: "Unity", speakeasy: "✅", fern: "❌" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "fern", header: "Fern" }
+  ]}
+/>
 
 ### SDK features
 
@@ -75,21 +82,28 @@ Fern and Speakeasy SDKs differ in two key areas of feature support:
 1. Fern lacks native support for some of the more advanced enterprise features supported by Speakeasy. Features like pagination and OAuth are left up to the customer to implement with custom code.
 2. Fern offers customizations to the names used in the SDK but not to the fundamental structure of the SDK. In addition to names, Speakeasy allows you to customize details like the directory structure and how parameters are passed into functions.
 
-| Feature                      | Speakeasy | Fern |
-|------------------------------|-----------|------|
-| Union types                  | ✅         | ✅    |
-| Server-side events           | ✅         | ✅    |
-| Retries                      | ✅         | ✅    |
-| Webhooks                     | ✅         | ✅    |
-| Async support                | ✅         | ✅    |
-| Custom SDK naming            | ✅         | ✅    |
-| Pagination                   | ✅         | ✅    |
-| API documentation            | ✅         | ✅    |
-| Streaming uploads            | ✅         | ❌    |
-| OAuth 2.0                    | ✅         | ❌    |
-| React Hooks support          | ✅         | ❌    |
-| Caching and state management | ✅         | ❌    |
-| Customized SDK structure     | ✅         | ❌    |
+<Table 
+  data={[
+    { feature: "Union types", speakeasy: "✅", fern: "✅" },
+    { feature: "Server-side events", speakeasy: "✅", fern: "✅" },
+    { feature: "Retries", speakeasy: "✅", fern: "✅" },
+    { feature: "Webhooks", speakeasy: "✅", fern: "✅" },
+    { feature: "Async support", speakeasy: "✅", fern: "✅" },
+    { feature: "Custom SDK naming", speakeasy: "✅", fern: "✅" },
+    { feature: "Pagination", speakeasy: "✅", fern: "✅" },
+    { feature: "API documentation", speakeasy: "✅", fern: "✅" },
+    { feature: "Streaming uploads", speakeasy: "✅", fern: "❌" },
+    { feature: "OAuth 2.0", speakeasy: "✅", fern: "❌" },
+    { feature: "React Hooks support", speakeasy: "✅", fern: "❌" },
+    { feature: "Caching and state management", speakeasy: "✅", fern: "❌" },
+    { feature: "Customized SDK structure", speakeasy: "✅", fern: "❌" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "fern", header: "Fern" }
+  ]}
+/>
 
 ### Platform features
 
@@ -98,17 +112,24 @@ The primary differences between the platforms are:
 1. Fern is solely focused on the generation of artifacts. Speakeasy has a deeper platform that supports the management of API creation through CLI validation.
 2. Speakeasy offers a web interface for managing and monitoring the creation of your SDKs.
 
-| Feature               | Speakeasy | Fern |
-| --------------------- | --------- | ---- |
-| GitHub CI/CD          | ✅        | ⚠️   |
-| CLI                   | ✅        | ✅   |
-| Web interface         | ✅        | ❌   |
-| Package publishing    | ✅        | ✅   |
-| Product documentation | ✅        | ✅   |
-| Server stubs          | ❌        | ✅   |
-| OpenAPI validation    | ✅        | ❌   |
-| OpenAPI Overlays      | ✅        | ❌   |
-| AI-powered spec edits | ✅        | ❌   |
+<Table 
+  data={[
+    { feature: "GitHub CI/CD", speakeasy: "✅", fern: "⚠️" },
+    { feature: "CLI", speakeasy: "✅", fern: "✅" },
+    { feature: "Web interface", speakeasy: "✅", fern: "❌" },
+    { feature: "Package publishing", speakeasy: "✅", fern: "✅" },
+    { feature: "Product documentation", speakeasy: "✅", fern: "✅" },
+    { feature: "Server stubs", speakeasy: "❌", fern: "✅" },
+    { feature: "OpenAPI validation", speakeasy: "✅", fern: "❌" },
+    { feature: "OpenAPI Overlays", speakeasy: "✅", fern: "❌" },
+    { feature: "AI-powered spec edits", speakeasy: "✅", fern: "❌" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "fern", header: "Fern" }
+  ]}
+/>
 
 ⚠️ Fern claims CI/CD support for SDKs on its paid plan, but this feature is not mentioned in the documentation.
 
@@ -116,23 +137,37 @@ The primary differences between the platforms are:
 
 Speakeasy sets up tracking on all customer repositories and will proactively triage any issues that arise.
 
-| Feature               | Speakeasy | Fern |
-| --------------------- | --------- | ---- |
-| Concierge onboarding  | ✅        | ✅   |
-| Private Slack channel | ✅        | ✅   |
-| Enterprise SLAs       | ✅        | ✅   |
-| User-issues triage    | ✅        | ❌   |
+<Table 
+  data={[
+    { feature: "Concierge onboarding", speakeasy: "✅", fern: "✅" },
+    { feature: "Private Slack channel", speakeasy: "✅", fern: "✅" },
+    { feature: "Enterprise SLAs", speakeasy: "✅", fern: "✅" },
+    { feature: "User-issues triage", speakeasy: "✅", fern: "❌" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "fern", header: "Fern" }
+  ]}
+/>
 
 ### Pricing
 
 The biggest difference between the two pricing models is the starter plan. Speakeasy offers one free SDK with unlimited endpoints, while Fern's starter plan is paid.
 
-| Plan       | Speakeasy             | Fern                           |
-|------------|-----------------------|--------------------------------|
-| Starter    | 1 free published SDK  | $250/mo/SDK; max 50 endpoints  |
-| Scaleup    | 1 free + $250/mo/SDK  | ❌                              |
-| Business   | 1 free + $600/mo/SDK  | $600/mo/SDK; max 150 endpoints |
-| Enterprise | Custom                | Custom                         |
+<Table 
+  data={[
+    { plan: "Starter", speakeasy: "1 free published SDK", fern: "$250/mo/SDK; max 50 endpoints" },
+    { plan: "Scaleup", speakeasy: "1 free + $250/mo/SDK", fern: "❌" },
+    { plan: "Business", speakeasy: "1 free + $600/mo/SDK", fern: "$600/mo/SDK; max 150 endpoints" },
+    { plan: "Enterprise", speakeasy: "Custom", fern: "Custom" }
+  ]}
+  columns={[
+    { key: "plan", header: "Plan" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "fern", header: "Fern" }
+  ]}
+/>
 
 
 ## Fern and Speakeasy walkthrough
