--- a/blog/speakeasy-vs-liblab/index.mdx
+++ b/blog/speakeasy-vs-liblab/index.mdx
@@ -35,20 +35,27 @@ As your user base grows, the diversity of their technical requirements will expa
 
 The table below highlights the current SDK language support offered by Speakeasy and liblab as of June 2024. Please note that these lists are subject to change, so always refer to the official documentation for the most up-to-date information.
 
-| Language           |          Speakeasy           |            liblab            |
-| ------------------ | :--------------------------: | :--------------------------: |
-| Go                 |              ✅              |              ✅              |
-| Python             |              ✅              |              ✅              |
-| Typescript         |              ✅              |              ✅              |
-| Java               |              ✅              |              ✅              |
-| C#                 |              ✅              |              ✅              |
-| PHP                |              ✅              |              ✅              |
-| Swift              |              ✅              |              ✅              |
-| Kotlin             | ⚠ Java is Kotlin-compatible | ⚠ Java is Kotlin-compatible |
-| Terraform provider |              ✅              |              ✅              |
-| Ruby               |              ✅              |              ❌              |
-| Unity              |              ✅              |              ❌              |
-| Postman Collection |              ✅              |              ❌              |
+<Table 
+  data={[
+    { language: "Go", speakeasy: "✅", liblab: "✅" },
+    { language: "Python", speakeasy: "✅", liblab: "✅" },
+    { language: "Typescript", speakeasy: "✅", liblab: "✅" },
+    { language: "Java", speakeasy: "✅", liblab: "✅" },
+    { language: "C#", speakeasy: "✅", liblab: "✅" },
+    { language: "PHP", speakeasy: "✅", liblab: "✅" },
+    { language: "Swift", speakeasy: "✅", liblab: "✅" },
+    { language: "Kotlin", speakeasy: "⚠ Java is Kotlin-compatible", liblab: "⚠ Java is Kotlin-compatible" },
+    { language: "Terraform provider", speakeasy: "✅", liblab: "✅" },
+    { language: "Ruby", speakeasy: "✅", liblab: "❌" },
+    { language: "Unity", speakeasy: "✅", liblab: "❌" },
+    { language: "Postman Collection", speakeasy: "✅", liblab: "❌" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "liblab", header: "liblab" }
+  ]}
+/>
 
 Everyone has that one odd language that is critical to their business. In our first year, we've made a dent, but we've got further to go. See a language that you require that we don't support? [Join our Slack community](https://join.slack.com/t/speakeasy-dev/shared_invite/zt-1cwb3flxz-lS5SyZxAsF_3NOq5xc8Cjw) to let us know.
 
@@ -56,19 +63,26 @@ Everyone has that one odd language that is critical to their business. In our fi
 
 This table shows the current feature support for Speakeasy and liblab as of June 2024. Refer to the official documentation for the most recent updates.
 
-| Feature                     | Speakeasy |         liblab         |
-| --------------------------- | :-------: | :--------------------: |
-| Union types                 |    ✅     |           ✅           |
-| Discriminated union types   |    ✅     |           ✅           |
-| Server-sent events          |    ✅     |           ❌           |
-| Retries                     |    ✅     | ⚠ Global retries only |
-| Pagination                  |    ✅     |           ❌           |
-| Async support               |    ✅     |           ✅           |
-| Streaming uploads           |    ✅     |           ❌           |
-| OAuth 2.0                   |    ✅     |           ❌           |
-| Custom SDK naming           |    ✅     |           ✅           |
-| Customize SDK structure     |    ✅     |           ❌           |
-| Custom dependency injection |    ✅     |           ✅           |
+<Table 
+  data={[
+    { feature: "Union types", speakeasy: "✅", liblab: "✅" },
+    { feature: "Discriminated union types", speakeasy: "✅", liblab: "✅" },
+    { feature: "Server-sent events", speakeasy: "✅", liblab: "❌" },
+    { feature: "Retries", speakeasy: "✅", liblab: "⚠ Global retries only" },
+    { feature: "Pagination", speakeasy: "✅", liblab: "❌" },
+    { feature: "Async support", speakeasy: "✅", liblab: "✅" },
+    { feature: "Streaming uploads", speakeasy: "✅", liblab: "❌" },
+    { feature: "OAuth 2.0", speakeasy: "✅", liblab: "❌" },
+    { feature: "Custom SDK naming", speakeasy: "✅", liblab: "✅" },
+    { feature: "Customize SDK structure", speakeasy: "✅", liblab: "❌" },
+    { feature: "Custom dependency injection", speakeasy: "✅", liblab: "✅" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "liblab", header: "liblab" }
+  ]}
+/>
 
 Speakeasy creates SDKs that handle advanced authentication. For example, Speakeasy can generate SDKs that handle OAuth 2.0 with client credentials - handling the token lifecycle, retries, and error handling for you.
 
@@ -82,28 +96,42 @@ Speakeasy is designed to be used locally, with a dependency-free CLI that allows
 
 For local use, liblab provides an NPM package with a dependency tree of 749 modules. Installing and updating the liblab CLI is slower than Speakeasy's single binary, the CLI is less feature-rich, and it depends on Node.js and NPM.
 
-| Feature               | Speakeasy | liblab |
-| --------------------- | :-------: | :----: |
-| GitHub CI/CD          |    ✅     |   ✅   |
-| CLI                   |    ✅     |   ✅   |
-| Web interface         |    ✅     |   ✅   |
-| OpenAPI Overlays      |    ✅     |   ❌   |
-| Package publishing    |    ✅     |   ✅   |
-| Product documentation |    ✅     |   ✅   |
-| OpenAPI linting       |    ✅     |   ✅   |
-| Change detection      |    ✅     |   ❌   |
+<Table 
+  data={[
+    { feature: "GitHub CI/CD", speakeasy: "✅", liblab: "✅" },
+    { feature: "CLI", speakeasy: "✅", liblab: "✅" },
+    { feature: "Web interface", speakeasy: "✅", liblab: "✅" },
+    { feature: "OpenAPI Overlays", speakeasy: "✅", liblab: "❌" },
+    { feature: "Package publishing", speakeasy: "✅", liblab: "✅" },
+    { feature: "Product documentation", speakeasy: "✅", liblab: "✅" },
+    { feature: "OpenAPI linting", speakeasy: "✅", liblab: "✅" },
+    { feature: "Change detection", speakeasy: "✅", liblab: "❌" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "liblab", header: "liblab" }
+  ]}
+/>
 
 ### Enterprise support
 
 Both Speakeasy and liblab offer support for Enterprise customers. This includes features like concierge onboarding, private Slack channels, and enterprise SLAs.
 
-| Feature               | Speakeasy | liblab |
-| --------------------- | :-------: | :----: |
-| Concierge onboarding  |    ✅     |   ✅   |
-| Private Slack channel |    ✅     |   ✅   |
-| Enterprise SLAs       |    ✅     |   ✅   |
-| User issues triage    |    ✅     |   ✅   |
-| SOC 2 compliance      |    ❌     |   ✅   |
+<Table 
+  data={[
+    { feature: "Concierge onboarding", speakeasy: "✅", liblab: "✅" },
+    { feature: "Private Slack channel", speakeasy: "✅", liblab: "✅" },
+    { feature: "Enterprise SLAs", speakeasy: "✅", liblab: "✅" },
+    { feature: "User issues triage", speakeasy: "✅", liblab: "✅" },
+    { feature: "SOC 2 compliance", speakeasy: "❌", liblab: "✅" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "liblab", header: "liblab" }
+  ]}
+/>
 
 ### Pricing
 
@@ -113,17 +141,24 @@ liblab's free tier is limited to open-source projects, with paid plans starting 
 
 Both services offer custom enterprise plans.
 
-| Plan                | Speakeasy                              | liblab                    |
-| ------------------- | -------------------------------------- | ------------------------- |
-| Free                | 1 free Published SDK                   | Open-source projects only |
-| Startup/Starter     | 1 free + $250/mo/SDK; max 50 endpoints | $120/mo                   |
-| Enterprise/Advanced | Custom                                 | Custom                    |
+<Table 
+  data={[
+    { plan: "Free", speakeasy: "1 free Published SDK", liblab: "Open-source projects only" },
+    { plan: "Startup/Starter", speakeasy: "1 free + $250/mo/SDK; max 50 endpoints", liblab: "$120/mo" },
+    { plan: "Enterprise/Advanced", speakeasy: "Custom", liblab: "Custom" }
+  ]}
+  columns={[
+    { key: "plan", header: "Plan" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "liblab", header: "liblab" }
+  ]}
+/>
 
 ## Speakeasy vs liblab technical walkthrough
 
 To start our technical comparison, let's create an SDK using Speakeasy and liblab. We'll create an OpenAPI document for a fictional bookstore API, that covers a broad range of OpenAPI functionality.
 
-<ScrollyCoding className="ch-scrollycoding-full-height" fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -257,7 +292,7 @@ The remainder of the OpenAPI document defines the components used in the operati
 !from ./assets/openapi.yaml.txt 374:639
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ### Installing Speakeasy CLI
 
