--- a/blog/speakeasy-vs-openapi-generator/index.mdx
+++ b/blog/speakeasy-vs-openapi-generator/index.mdx
@@ -182,18 +182,24 @@ run();
 
 ## Generator Comparison Table
 
-| Feature | Speakeasy | `openapi-codegen` |
-|---------|-----------|---------------------------|
-| Type-safety | ✅ Using Zod | ❌ |
-| Union types/polymorphism | ✅ | ✅ Without discriminator |
-| Documentation generation | ✅ Full docs & examples | ❌ |
-| OAuth 2.0 | ✅ | ❌ |
-| Webhooks | ✅ | ❌ |
-| Retries | ✅ | ❌ |
-| Pagination | ✅ | ❌ |
-| Package publishing | ✅ | ❌ |
-| CI/CD integration | ✅ GitHub Actions | ❌ |
-
+<Table 
+  data={[
+    { feature: "Type-safety", speakeasy: "✅ Using Zod", openapiCodegen: "❌" },
+    { feature: "Union types/polymorphism", speakeasy: "✅", openapiCodegen: "✅ Without discriminator" },
+    { feature: "Documentation generation", speakeasy: "✅ Full docs & examples", openapiCodegen: "❌" },
+    { feature: "OAuth 2.0", speakeasy: "✅", openapiCodegen: "❌" },
+    { feature: "Webhooks", speakeasy: "✅", openapiCodegen: "❌" },
+    { feature: "Retries", speakeasy: "✅", openapiCodegen: "❌" },
+    { feature: "Pagination", speakeasy: "✅", openapiCodegen: "❌" },
+    { feature: "Package publishing", speakeasy: "✅", openapiCodegen: "❌" },
+    { feature: "CI/CD integration", speakeasy: "✅ GitHub Actions", openapiCodegen: "❌" },   
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "openapiCodegen", header: "`openapi-codegen`" }
+  ]}
+/>
 
 ## Summary
 
