--- a/blog/tags-best-practices-in-openapi/index.mdx
+++ b/blog/tags-best-practices-in-openapi/index.mdx
@@ -60,7 +60,7 @@ To demonstrate using tags, let's make a simple schema for a jazz club API with j
 - `/stop` — stops music.
 - `/order` — orders a drink.
 
-<ScrollyCoding className="ch-scrollycoding-full-height" fullHeight>
+<Spotlight>
 
 ### !!steps API Information
 
@@ -195,7 +195,7 @@ paths:
           description: No Content response.
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ## The Full Schema Example
 
