--- a/blog/vitest-vs-jest/index.mdx
+++ b/blog/vitest-vs-jest/index.mdx
@@ -30,26 +30,31 @@ This post compares [Jest](https://jestjs.io/) and [Vitest](https://vitest.dev/),
 
 We think Vitest is best, unless you're using a framework or library that has better Jest support, such as React Native. The table below compares some features of the two testing frameworks. **If you're starting a new project, use Vitest**. With ES module, TypeScript, JSX, and PostCSS support out of the box, Vitest is the right choice for almost every modern JavaScript app. 
 
-|                                  | Jest | Vitest |
-|----------------------------------|------|--------|
-| Battle tested by large companies | ✅    | ❌      |
-| ES module support                | ✅\*  | ✅      |
-| TypeScript support               | ✅+   | ✅      |
-| Browser UI                       | ❌    | ✅\*    |
-| Type testing                     | ❌    | ✅\*    |
-| Benchmarking                     | ❌    | ✅      |
-| In-source testing                | ❌    | ✅      |
-| Browser mode                     | ❌    | ✅\*    |
-| Multi-browser support            | ❌    | ✅      |
-| Enhanced error matching          | ❌    | ✅      |
-| Project-level configuration      | ✅    | ✅\*\*  |
-| Snapshot testing                 | ✅    | ✅      |
-| Interactive snapshot testing     | ✅    | ❌      |
-| Code coverage                    | ✅    | ✅      |
-| Concurrent testing               | ✅\*  | ✅      |
-| Sharding support                 | ✅    | ✅      |
-| Multi-project runner             | ✅    | ❌      |
-| Mocking                          | ✅    | ✅      |
+<Table 
+  data={[
+    { feature: "Battle tested by large companies", jest: "✅", vitest: "❌" },
+    { feature: "ES module support", jest: "✅*", vitest: "✅" },
+    { feature: "TypeScript support", jest: "✅+", vitest: "✅" },
+    { feature: "Browser UI", jest: "❌", vitest: "✅*" },
+    { feature: "Type testing", jest: "❌", vitest: "✅*" },
+    { feature: "Benchmarking", jest: "❌", vitest: "✅" },
+    { feature: "In-source testing", jest: "❌", vitest: "✅" },
+    { feature: "Browser mode", jest: "❌", vitest: "✅*" },
+    { feature: "Multi-browser support", jest: "❌", vitest: "✅" },
+    { feature: "Enhanced error matching", jest: "❌", vitest: "✅" },
+    { feature: "Project-level configuration", jest: "✅", vitest: "✅**" },
+    { feature: "Snapshot testing", jest: "✅", vitest: "✅" },
+    { feature: "Interactive snapshot testing", jest: "✅", vitest: "❌" },
+    { feature: "Code coverage", jest: "✅", vitest: "✅" },
+    { feature: "Concurrent testing", jest: "✅*", vitest: "✅" },
+    { feature: "Sharding support", jest: "✅", vitest: "✅" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "jest", header: "Jest" },
+    { key: "vitest", header: "Vitest" }
+  ]}
+/>
 
 \* Experimental <br/>
 \+ Using Babel <br/>
@@ -374,10 +379,40 @@ While [npm trends](https://npmtrends.com/jest-vs-vitest) show that Jest is downl
 
 ![npm trends graph: Jest vs. Vitest - number of npm downloads over time](./assets/npm-trends-jest-vs-vitest.png)
 
-|        | GitHub<br/>stars | GitHub<br/>issues | Latest<br/>version | Creation<br/>date | Unpacked<br/>size |
-|--------|------------------|-------------------|--------------------|-------------------|-------------------|
-| Jest   | 44 456           | 271               | 29.7.0             | 2011              | 5.01 Mb           |
-| Vitest | 13 705           | 281               | 3.0.5              | 2021              | 1.62 Mb           |
+<Table 
+  data={[
+    { 
+      metric: "",
+      jest: "44 456",
+      vitest: "13 705"
+    },
+    { 
+      metric: "GitHub issues",
+      jest: "271",
+      vitest: "281"
+    },
+    { 
+      metric: "Latest version",
+      jest: "29.7.0",
+      vitest: "3.0.5"
+    },
+    { 
+      metric: "Creation date",
+      jest: "2011",
+      vitest: "2021"
+    },
+    { 
+      metric: "Unpacked size",
+      jest: "5.01 Mb",
+      vitest: "1.62 Mb"
+    }
+  ]}
+  columns={[
+    { key: "metric", header: "" },
+    { key: "jest", header: "Jest" },
+    { key: "vitest", header: "Vitest" }
+  ]}
+/>
 
 According to the [State of JS 2023 survey](https://2023.stateofjs.com/en-US/libraries/), Vitest has seen a rapid rise in popularity and positive opinions between 2021 and 2023. By contrast, Jest experienced a rapid rise in popularity and positive opinions between 2016 and 2020, but this momentum slowed between 2021 and 2023, with opinions becoming more mixed. This shift may be due to developers adopting Vitest, which solves one of the main pain points of Jest: ES Module support.
 
