--- a/changelog/changelog-2023-11-15/index.mdx
+++ b/changelog/changelog-2023-11-15/index.mdx
@@ -92,7 +92,7 @@ Time to celebrate 🎉 You've just created a new OpenAPI document that you can u
 
 At Speakeasy, we believe that automated doesn't mean no input. Certain aspects of SDK design need to be in the hands of the API builders. That's why we've built a platform which is flexible enough to let developers craft the devex for their users. To that end, we've released customizable imports. You can now configure the structure of the `import` paths in your SDK, and how they are referenced by your users. As an example, for Typescript:
 
-<ScrollyCoding>
+<Spotlight>
 
 ## !!steps
 
@@ -127,9 +127,9 @@ import { User } from '@speakeasy/bar/dist/models/components/user'
 import { GetDrinkRequest } from '@speakeasy/bar/dist/models/operations/user'
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
-<ScrollyCoding>
+<Spotlight>
 ## !!steps
 
 As an API producer, you can now configure your SDK to generate models into a single directory and import them from there. For Typescript, this would result in:
@@ -160,7 +160,7 @@ With an import structure that is flat and supports a global path as follows:
 import { User, GetDrinkRequest, SDK } from '@speakeasy/bar'
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 More documentation on how to configure this in your SDK's `gen.yaml` file can be found [here](/docs/customize-sdks/imports).
 
