--- a/changelog/changelog-2025-01-15/index.mdx
+++ b/changelog/changelog-2025-01-15/index.mdx
@@ -47,11 +47,18 @@ class Acme extends ClientSDK {
 
 With **Custom Code Regions**, **Hooks**, and **Overlays**, Speakeasy offers three distinct ways to customize your SDKs:  
 
-| **Customization Tool**    | **Purpose**                                                                 | **Key Use Case**                                         |
-|----------------------------|-----------------------------------------------------------------------------|---------------------------------------------------------|
-| **Overlays**               | Modify the OpenAPI spec for structural or schema-related changes.           | Adding paths, tweaking parameters, or updating models.  |
-| **Hooks**                  | Intercept and modify SDK generation programmatically during the build.      | Dynamic updates, injecting logic at specific stages.    |
-| **Custom Code Regions**    | Insert custom logic directly into the generated SDK code at runtime.        | Adding helper methods, third-party integrations, or SDK-specific tweaks. |
+<Table 
+  data={[
+    { customizationTool: "Overlays", purpose: "Modify the OpenAPI spec for structural or schema-related changes.", keyUseCase: "Adding paths, tweaking parameters, or updating models." },
+    { customizationTool: "Hooks", purpose: "Intercept and modify SDK generation programmatically during the build.", keyUseCase: "Dynamic updates, injecting logic at specific stages." },
+    { customizationTool: "Custom Code Regions", purpose: "Insert custom logic directly into the generated SDK code at runtime.", keyUseCase: "Adding helper methods, third-party integrations, or SDK-specific tweaks." }
+  ]}  
+  columns={[
+    { key: "customizationTool", header: "Customization Tool" },
+    { key: "purpose", header: "Purpose" },
+    { key: "keyUseCase", header: "Key Use Case" }
+  ]}
+/>
 
 Each tool offers unique capabilities, and together, they provide unparalleled flexibility for tailoring your SDKs to your needs.  
 
