--- a/docs/create-client-sdks.mdx
+++ b/docs/create-client-sdks.mdx
@@ -86,11 +86,17 @@ After authenticating you will be prompted to input an OpenAPI document:
 
 Provide either a link to a remote hosted OpenAPI document, or a relative path to a local file in one of the supported formats:
 
-| Spec Format         | Supported |
-| ------------------- | :-------: |
-| OpenAPI 3.0         |    ✅     |
-| OpenAPI 3.1         |    ✅     |
-| JSON Schema         |    ✅     |
+<Table 
+  data={[
+    { specFormat: "OpenAPI 3.0", supported: "✅" },
+    { specFormat: "OpenAPI 3.1", supported: "✅" },
+    { specFormat: "JSON Schema", supported: "✅" }
+  ]}
+  columns={[
+    { key: "specFormat", header: "Spec Format" },
+    { key: "supported", header: "Supported" }
+  ]}
+/>
 
 <Callout title="Tip" >
   If your spec is in an unsupported format, use one of the following tools to convert it:
