--- a/docs/create-terraform.mdx
+++ b/docs/create-terraform.mdx
@@ -23,12 +23,18 @@ To create a Terraform provider with Speakeasy, you need:
 - The [Speakeasy CLI](/docs/speakeasy-reference/cli/getting-started)
 - An API spec in a supported format:
 
-| Spec format        | Supported |
-| ------------------ | :-------: |
-| OpenAPI 3.0        |    ✅     |
-| OpenAPI 3.1        |    ✅     |
-| JSON Schema        |    ✅     |
-| Postman Collection |    🔜     |
+<Table 
+  data={[
+    { format: "OpenAPI 3.0", supported: "✅" },
+    { format: "OpenAPI 3.1", supported: "✅" },
+    { format: "JSON Schema", supported: "✅" },
+    { format: "Postman Collection", supported: "🔜" }
+  ]}
+  columns={[
+    { key: "format", header: "Spec format" },
+    { key: "supported", header: "Supported" }
+  ]}
+/>
 
 <Callout title="Tip" >
 If you are using an unsupported spec format, use these tools to help you convert to a supported format:
