--- a/docs/customize-testing/openapi-in-tests.mdx
+++ b/docs/customize-testing/openapi-in-tests.mdx
@@ -15,7 +15,7 @@ By default, a single test will be created based on any `example` properties foun
 
 In this example, a single test is created for the `updatePet` operation with `id`, `name`, and `photoUrls` data:
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps `paths[/pet].put.operationId`
 
@@ -131,7 +131,7 @@ The required `Pet` object `photoUrls` property does not include an `example` pro
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 This definition creates a test with `Pet` object request body and response data:
 
@@ -148,7 +148,7 @@ Define multiple tests for an operation using the `examples` property, which in t
 
 In this example, multiple tests (`fido` and `rover`) are created for the `addPet` operation:
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps `paths[/pet].post.operationId`
 
@@ -250,7 +250,7 @@ An `addPet` operation `rover` test is created with example request body and resp
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 #### Ignoring Data
 
