--- a/docs/customize/authentication/security-callbacks.mdx
+++ b/docs/customize/authentication/security-callbacks.mdx
@@ -12,9 +12,22 @@ Instead of providing credentials once during SDK instantiation, you can pass a c
 
 ## Language support
 
-| TypeScript | Python | Go  | C#  | Java | PHP | Swift | Ruby |
-| ---------- | ------ | --- | --- | ---- | --- | ----- | ---- |
-| ✅         | ✅     | ✅  | ✅️ | ✅   | 🏗️  | 🏗️    | 🏗️   |
+<Table 
+  data={[
+    { language: "TypeScript", status: "✅" },
+    { language: "Python", status: "✅" },
+    { language: "Go", status: "✅" },
+    { language: "C#", status: "✅" },
+    { language: "Java", status: "✅" },
+    { language: "PHP", status: "🏗️" },
+    { language: "Swift", status: "🏗️" },
+    { language: "Ruby", status: "🏗️" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "status", header: "Status" }
+  ]}
+/>
 
 ## Example: Bearer authentication
 
