--- a/docs/customize/structure/imports.mdx
+++ b/docs/customize/structure/imports.mdx
@@ -19,7 +19,7 @@ By default, Speakeasy uses an OpenAPI-based naming scheme for the namespaces mod
   languages will be added soon.
 </Callout>
 
-<ScrollyCoding>
+<Spotlight>
 
 #### !!steps `Components`
 
@@ -66,7 +66,7 @@ Models that are used in error status codes are placed in the `models/errors` dir
 # !focus(13:16)
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 <Callout title="Warning" type="warning">
   The default names for the model directories are consistent across most
@@ -76,7 +76,7 @@ Models that are used in error status codes are placed in the `models/errors` dir
 
 ## Customize import paths
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps `imports`
 
@@ -130,7 +130,7 @@ The `paths` section contains a map of bucket names to paths relative to the root
 # !focus(8:13)
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 You can customize these paths to any path that exists relative to the root of the SDK.
 
