--- a/docs/languages/csharp/oss-comparison-csharp.mdx
+++ b/docs/languages/csharp/oss-comparison-csharp.mdx
@@ -11,19 +11,26 @@ Speakeasy produces idiomatic SDKs in various programming languages, including C#
 
 In this article, we'll compare creating a C# SDK using Speakeasy to creating one using the open-source OpenAPI Generator. The table below is a summary of the comparison:
 
-| Feature/Aspect | Speakeasy | OpenAPI Generator |
-|---------------|-----------|-------------------|
-| **Framework Support** | ⚠️ Limited to .NET 5+ | ✅ Wider range (.NET Framework 4.7, .NET Standard 1.3-2.1, .NET 6+) |
-| **.NET Features** | ✅ Full async/await support, interfaces for DI | ⚠️ Basic async/await support |
-| **Dependencies** | ✅ Minimal - Only Newtonsoft.Json and NodaTime | ❌ Multiple dependencies including JsonSubTypes, Newtonsoft.Json, RestSharp, Polly, System.Web |
-| **Code Style** | ✅ Modern, idiomatic C# with object initializers | ⚠️ Traditional C# with constructors and property setters |
-| **HTTP client** | ✅ Uses built-in System.Net.Http | ❌ Relies on third-party RestSharp library |
-| **Request retry** | ✅ Built-in configurable retry support with multiple strategies | ❌ No built-in retry support |
-| **Model implementation** | ✅ Modern, concise approach using nullable types and attributes | ⚠️ Traditional approach with more verbose implementations |
-| **Serialization** | ✅ Clean approach using JsonProperty attributes directly | ⚠️ More complex approach using DataContract and DataMember attributes |
-| **Documentation** | ✅ Comprehensive documentation with detailed examples and error handling | ⚠️ Basic documentation focusing on setup and API routes |
-| **Error handling** | ⚠️ Generic exceptions with stack traces | ✅ More descriptive custom exceptions |
-| **Customization** | ✅ Supports hooks and custom configurations | ❌ Limited customization options |
+<Table 
+  data={[
+    { feature: "Framework Support", speakeasy: "⚠️ Limited to .NET 5+", openapiGenerator: "✅ Wider range (.NET Framework 4.7, .NET Standard 1.3-2.1, .NET 6+)" },
+    { feature: ".NET Features", speakeasy: "✅ Full async/await support, interfaces for DI", openapiGenerator: "⚠️ Basic async/await support" },
+    { feature: "Dependencies", speakeasy: "✅ Minimal - Only Newtonsoft.Json and NodaTime", openapiGenerator: "❌ Multiple dependencies including JsonSubTypes, Newtonsoft.Json, RestSharp, Polly, System.Web" },   
+    { feature: "Code Style", speakeasy: "✅ Modern, idiomatic C# with object initializers", openapiGenerator: "⚠️ Traditional C# with constructors and property setters" },
+    { feature: "HTTP client", speakeasy: "✅ Uses built-in System.Net.Http", openapiGenerator: "❌ Relies on third-party RestSharp library" },
+    { feature: "Request retry", speakeasy: "✅ Built-in configurable retry support with multiple strategies", openapiGenerator: "❌ No built-in retry support" },
+    { feature: "Model implementation", speakeasy: "✅ Modern, concise approach using nullable types and attributes", openapiGenerator: "⚠️ Traditional approach with more verbose implementations" },   
+    { feature: "Serialization", speakeasy: "✅ Clean approach using JsonProperty attributes directly", openapiGenerator: "⚠️ More complex approach using DataContract and DataMember attributes" },
+    { feature: "Documentation", speakeasy: "✅ Comprehensive documentation with detailed examples and error handling", openapiGenerator: "⚠️ Basic documentation focusing on setup and API routes" },
+    { feature: "Error handling", speakeasy: "⚠️ Generic exceptions with stack traces", openapiGenerator: "✅ More descriptive custom exceptions" },
+    { feature: "Customization", speakeasy: "✅ Supports hooks and custom configurations", openapiGenerator: "❌ Limited customization options" },       
+  ]}
+  columns={[
+    { key: "feature", header: "Feature/Aspect" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "openapiGenerator", header: "OpenAPI Generator" }
+  ]}
+/>
 
 You can explore the Speakeasy [C# SDK documentation](/docs/languages/csharp/methodology-csharp) for more information. 
 
