--- a/docs/languages/java/oss-comparison-java.mdx
+++ b/docs/languages/java/oss-comparison-java.mdx
@@ -13,20 +13,28 @@ In this article, we'll compare creating a Java SDK using Speakeasy to creating o
 
 Below is a table that summarizes the key differences between the two SDKs:
 
-| Feature | Speakeasy | OpenAPI Generator |
-|---------|-----------|------------------|
-| Minimum version | Java 11+ (modern features) | Java 8+ (legacy support) |
-| Dependencies | ✅ Minimal dependencies | ⚠️ Many third-party dependencies |
-| HTTP client | Native Java 11 `java.net.http` | ⚠️ Third-party OkHttp dependency |
-| JSON processing | ✅ [Jackson](https://github.com/FasterXML/jackson) (enterprise-ready, faster) | ⚠️ [Gson](https://github.com/google/gson) (simpler, limited config) |
-| Builder pattern | ✅ Modern builder pattern | ❌ Traditional setters only |
-| Null safety | ✅ Proactive with `Optional` support | ❌ Basic retrospective validation |
-| Retry support | ✅ Built-in configurable retries | ❌ Not supported |
-| Documentation | ✅ Comprehensive, with examples | ⚠️ Basic documentation |
-| Collections | ✅ Modern list implementations | ⚠️ Mix of arrays and lists |
-| Field access | ✅ Encapsulated (getter methods) | ❌ Direct field access |
-| OAuth support | ✅ Built-in OAuth 2.0 | ⚠️ Requires additional library |
-| Pagination | ✅ Supported | ❌ Not supported |
+<Table 
+  data={[
+    { name: "Minimum version", support: "Java 11+ (modern features)", docs: "Java 8+ (legacy support)", notes: "" },
+    { name: "Dependencies", support: "✅ Minimal dependencies", docs: "⚠️ Many third-party dependencies", notes: "" },
+    { name: "HTTP client", support: "Native Java 11 `java.net.http`", docs: "⚠️ Third-party OkHttp dependency", notes: "" },
+    { name: "JSON processing", support: "✅ [Jackson](https://github.com/FasterXML/jackson) (enterprise-ready, faster)", docs: "⚠️ [Gson](https://github.com/google/gson) (simpler, limited config)", notes: "" },
+    { name: "Builder pattern", support: "✅ Modern builder pattern", docs: "❌ Traditional setters only", notes: "" },
+    { name: "Null safety", support: "✅ Proactive with `Optional` support", docs: "❌ Basic retrospective validation", notes: "" },
+    { name: "Retry support", support: "✅ Built-in configurable retries", docs: "❌ Not supported", notes: "" },
+    { name: "Documentation", support: "✅ Comprehensive, with examples", docs: "⚠️ Basic documentation", notes: "" },
+    { name: "Collections", support: "✅ Modern list implementations", docs: "⚠️ Mix of arrays and lists", notes: "" },
+    { name: "Field access", support: "✅ Encapsulated (getter methods)", docs: "❌ Direct field access", notes: "" },
+    { name: "OAuth support", support: "✅ Built-in OAuth 2.0", docs: "⚠️ Requires additional library", notes: "" },
+    { name: "Pagination", support: "✅ Supported", docs: "❌ Not supported", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Feature" },
+    { key: "support", header: "Speakeasy" },
+    { key: "docs", header: "OpenAPI Generator" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 Read more about these headline features of Speakeasy-created Java SDKs in the [March 2024 release notes](/post/release-java-ga), or consult the [Speakeasy Java SDK documentation](/docs/languages/java/methodology-java).
 
