--- a/docs/languages/python/oss-comparison-python.mdx
+++ b/docs/languages/python/oss-comparison-python.mdx
@@ -21,19 +21,27 @@ In this post, we'll focus on Python, but Speakeasy can also create SDKs in Go, T
 
 Here's a summary of the major differences between a Python SDK created using Speakeasy, compared to an SDK created by the OpenAPI Generator. Unless support for Python 3.7 is critically important to you, we recommend using Speakeasy for your Python SDKs.
 
-| Feature/Aspect | Speakeasy | OpenAPI Generator |
-|---------------|-----------|-------------------|
-| Python Version Support | ✅ Python 3.8+ | ⚠️ Python 3.7+ (outdated) |
-| Type Safety | ✅ Pydantic + TypedDict + Advanced Enums | ⚠️ Basic Pydantic only |
-| Advanced Data Types | ✅ Supports null, any, union | ⚠️ Limited type support |
-| Async Support | ✅ (HTTPX) | ❌ Not supported |
-| Documentation Quality | ✅ Rich usage examples with working code | ⚠️ Incomplete examples |
-| Retries | ✅ Built-in configurable retries | ❌ No retry support |
-| Pagination | ✅ Supported | ❌ Not supported |
-| Security Features | ✅ Full OAuth + OpenID support | ⚠️ Basic security only |
-| Multiple Servers | ✅ Supported | ❌ Not supported |
-| XML Support | ❌ Not supported | ❌ Not supported |
-| CI/CD Integration | ✅ Native GitHub Actions | ⚠️ Manual setup required |
+<Table 
+  data={[
+    { name: "Python Version Support", support: "✅ Python 3.8+", docs: "⚠️ Python 3.7+ (outdated)", notes: "" },
+    { name: "Type Safety", support: "✅ Pydantic + TypedDict + Advanced Enums", docs: "⚠️ Basic Pydantic only", notes: "" },
+    { name: "Advanced Data Types", support: "✅ Supports null, any, union", docs: "⚠️ Limited type support", notes: "" },
+    { name: "Async Support", support: "✅ (HTTPX)", docs: "❌ Not supported", notes: "" },
+    { name: "Documentation Quality", support: "✅ Rich usage examples with working code", docs: "⚠️ Incomplete examples", notes: "" },
+    { name: "Retries", support: "✅ Built-in configurable retries", docs: "❌ No retry support", notes: "" },
+    { name: "Pagination", support: "✅ Supported", docs: "❌ Not supported", notes: "" },
+    { name: "Security Features", support: "✅ Full OAuth + OpenID support", docs: "⚠️ Basic security only", notes: "" },
+    { name: "Multiple Servers", support: "✅ Supported", docs: "❌ Not supported", notes: "" },
+    { name: "XML Support", support: "❌ Not supported", docs: "❌ Not supported", notes: "" },
+    { name: "CI/CD Integration", support: "✅ Native GitHub Actions", docs: "⚠️ Manual setup required", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Feature/Aspect" },
+    { key: "support", header: "Speakeasy" },
+    { key: "docs", header: "OpenAPI Generator" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 For the full technical walkthrough, read on!
 
@@ -127,11 +135,19 @@ docker run --rm -v "./app:/local" openapitools/openapi-generator-cli generate -i
 
 This command gives one warning that looks like it could cause errors, `o.o.codegen.utils.ModelUtils - Failed to get the schema name: null`, but OpenAPI Generator successfully created three folders:
 
-| Folder         | Content                                                                                                                                                                                                |
-|----------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| `docs`         | Documentation in `.md` files for each object.                                                                                                                                                          |
-| `petstore_sdk` | Python code to call the API on the server, containing a `models` folder for each object in the schema. If you don't pass parameters to the build command, this folder will be called `openapi_client`. |
-| `test`         | Unit tests for all objects and operations. These tests are partially or entirely stubs and require you to manually add specific pet instances or operations and the logic to check them.                       |
+<Table 
+  data={[
+    { name: "docs", support: "Documentation in `.md` files for each object", docs: "", notes: "" },
+    { name: "petstore_sdk", support: "Python code to call the API on the server, containing a `models` folder for each object in the schema. If you don't pass parameters to the build command, this folder will be called `openapi_client`.", docs: "", notes: "" },
+    { name: "test", support: "Unit tests for all objects and operations. These tests are partially or entirely stubs and require you to manually add specific pet instances or operations and the logic to check them.", docs: "", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Folder" },
+    { key: "support", header: "Content" },
+    { key: "docs", header: "" },
+    { key: "notes", header: "" }
+  ]}
+/>
 
 The generator warned us in the terminal that `Generation using 3.1.0 specs is in development and is not officially supported yet.` The OpenAPI Generator [roadmap](https://openapi-generator.tech/docs/roadmap) hasn't been updated in almost two years.
 
@@ -145,10 +161,18 @@ docker run --rm -v "./app:/app" seimage speakeasy generate sdk --schema /app/pet
 
 Speakeasy creates the following folders.
 
-| Folder | Content                                                                                                |
-|--------|--------------------------------------------------------------------------------------------------------|
-| `docs` | Documentation in `.md` files for each component and operation.                                         |
-| `src`  | Python code to call the API on the server, containing a `models` folder for each object in the schema. |
+<Table 
+  data={[
+    { name: "docs", support: "Documentation in `.md` files for each component and operation.", docs: "", notes: "" },
+    { name: "src", support: "Python code to call the API on the server, containing a `models` folder for each object in the schema.", docs: "", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Folder" },
+    { key: "support", header: "Content" },
+    { key: "docs", header: "" },
+    { key: "notes", header: "" }
+  ]}
+/>
 
 Unlike the OpenAPI Generator output, the Speakeasy output includes no tests.
 
@@ -165,10 +189,20 @@ cloc ./app/se/src/openapi
 
 Below are the results for each SDK.
 
-| Project           | Files | Blank | Comment | Code | Total lines | Total non-blank lines |
-|-------------------|-------|-------|---------|------|-------------|-----------------------|
-| OpenAPI Generator | 19    | 1115  | 2243    | 4479 | 7837        | 6722                  |
-| Speakeasy         | 69    | 1386  | 498     | 5161 | 7045        | 5659                  |
+<Table 
+  data={[
+    { name: "OpenAPI Generator", support: "19", docs: "1115", notes: "2243", total: "4479", nonBlank: "6722" },
+    { name: "Speakeasy", support: "69", docs: "1386", notes: "498", total: "5161", nonBlank: "5659" }
+  ]}
+  columns={[
+    { key: "name", header: "Project" },
+    { key: "support", header: "Files" },
+    { key: "docs", header: "Blank" },
+    { key: "notes", header: "Comment" },
+    { key: "total", header: "Total lines" },
+    { key: "nonBlank", header: "Total non-blank lines" }
+  ]}
+/>
 
 We see that the Speakeasy SDK has about the same number of lines of code and lines of comments as OpenAPI Generator, but OpenAPI Generator leaves more blank lines.
 
