--- a/docs/languages/typescript/feature-support.mdx
+++ b/docs/languages/typescript/feature-support.mdx
@@ -7,122 +7,209 @@ description: "An overview of TypeScript features supported by Speakeasy for SDK 
 
 ## Authentication
 
-|    Name    | Support |  Docs  |   Notes |
-|------------|:---:|------------------|---------|
-| HTTP Basic |   ✅    |     Docs         |         |
-| API Key <br /> (bearer, header, cookie, query) |   ✅    |     Docs         |         |
-| OAuth <br /> implicit flow |   ✅    |     Docs         |         |
-| OAuth <br /> refresh token flow |   ✅ using security callbacks    |     Docs         |         |
-| OAuth <br /> client credentials flow |   ✅ using hooks    |     Docs         |         |
-| mTLS |   🏗️ Partial    |     Docs         |         |
+<Table 
+  data={[
+    { name: "HTTP Basic", support: "✅", docs: "Docs", notes: "" },
+    { name: "API Key (bearer, header, cookie, query)", support: "✅", docs: "Docs", notes: "" },
+    { name: "OAuth implicit flow", support: "✅", docs: "Docs", notes: "" },
+    { name: "OAuth refresh token flow", support: "✅ using security callbacks", docs: "Docs", notes: "" },
+    { name: "OAuth client credentials flow", support: "✅ using hooks", docs: "Docs", notes: "" },
+    { name: "mTLS", support: "🏗️ Partial", docs: "Docs", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Server Configuration
 
-|       Name     | Support |  Docs  |   Notes |
-|----------------|:-------:|--------------|--------|
-| URL Templating |    ✅    | [defining `variables`](/docs/customize-sdks/servers#use-templated-urls) |  |
-| Multiple server|    ✅    | [`x-speakeasy-server-id` extension](/docs/customize-sdks/servers#declare-multiple-servers) |  |
-| Describe server <br /> outside your spec  | ✅    | [`serverUrl` config](/docs/customize-sdks/servers#declare-base-server-url) |  |
+<Table 
+  data={[
+    { name: "URL Templating", support: "✅", docs: "[defining `variables`](/docs/customize-sdks/servers#use-templated-urls)", notes: "" },
+    { name: "Multiple server", support: "✅", docs: "[`x-speakeasy-server-id` extension](/docs/customize-sdks/servers#declare-multiple-servers)", notes: "" },
+    { name: "Describe server outside your spec", support: "✅", docs: "[`serverUrl` config](/docs/customize-sdks/servers#declare-base-server-url)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Data Types
 
 ### Basic Types
 
-| Name | Support |  Docs  |   Notes |
-|------|:-------:|--------------|--------|
-| Numbers |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#numbers) | `float`, `double`, `int32`, `int64` |
-| Strings |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#strings) |  |
-| Date Time |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#date-time) |  |
-| Boolean |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#booleans) |  |
-| Binary |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#binary) |  |
-| Enums |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#enumerations) |  |
-| Arrays |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#arrays) |  |
-| Maps |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#maps) |  |
-| Objects |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#objects) |  |
-| Any |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#any) |  |
-| Null |    ✅    | [data-types](https://swagger.io/docs/specification/data-models/data-types/#nil) |  |
+<Table 
+  data={[
+    { name: "Numbers", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#numbers)", notes: "`float`, `double`, `int32`, `int64`" },
+    { name: "Strings", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#strings)", notes: "" },
+    { name: "Date Time", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#date-time)", notes: "" },
+    { name: "Boolean", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#booleans)", notes: "" },
+    { name: "Binary", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#binary)", notes: "" },
+    { name: "Enums", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#enumerations)", notes: "" },
+    { name: "Arrays", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#arrays)", notes: "" },
+    { name: "Maps", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#maps)", notes: "" },
+    { name: "Objects", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#objects)", notes: "" },
+    { name: "Any", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#any)", notes: "" },
+    { name: "Null", support: "✅", docs: "[data-types](https://swagger.io/docs/specification/data-models/data-types/#nil)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ### Polymorphism
 
-| Name | Support |  Docs  |   Notes |
-|------|:-------:|--------------|--------|
-| Union Types |    ✅    | [Using `oneOf`](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/#oneof) | `anyOf` is treated as `oneOf` and will create a union type object. |
-| Intersection Types |   🏗️ Partial     | [Using `allOf`](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/#allof) |  |
-
+<Table 
+  data={[
+    { name: "Union Types", support: "✅", docs: "[Using `oneOf`](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/#oneof)", notes: "`anyOf` is treated as `oneOf` and will create a union type object." },
+    { name: "Intersection Types", support: "🏗️ Partial", docs: "[Using `allOf`](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/#allof)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Methods
 
-|     Name    | Support |  Docs  |   Notes |
-|-------------|:-------:|--------------|--------|
-| Namespacing |    ✅    | [grouping operations](/docs/customize-sdks/namespaces) |  |
-| Multi-level Namespacing |    ✅    | [multi-level grouping](/docs/customize-sdks/namespaces#define-multi-level-namespaces) |  |
-| Custom naming|    ✅    | [`x-speakeasy-name-override` extension](/docs/customize-sdks/methods#change-method-names) |  |
-| Exclude Methods |    ✅    | [`x-speakeasy-ignore` extension](/docs/customize-sdks/methods#exclude-methods-from-sdk) |  |
-| Deprecation |    ✅    | the [`deprecate` flag](/docs/customize-sdks/methods#deprecate-methods) |  |
+<Table 
+  data={[
+    { name: "Namespacing", support: "✅", docs: "[grouping operations](/docs/customize-sdks/namespaces)", notes: "" },
+    { name: "Multi-level Namespacing", support: "✅", docs: "[multi-level grouping](/docs/customize-sdks/namespaces#define-multi-level-namespaces)", notes: "" },
+    { name: "Custom naming", support: "✅", docs: "[`x-speakeasy-name-override` extension](/docs/customize-sdks/methods#change-method-names)", notes: "" },
+    { name: "Exclude Methods", support: "✅", docs: "[`x-speakeasy-ignore` extension](/docs/customize-sdks/methods#exclude-methods-from-sdk)", notes: "" },
+    { name: "Deprecation", support: "✅", docs: "the [`deprecate` flag](/docs/customize-sdks/methods#deprecate-methods)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Parameters
 
-|     Name    | Support |  Docs  |   Notes |
-|-------------|:-------:|--------------|--------|
-| Pass Inline |    ✅    | [flattening parameters](/docs/customize-sdks/methods#configuring-method-signatures) |  |
-| Pass via Request Object |    ✅    | [request object](/docs/customize-sdks/methods#configuring-method-signatures) |  |
-| Exclude Parameters |    ✅    | [`x-speakeasy-ignore` extension](/docs/customize-sdks/methods#exclude-parameters-from-signatures) |  |
-| Deprecate Parameters |    ✅    | the [`deprecate` flag](/docs/customize-sdks/deprecations#deprecate-parameters) |  |
-| Define globally |    ✅    | [global parameters](/docs/customize-sdks/globals) |  |
+<Table 
+  data={[
+    { name: "Pass Inline", support: "✅", docs: "[flattening parameters](/docs/customize-sdks/methods#configuring-method-signatures)", notes: "" },
+    { name: "Pass via Request Object", support: "✅", docs: "[request object](/docs/customize-sdks/methods#configuring-method-signatures)", notes: "" },
+    { name: "Exclude Parameters", support: "✅", docs: "[`x-speakeasy-ignore` extension](/docs/customize-sdks/methods#exclude-parameters-from-signatures)", notes: "" },
+    { name: "Deprecate Parameters", support: "✅", docs: "the [`deprecate` flag](/docs/customize-sdks/deprecations#deprecate-parameters)", notes: "" },
+    { name: "Define globally", support: "✅", docs: "[global parameters](/docs/customize-sdks/globals)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ### Path Parameters Serialization
 
-|     Name    | Support |  Docs  |   Notes |
-|-------------|:-------:|--------------|--------|
-| Default <br /> `(style = simple, explode = false)` |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#path/) |  |
-| Basic types |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#path/) |  |
-| Simple objects |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#path/) |  |
-| `label` & `matrix` |    ❌    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#path/) |  |
+<Table 
+  data={[
+    { name: "Default (style = simple, explode = false)", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#path/)", notes: "" },
+    { name: "Basic types", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#path/)", notes: "" },
+    { name: "Simple objects", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#path/)", notes: "" },
+    { name: "`label` & `matrix`", support: "❌", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#path/)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ### Query Parameters Serialization
 
-|     Name    | Support |  Docs  |   Notes |
-|-------------|:-------:|--------------|--------|
-| `json` |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#query/) |  |
-| `form` |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#query/) |  |
-| `spaceDelimited` |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#query/) |  |
-| `pipeDelimited` |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#query/) |  |
-| `deepObject` |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#query/) |  |
-| Basic types |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#query/) |  |
-| Simple objects |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#query/) |  |
+<Table 
+  data={[
+    { name: "`json`", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#query/)", notes: "" },
+    { name: "`form`", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#query/)", notes: "" },
+    { name: "`spaceDelimited`", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#query/)", notes: "" },
+    { name: "`pipeDelimited`", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#query/)", notes: "" },
+    { name: "`deepObject`", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#query/)", notes: "" },
+    { name: "Basic types", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#query/)", notes: "" },
+    { name: "Simple objects", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#query/)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Requests
 
-|     Name    | Support |  Docs  |   Notes |
-|-------------|:-------:|--------------|--------|
-| Request headers |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#header/) |  |
-| Request retries |    ✅    | [retries](/docs/customize-sdks/retries) |  |
-| `json` |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) | Both `application/json` and `text/json`  |
-| form data |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) |  |
-| binary |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) |  |
-| raw byte |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) |  |
-| plain text |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) |  |
-| `x-www-form-urlencoded` |    🏗️ Partial    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) | Including encoding, but not non-object types |
-| XML |    ❌    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) |  |
-| Other media types |    ❌    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/) |  |
+<Table 
+  data={[
+    { name: "Request headers", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#header/)", notes: "" },
+    { name: "Request retries", support: "✅", docs: "[retries](/docs/customize-sdks/retries)", notes: "" },
+    { name: "`json`", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "Both `application/json` and `text/json`" },
+    { name: "form data", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "" },
+    { name: "binary", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "" },
+    { name: "raw byte", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "" },
+    { name: "plain text", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "" },
+    { name: "`x-www-form-urlencoded`", support: "🏗️ Partial", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "Including encoding, but not non-object types" },
+    { name: "XML", support: "❌", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "" },
+    { name: "Other media types", support: "❌", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#request-body/)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Responses
 
-|     Name    | Support |  Docs  |   Notes |
-|-------------|:-------:|--------------|--------|
-| Pagination |    ✅    | [`x-speakeasy-pagination` extension](/docs/customize-sdks/pagination) |  |
-| Custom Errors |    ✅    | [`x-speakeasy-errors` extension](/docs/customize-sdks/errors) |  |
-| json |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#response/) |  |
-| plain text |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#response/) |  |
-| binary |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#response/) |  |
-| raw byte |    ✅    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#response/) |  |
-| XML |    ❌    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#response/) |  |
-| Other media types   |    ❌    | [Swagger Docs](https://swagger.io/docs/specification/serialization/#response/) |  |
+<Table 
+  data={[
+    { name: "Pagination", support: "✅", docs: "[`x-speakeasy-pagination` extension](/docs/customize-sdks/pagination)", notes: "" },
+    { name: "Custom Errors", support: "✅", docs: "[`x-speakeasy-errors` extension](/docs/customize-sdks/errors)", notes: "" },
+    { name: "json", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#response/)", notes: "" },
+    { name: "plain text", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#response/)", notes: "" },
+    { name: "binary", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#response/)", notes: "" },
+    { name: "raw byte", support: "✅", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#response/)", notes: "" },
+    { name: "XML", support: "❌", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#response/)", notes: "" },
+    { name: "Other media types", support: "❌", docs: "[Swagger Docs](https://swagger.io/docs/specification/serialization/#response/)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Documentation
 
-|     Name    | Support |  Docs  |   Notes |
-|-------------|:-------:|--------------|--------|
-|  `README` generation |    ✅    | [README generation](/docs/customize-sdks/sdk-docs) |  |
-|  Usage Snippet generation |    ✅    | [snippet generation](/docs/customize-sdks/sdk-docs#usage-examples) |  |
-|  Documentation generation |    ✅    | [documentation generation](/docs/customize-sdks/sdk-docs) |  |
+<Table 
+  data={[
+    { name: "`README` generation", support: "✅", docs: "[README generation](/docs/customize-sdks/sdk-docs)", notes: "" },
+    { name: "Usage Snippet generation", support: "✅", docs: "[snippet generation](/docs/customize-sdks/sdk-docs#usage-examples)", notes: "" },
+    { name: "Documentation generation", support: "✅", docs: "[documentation generation](/docs/customize-sdks/sdk-docs)", notes: "" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "support", header: "Support" },
+    { key: "docs", header: "Docs" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
