--- a/docs/languages/typescript/methodology-ts.mdx
+++ b/docs/languages/typescript/methodology-ts.mdx
@@ -140,7 +140,7 @@ The TypeScript SDK generates a type for each request, response, and shared model
 
 Below is a complete example of a shared model created by the TypeScript generator:
 
-<ScrollyCoding>
+<Spotlight>
 
 #### !!steps Public Type
 
@@ -266,7 +266,7 @@ All generated models have this overall structure. By pinning the types with runt
 
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 <Callout title="Note" type="info">
 It&apos;s important to note that Zod is a peer dependency.
