--- a/docs/languages/typescript/oss-comparison-ts.mdx
+++ b/docs/languages/typescript/oss-comparison-ts.mdx
@@ -25,24 +25,34 @@ Our evaluation includes:
 
 Here's the summary of how the different generators compare:
 
-| Feature                  | Speakeasy              | TypeScript Fetch | TypeScript Node | Oazapfts             | OpenAPI TypeScript Codegen |
-|--------------------------|------------------------|------------------|-----------------|----------------------|----------------------------|
-| Schema validation        | ✅ Using Zod              | ✅ Basic          | ✅ Basic         | ❌                    | ❌                          |
-| Documentation generation | ✅ Full docs and examples | ❌                | ❌               | ❌                    | ❌                          |
-| Union types/polymorphism | ✅                        | ✅                | ❌               | ✅ With discriminator | ✅ Without discriminator    |
-| Browser support          | ✅                        | ✅                | ❌               | ✅                    | ✅                          |
-| Tree-shaking support     | ✅                        | ⚠️ Limited         | ⚠️ Limited        | ⚠️ Limited             | ⚠️ Limited                   |
-| OAuth 2.0                | ✅                        | ❌                | ❌               | ❌                    | ❌                          |
-| Retries                  | ✅                        | ❌                | ❌               | ❌                    | ❌                          |
-| Pagination               | ✅                        | ❌                | ❌               | ❌                    | ❌                          |
-| React Hooks generation   | ✅ With TanStack Query    | ❌                | ❌               | ❌                    | ❌                          |
-| Data streaming           | ✅ With runtime docs      | ✅                | ✅               | ✅                    | ✅                          |
-| Node.js support          | ✅                        | ✅                | ✅               | ✅                    | ✅                          |
-| Deno support             | ✅                        | ❌                | ❌               | ❌                    | ❌                          |
-| Bun support              | ✅                        | ❌                | ❌               | ❌                    | ❌                          |
-| React Native support     | ✅                        | ❌                | ❌               | ❌                    | ❌                          |
-| Package publishing       | ✅                        | ❌                | ❌               | ❌                    | ❌                          |
-| CI/CD integration        | ✅ GitHub Actions         | ❌                | ❌               | ❌                    | ❌                          |
+<Table 
+  data={[
+    { name: "Schema validation", speakeasy: "✅ Using Zod", tsFetch: "✅ Basic", tsNode: "✅ Basic", oazapfts: "❌", openapiTs: "❌" },
+    { name: "Documentation generation", speakeasy: "✅ Full docs and examples", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "Union types/polymorphism", speakeasy: "✅", tsFetch: "✅", tsNode: "❌", oazapfts: "✅ With discriminator", openapiTs: "✅ Without discriminator" },
+    { name: "Browser support", speakeasy: "✅", tsFetch: "✅", tsNode: "❌", oazapfts: "✅", openapiTs: "✅" },
+    { name: "Tree-shaking support", speakeasy: "✅", tsFetch: "⚠️ Limited", tsNode: "⚠️ Limited", oazapfts: "⚠️ Limited", openapiTs: "⚠️ Limited" },
+    { name: "OAuth 2.0", speakeasy: "✅", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "Retries", speakeasy: "✅", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "Pagination", speakeasy: "✅", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "React Hooks generation", speakeasy: "✅ With TanStack Query", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "Data streaming", speakeasy: "✅ With runtime docs", tsFetch: "✅", tsNode: "✅", oazapfts: "✅", openapiTs: "✅" },
+    { name: "Node.js support", speakeasy: "✅", tsFetch: "✅", tsNode: "✅", oazapfts: "✅", openapiTs: "✅" },
+    { name: "Deno support", speakeasy: "✅", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "Bun support", speakeasy: "✅", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "React Native support", speakeasy: "✅", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "Package publishing", speakeasy: "✅", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" },
+    { name: "CI/CD integration", speakeasy: "✅ GitHub Actions", tsFetch: "❌", tsNode: "❌", oazapfts: "❌", openapiTs: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "Feature" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "tsFetch", header: "TypeScript Fetch" },
+    { key: "tsNode", header: "TypeScript Node" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "openapiTs", header: "OpenAPI TypeScript Codegen" }
+  ]}
+/>
 
 For a detailed comparison, read on.
 
@@ -124,11 +134,20 @@ This provides a detailed list of hints, all of which would improve our eventual 
 
 Here's how the generators' validation features compare:
 
-|                    | Speakeasy | openapi-gen | Oazapfts | Codegen |
-|--------------------|-----------|-------------|----------|---------|
-| Validates schema   | ✅         | ✅           | ❌        | ❌       |
-| Shows line numbers | ✅         | ❌           | ❌        | ❌       |
-| Schema hints       | ✅         | ❌           | ❌        | ❌       |
+<Table 
+  data={[
+    { name: "Validates schema", speakeasy: "✅", openapiGen: "✅", oazapfts: "❌", codegen: "❌" },
+    { name: "Shows line numbers", speakeasy: "✅", openapiGen: "❌", oazapfts: "❌", codegen: "❌" },
+    { name: "Schema hints", speakeasy: "✅", openapiGen: "❌", oazapfts: "❌", codegen: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "openapiGen", header: "openapi-gen" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "codegen", header: "Codegen" }
+  ]}
+/>
 
 ## Generating SDKs
 
@@ -440,10 +459,20 @@ export class UpdatePetRequest {
 
 Here's a summary of how each generator handles OpenAPI polymorphism:
 
-|                    | Speakeasy | Node | Fetch | Oazapfts | Codegen |
-|--------------------|-----------|------|-------|----------|---------|
-| Adds union types   | ✅         | ❌    | ✅     | ✅        | ✅       |
-| Uses discriminator | ✅         | ❌    | ✅     | ✅        | ❌       |
+<Table 
+  data={[
+    { name: "Adds union types", speakeasy: "✅", node: "❌", fetch: "✅", oazapfts: "✅", codegen: "✅" },
+    { name: "Uses discriminator", speakeasy: "✅", node: "❌", fetch: "✅", oazapfts: "✅", codegen: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "node", header: "Node" },
+    { key: "fetch", header: "Fetch" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "codegen", header: "Codegen" }
+  ]}
+/>
 
 ## Retries
 
@@ -522,9 +551,19 @@ For example, in this basic implementation, the `useQuery` hook fetches data from
 
 None of the other generators generate React Hooks for their SDKs.
 
-|                 | Speakeasy | Node | Fetch | Oazapfts | Codegen |
-|-----------------|-----------|------|-------|----------|---------|
-| React Hooks     | ✅         | ❌    | ❌     | ❌        | ❌       |
+<Table 
+  data={[
+    { name: "React Hooks", speakeasy: "✅", node: "❌", fetch: "❌", oazapfts: "❌", codegen: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "node", header: "Node" },
+    { key: "fetch", header: "Fetch" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "codegen", header: "Codegen" }
+  ]}
+/>
 
 For an in-depth look at how Speakeasy uses React Hooks, see our [official release article](https://www.speakeasy.com/post/release-react-hooks).
 
@@ -588,9 +627,19 @@ run();
 
 None of the other generators include pagination as a feature.
 
-|                 | Speakeasy | Node | Fetch | Oazapfts | Codegen |
-|-----------------|-----------|------|-------|----------|---------|
-| Adds pagination | ✅         | ❌    | ❌     | ❌        | ❌       |
+<Table 
+  data={[
+    { name: "Adds pagination", speakeasy: "✅", node: "❌", fetch: "❌", oazapfts: "❌", codegen: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "node", header: "Node" },
+    { key: "fetch", header: "Fetch" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "codegen", header: "Codegen" }
+  ]}
+/>
 
 
 ## Auto-pagination
@@ -629,18 +678,38 @@ export function BooksView() {
 
 None of the other generators include auto-pagination as a feature.
 
-|                     | Speakeasy | Node | Fetch | Oazapfts | Codegen |
-|---------------------|-----------|------|-------|----------|---------|
-| Adds auto-pagination | ✅         | ❌    | ❌     | ❌        | ❌       |
+<Table 
+  data={[
+    { name: "Adds auto-pagination", speakeasy: "✅", node: "❌", fetch: "❌", oazapfts: "❌", codegen: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "node", header: "Node" },
+    { key: "fetch", header: "Fetch" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "codegen", header: "Codegen" }
+  ]}
+/>
 
 
 ## Data streaming
 
 All the generators in our comparison generate SDKs that use the `Fetch` API, which enables streaming for large uploads or downloads.
 
-|                | Speakeasy | Node | Fetch | Oazapfts | Codegen |
-|----------------|-----------|------|-------|----------|---------|
-| Stream uploads | ✅         | ✅    | ✅     | ✅        | ✅       |
+<Table 
+  data={[
+    { name: "Stream uploads", speakeasy: "✅", node: "✅", fetch: "✅", oazapfts: "✅", codegen: "✅" }
+  ]}
+  columns={[
+    { key: "name", header: "" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "node", header: "Node" },
+    { key: "fetch", header: "Fetch" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "codegen", header: "Codegen" }
+  ]}
+/>
 
 Speakeasy creates detailed documentation as part of the SDK, detailing how to open large files on different runtimes to help your developer-users take advantage of streaming.
 
@@ -650,10 +719,20 @@ Of all the generators tested, Speakeasy was the only one to generate documentati
 
 Here's how the generators add documentation:
 
-|                     | Speakeasy | Node | Fetch | Oazapfts | Codegen |
-|---------------------|-----------|------|-------|----------|---------|
-| Adds documentation  | ✅         | ❌    | ❌     | ❌        | ❌       |
-| Adds usage examples | ✅         | ❌    | ❌     | ❌        | ❌       |
+<Table 
+  data={[
+    { name: "Adds documentation", speakeasy: "✅", node: "❌", fetch: "❌", oazapfts: "❌", codegen: "❌" },
+    { name: "Adds usage examples", speakeasy: "✅", node: "❌", fetch: "❌", oazapfts: "❌", codegen: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "" },
+    { key: "speakeasy", header: "Speakeasy" },
+    { key: "node", header: "Node" },
+    { key: "fetch", header: "Fetch" },
+    { key: "oazapfts", header: "Oazapfts" },
+    { key: "codegen", header: "Codegen" }
+  ]}
+/>
 
 Speakeasy generates a `README.md` at the root of the SDK, [which you can customize](/docs/sdk-docs) to add branding, support links, a code of conduct, and any other information your developer-users might find helpful.
 
