--- a/docs/prep-openapi/best-practices.mdx
+++ b/docs/prep-openapi/best-practices.mdx
@@ -19,7 +19,7 @@ OpenAPI offers extensive flexibility and can describe any HTTP API, including RE
 
 With this flexibility, constructing an OpenAPI document suitable for code generation requires careful consideration. Speakeasy recommends following specific best practices when writing OpenAPI documents. The sections below outline key points to consider when creating an OpenAPI description.
 
-<ScrollyCoding>
+<Spotlight>
 ## !!steps servers
 
 Add multiple `servers` to define different environments or versions. This is especially useful for separating production and testing environments.
@@ -181,7 +181,7 @@ Use the `description` field to provide clear and concise information about the p
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Extending OpenAPI
 
@@ -191,7 +191,7 @@ Extensions typically follow a naming format of `x-<vendor>-<function>`, where `<
 
 A [range of Speakeasy extensions](/docs/customize-sdks/) help prepare OpenAPI documents for code generation. Some of the most commonly used extensions are described below.
 
-<ScrollyCoding>
+<Spotlight>
 
 ## !!steps x-speakeasy-name-override
 
@@ -286,4 +286,4 @@ Another useful documentation extension is `x-speakeasy-example`, which provides 
 # !focus(45)
 ```
 
-</ScrollyCoding>
+</Spotlight>
