--- a/docs/prep-openapi/overlays/create-overlays.mdx
+++ b/docs/prep-openapi/overlays/create-overlays.mdx
@@ -48,7 +48,7 @@ speakeasy overlay compare --before=./openapi_original.yaml --after=./openapi.yam
 
 ## Anatomy of an overlay
 
-<ScrollyCoding>
+<Spotlight>
 
 #### !!steps `overlay`
 
@@ -134,7 +134,7 @@ actions:
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Helpful references:
 
