--- a/docs/prep-openapi/transformations.mdx
+++ b/docs/prep-openapi/transformations.mdx
@@ -50,7 +50,7 @@ The greatest utility comes from using transformations in the `workflow.yaml` fil
 
 Note that the `convert-swagger` transformation cannot be applied as part of a workflow.
 
-<ScrollyCoding>
+<Spotlight>
 ### !!steps Remove unused components
 
 Remove unused components from the OpenAPI document, preventing inclusion in the generated SDK.
@@ -140,4 +140,4 @@ sources:
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
