--- a/docs/publish-sdk.mdx
+++ b/docs/publish-sdk.mdx
@@ -22,28 +22,43 @@ import pendingReleaseImage from '@/content/docs/assets/publish-sdks/pending-rele
 
 ## Supported package managers
 
-| Language   | Package Manager | Prerequisites                                                                                                                                                   | Notes                                                                                                          |
-|------------|-----------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------|
-| TypeScript | npm             | [Access tokens](https://docs.npmjs.com/creating-and-viewing-access-tokens)                                                                                        | Create an access token of type `Automation`.                                                                   |
-| Python     | PyPI            | [API tokens](https://pypi.org/help/#apitoken)                                                                                                                     |                                                                                                                |
-| Go         | GitHub          | [Repo visibility](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/managing-repository-settings/setting-repository-visibility) | For private repos, add the [Speakeasy app](https://github.com/marketplace/speakeasy-api).                      |
-| Java       | Maven           | [Get started with Maven Central](https://central.sonatype.org/publish-ea/publish-ea-guide/) and [verify domain ownership](https://central.sonatype.org/faq/verify-ownership/) |                                                                                                                |
-| PHP        | Packagist       | [See publishing packages](https://packagist.org/)                                                                                                                 | Monorepo setups not permitted. Package must be initially created manually in Packagist.                                                                                 |
-| C#         | NuGet           | [API key](https://learn.microsoft.com/en-us/nuget/nuget-org/publish-a-package#create-an-api-key)                                                                  |                                                                                                                |
-| Terraform  | Terraform       | [GPG Key](https://developer.hashicorp.com/terraform/registry/providers/publishing#preparing-and-adding-a-signing-key)                                             |                                                                                                                |
-
+<Table 
+  data={[
+    { language: "TypeScript", manager: "npm", prerequisites: "[Access tokens](https://docs.npmjs.com/creating-and-viewing-access-tokens)", notes: "Create an access token of type `Automation`." },
+    { language: "Python", manager: "PyPI", prerequisites: "[API tokens](https://pypi.org/help/#apitoken)", notes: "" },
+    { language: "Go", manager: "GitHub", prerequisites: "[Repo visibility](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/managing-repository-settings/setting-repository-visibility)", notes: "For private repos, add the [Speakeasy app](https://github.com/marketplace/speakeasy-api)." },
+    { language: "Java", manager: "Maven", prerequisites: "[Get started with Maven Central](https://central.sonatype.org/publish-ea/publish-ea-guide/) and [verify domain ownership](https://central.sonatype.org/faq/verify-ownership/)", notes: "" },
+    { language: "PHP", manager: "Packagist", prerequisites: "[See publishing packages](https://packagist.org/)", notes: "Monorepo setups not permitted. Package must be initially created manually in Packagist." },
+    { language: "C#", manager: "NuGet", prerequisites: "[API key](https://learn.microsoft.com/en-us/nuget/nuget-org/publish-a-package#create-an-api-key)", notes: "" },
+    { language: "Terraform", manager: "Terraform", prerequisites: "[GPG Key](https://developer.hashicorp.com/terraform/registry/providers/publishing#preparing-and-adding-a-signing-key)", notes: "" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "manager", header: "Package Manager" },
+    { key: "prerequisites", header: "Prerequisites" },
+    { key: "notes", header: "Notes" }
+  ]}
+/>
 
 ## Naming packages
 
-| Language   | Package Manager | Example Package          | Naming Conventions               |
-|------------|-----------------|--------------------------|----------------------------------|
-| TypeScript | npm             | @npm-org/package-name    | Lower case, hyphen separated     |
-| Python     | PyPI            | package_name             | Lower case, underscore separated |
-| Go         | GitHub          | github.com/org/repo-name | Lower case, hyphen separated     |
-| Java       | Maven           | packageName              | Camel case                       |
-| PHP        | Packagist       | org/package-name         | Lower case, hyphen separated     |
-| C#         | NuGet           | PackageName              | Pascal case, period separated    |
-| Terraform  | Terraform       | terraform-provider-name  | Lower case, hyphen separated     |
+<Table 
+  data={[
+    { language: "TypeScript", manager: "npm", example: "@npm-org/package-name", convention: "Lower case, hyphen separated" },
+    { language: "Python", manager: "PyPI", example: "package_name", convention: "Lower case, underscore separated" },
+    { language: "Go", manager: "GitHub", example: "github.com/org/repo-name", convention: "Lower case, hyphen separated" },
+    { language: "Java", manager: "Maven", example: "packageName", convention: "Camel case" },
+    { language: "PHP", manager: "Packagist", example: "org/package-name", convention: "Lower case, hyphen separated" },
+    { language: "C#", manager: "NuGet", example: "PackageName", convention: "Pascal case, period separated" },
+    { language: "Terraform", manager: "Terraform", example: "terraform-provider-name", convention: "Lower case, hyphen separated" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "manager", header: "Package Manager" },
+    { key: "example", header: "Example Package" },
+    { key: "convention", header: "Naming Conventions" }
+  ]}
+/>
 
 <Callout title="Tip" >
 For global package managers like PyPI and Maven, ensure the package name is unique.
