--- a/docs/speakeasy-reference/generation/ci-cd-pipeline.mdx
+++ b/docs/speakeasy-reference/generation/ci-cd-pipeline.mdx
@@ -28,10 +28,21 @@ description: "Manage CI/CD (the automatic generation and publishing of Client SD
 
 The inputs to the workflow determine how the SDKs will be generated.
 
-| **Input Name**  | **Description**                                                                    | **Type** | **Default** |
-|-----------------|------------------------------------------------------------------------------------|----------|-------------|
-| `force`         | Forces SDK generation even if no changes are detected in the OpenAPI document.      | boolean  | `false`     |
-| `set_version`   | Optionally set a specific version for the SDKs.                                     | string   | N/A         |
+<Table 
+  data={[
+    { name: "speakeasy_version", description: "Version of the Speakeasy CLI to use. Use \"latest\" to always use the latest version.", type: "string", default: "latest" },
+    { name: "mode", description: "Workflow mode: `direct` commits changes directly to the branch, `pr` creates a pull request, or `test` fully runs through generation without modifying any GitHub state.", type: "string", default: "direct" },
+    { name: "force", description: "Forces SDK generation, even if no changes are detected.", type: "boolean", default: "false" },
+    { name: "set_version", description: "Manually set a specific version for the SDK being generated.", type: "string", default: "None" }
+  ]}
+  columns={[
+    { key: "name", header: "Input Name" },
+    { key: "description", header: "Description" },
+    { key: "type", header: "Type" },
+    { key: "default", header: "Default" }
+  ]}
+/>
+
 
 ## Workflow jobs
 
@@ -50,12 +61,20 @@ jobs:
       speakeasy_version: latest
 ```
 
-| **Input Name**      | **Description**                                                                                                                                                           | **Type** | **Default** |
-|---------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------|-------------|
-| `speakeasy_version` | Version of the Speakeasy CLI to use. Use "latest" to always use the latest version.                                                                                        | string   | `latest`    |
-| `mode`              | Workflow mode: `direct` commits changes directly to the branch, `pr` creates a pull request, or `test` fully runs through generation without modifying any GitHub state.    | string   | `direct`    |
-| `force`             | Forces SDK generation, even if no changes are detected.                                                                                                                    | boolean  | `false`     |
-| `set_version`       | Manually set a specific version for the SDK being generated.                                                                                                               | string   | None        |
+<Table 
+  data={[
+    { name: "speakeasy_version", description: "Version of the Speakeasy CLI to use. Use \"latest\" to always use the latest version.", type: "string", default: "latest" },
+    { name: "mode", description: "Workflow mode: `direct` commits changes directly to the branch, `pr` creates a pull request, or `test` fully runs through generation without modifying any GitHub state.", type: "string", default: "direct" },
+    { name: "force", description: "Forces SDK generation, even if no changes are detected.", type: "boolean", default: "false" },
+    { name: "set_version", description: "Manually set a specific version for the SDK being generated.", type: "string", default: "None" }
+  ]}
+  columns={[
+    { key: "name", header: "Input Name" },
+    { key: "description", header: "Description" },
+    { key: "type", header: "Type" },
+    { key: "default", header: "Default" }
+  ]}
+/>
 
 ### Secrets
 
@@ -66,46 +85,58 @@ secrets:
   speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
 ```
 
-| **Secret Name**           | **Description**                                                                                 |
-|---------------------------|-------------------------------------------------------------------------------------------------|
-| `github_access_token`      | GitHub access token with write access to the repository. Used to push changes and create PRs.   |
-| `speakeasy_api_key`        | API key for authenticating with the Speakeasy CLI.                                              |
-| `npm_token`                | Token to authenticate publishing to npm registry.                                               |
-| `pypi_token`               | Token to authenticate publishing to PyPi for Python packages.                                   |
-| `packagist_token`          | Token to authenticate publishing to Packagist for PHP packages.                                 |
-| `ossrh_username`           | Username for publishing the Java package to the OSSRH repository.                               |
-| `ossrh_password`           | Password for publishing the Java package to the OSSRH repository.                               |
-| `java_gpg_secret_key`      | GPG secret key used for signing the Java package.                                               |
-| `java_gpg_passphrase`      | Passphrase for the GPG secret key.                                                              |
-| `rubygems_auth_token`      | Auth token (API key) for publishing to RubyGems.                                                |
-| `nuget_api_key`            | API key for publishing to the Nuget registry.                                                   |
-| `slack_webhook_url`        | Optional: Slack Webhook URL for posting workflow failure notifications.                         |
-| `terraform_gpg_secret_key` | GPG secret key used for signing the Terraform provider.                                         |
-| `terraform_gpg_passphrase` | Passphrase for the Terraform GPG secret key.                                                    |
 
+<Table 
+  data={[
+    { name: "github_access_token", description: "GitHub access token with write access to the repository. Used to push changes and create PRs." },
+    { name: "speakeasy_api_key", description: "API key for authenticating with the Speakeasy CLI." },
+    { name: "npm_token", description: "Token to authenticate publishing to npm registry." },
+    { name: "pypi_token", description: "Token to authenticate publishing to PyPi for Python packages." },
+    { name: "packagist_token", description: "Token to authenticate publishing to Packagist for PHP packages." },
+    { name: "ossrh_username", description: "Username for publishing the Java package to the OSSRH repository." },
+    { name: "ossrh_password", description: "Password for publishing the Java package to the OSSRH repository." },
+    { name: "java_gpg_secret_key", description: "GPG secret key used for signing the Java package." },
+    { name: "java_gpg_passphrase", description: "Passphrase for the GPG secret key." },
+    { name: "rubygems_auth_token", description: "Auth token (API key) for publishing to RubyGems." },
+    { name: "nuget_api_key", description: "API key for publishing to the Nuget registry." },
+    { name: "slack_webhook_url", description: "Optional: Slack Webhook URL for posting workflow failure notifications." },
+    { name: "terraform_gpg_secret_key", description: "GPG secret key used for signing the Terraform provider." },
+    { name: "terraform_gpg_passphrase", description: "Passphrase for the Terraform GPG secret key." }
+  ]}
+  columns={[
+    { key: "name", header: "Secret Name" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Workflow outputs
 
 The workflow provides outputs that indicate which SDKs were regenerated and can trigger further actions in the pipeline, such as validating, testing, and publishing the SDKs.
 
-| **Output Name**             | **Description**                                             |
-|-----------------------------|-------------------------------------------------------------|
-| `python_regenerated`         | Indicates if the Python SDK was regenerated.               |
-| `python_directory`           | Directory where the Python SDK was generated.              |
-| `typescript_regenerated`     | Indicates if the TypeScript SDK was regenerated.           |
-| `typescript_directory`       | Directory where the TypeScript SDK was generated.          |
-| `java_regenerated`           | Indicates if the Java SDK was regenerated.                 |
-| `java_directory`             | Directory where the Java SDK was generated.                |
-| `go_regenerated`             | Indicates if the Go SDK was regenerated.                   |
-| `go_directory`               | Directory where the Go SDK was generated.                  |
-| `php_regenerated`            | Indicates if the PHP SDK was regenerated.                  |
-| `php_directory`              | Directory where the PHP SDK was generated.                 |
-| `ruby_regenerated`           | Indicates if the Ruby SDK was regenerated.                 |
-| `ruby_directory`             | Directory where the Ruby SDK was generated.                |
-| `swift_regenerated`          | Indicates if the Swift SDK was regenerated.                |
-| `swift_directory`            | Directory where the Swift SDK was generated.               |
-| `terraform_regenerated`      | Indicates if the Terraform SDK was regenerated.            |
-| `terraform_directory`        | Directory where the Terraform SDK was generated.           |
-| `docs_regenerated`           | Indicates if the SDK documentation was regenerated.        |
-| `branch_name`                | The branch name used for generating the SDK or the PR.     |
-| `commit_hash`                | The commit hash generated for the SDK (in direct mode).    |
+<Table 
+  data={[
+    { name: "python_regenerated", description: "Indicates if the Python SDK was regenerated." },
+    { name: "python_directory", description: "Directory where the Python SDK was generated." },
+    { name: "typescript_regenerated", description: "Indicates if the TypeScript SDK was regenerated." },
+    { name: "typescript_directory", description: "Directory where the TypeScript SDK was generated." },
+    { name: "java_regenerated", description: "Indicates if the Java SDK was regenerated." },
+    { name: "java_directory", description: "Directory where the Java SDK was generated." },
+    { name: "go_regenerated", description: "Indicates if the Go SDK was regenerated." },
+    { name: "go_directory", description: "Directory where the Go SDK was generated." },
+    { name: "php_regenerated", description: "Indicates if the PHP SDK was regenerated." },
+    { name: "php_directory", description: "Directory where the PHP SDK was generated." },
+    { name: "ruby_regenerated", description: "Indicates if the Ruby SDK was regenerated." },
+    { name: "ruby_directory", description: "Directory where the Ruby SDK was generated." },
+    { name: "swift_regenerated", description: "Indicates if the Swift SDK was regenerated." },
+    { name: "swift_directory", description: "Directory where the Swift SDK was generated." },
+    { name: "terraform_regenerated", description: "Indicates if the Terraform SDK was regenerated." },
+    { name: "terraform_directory", description: "Directory where the Terraform SDK was generated." },
+    { name: "docs_regenerated", description: "Indicates if the SDK documentation was regenerated." },
+    { name: "branch_name", description: "The branch name used for generating the SDK or the PR." },
+    { name: "commit_hash", description: "The commit hash generated for the SDK (in direct mode)." }
+  ]}
+  columns={[
+    { key: "name", header: "Output Name" },
+    { key: "description", header: "Description" }
+  ]}
+/>
