--- a/docs/speakeasy-reference/generation/gen-yaml.mdx
+++ b/docs/speakeasy-reference/generation/gen-yaml.mdx
@@ -21,7 +21,7 @@ The `gen.yaml` file has several sections:
 
 ## Generation
 
-<ScrollyCoding>
+<Spotlight>
 
 #### !!steps `configVersion`
 
@@ -161,4 +161,4 @@ Disables the generation and use of a mock HTTP server with generated tests.
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
