--- a/docs/speakeasy-reference/generation/java-config.mdx
+++ b/docs/speakeasy-reference/generation/java-config.mdx
@@ -1,5 +1,3 @@
-
-
 # Java Configuration Options
 
  This section details the available configuration options for the Java SDK. All configuration is managed in the `gen.yaml` file under the `java` section.
@@ -12,10 +10,18 @@ java:
   projectName: "openapi"
 ```
 
-| Name            | Required | Default Value | Description                                                                                     |
-|-----------------|----------|---------------|-------------------------------------------------------------------------------------------------|
-| `version`       | true     | `0.0.1`       | The current version of the SDK.                                                                 |
-| `projectName`   | true     | `openapi`     | Assigns Gradle `rootProject.name`, which names the Gradle build. See [Gradle Naming](https://docs.gradle.org/current/userguide/multi_project_builds.html#naming_recommendations). |
+<Table 
+  data={[
+    { name: "version", required: "true", default: "0.0.1", description: "The current version of the SDK." },
+    { name: "projectName", required: "true", default: "openapi", description: "Assigns Gradle `rootProject.name`, which names the Gradle build. See [Gradle Naming](https://docs.gradle.org/current/userguide/multi_project_builds.html#naming_recommendations)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Publishing
 
@@ -29,15 +35,24 @@ java:
   companyURL: "https://www.mycompany.com"
   companyEmail: "support@mycompany.com"
 ```
-| Name            | Required | Default Value       | Description                                                                                     |
-|-----------------|----------|---------------------|-------------------------------------------------------------------------------------------------|
-| `groupID`       | true     | `org.openapis`      | The group ID used for namespacing the package. Typically the reversed domain of your organization. |
-| `artifactID`    | true     | `openapi`           | The artifact ID used for namespacing the package, usually the name of the project.               |
-| `ossrhURL`      | false    | N/A                 | The URL of the staging repository to publish the SDK artifact to.                                |
-| `githubURL`     | for publishing | `github.com/owner/repo` | The GitHub URL where the artifact is hosted. Sets metadata required by Maven.                    |
-| `companyName`   | for publishing | `My Company`        | The name of your company. Sets metadata required by Maven.                                       |
-| `companyURL`    | for publishing | `www.mycompany.com`  | Your company's homepage URL. Sets metadata required by Maven.                                    |
-| `companyEmail`  | for publishing | `info@mycompany.com` | A support email address for your company. Sets metadata required by Maven.                       |
+
+<Table 
+  data={[
+    { name: "groupID", required: "true", default: "org.openapis", description: "The group ID used for namespacing the package. Typically the reversed domain of your organization." },
+    { name: "artifactID", required: "true", default: "openapi", description: "The artifact ID used for namespacing the package, usually the name of the project." },
+    { name: "ossrhURL", required: "false", default: "N/A", description: "The URL of the staging repository to publish the SDK artifact to." },
+    { name: "githubURL", required: "for publishing", default: "github.com/owner/repo", description: "The GitHub URL where the artifact is hosted. Sets metadata required by Maven." },
+    { name: "companyName", required: "for publishing", default: "My Company", description: "The name of your company. Sets metadata required by Maven." },
+    { name: "companyURL", required: "for publishing", default: "www.mycompany.com", description: "Your company's homepage URL. Sets metadata required by Maven." },
+    { name: "companyEmail", required: "for publishing", default: "info@mycompany.com", description: "A support email address for your company. Sets metadata required by Maven." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Additional Dependencies
 
@@ -48,10 +63,18 @@ java:
     - "testImplementation:junit:junit:4.13.2"
 ```
 
-| Name                   | Required | Default Value                | Description                                                                                               |
-|------------------------|----------|------------------------------|-----------------------------------------------------------------------------------------------------------|
-| `additionalDependencies`| false    | `[]`                         | Adds additional dependencies to include in `build.gradle`. Format: `scope:groupId:artifactId:version`.  |
-| `additionalPlugins`     | false    | `[]`                         | Adds additional plugins to include in `build.gradle`. Format: `id("plugin.id") version "x.x.x"`.        |
+<Table 
+  data={[
+    { name: "additionalDependencies", required: "false", default: "[]", description: "Adds additional dependencies to include in `build.gradle`. Format: `scope:groupId:artifactId:version`." },
+    { name: "additionalPlugins", required: "false", default: "[]", description: "Adds additional plugins to include in `build.gradle`. Format: `id(\"plugin.id\") version \"x.x.x\"`." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## License
 
@@ -63,10 +86,17 @@ java:
     shortName: "MIT"
 ```
 
-| Name    | Required | Default Value                                  | Description                                                                                               |
-|---------|----------|------------------------------------------------|-----------------------------------------------------------------------------------------------------------|
-| `license`| false   | MIT License | License information. Defaults to the MIT license if not provided.                                |
-
+<Table 
+  data={[
+    { name: "license", required: "false", default: "MIT License", description: "License information. Defaults to the MIT license if not provided." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Method and parameter management
 ```yml
@@ -74,10 +104,17 @@ java:
   maxMethodParams: 4
 ```
 
-| Name               | Required | Default Value               | Description                                                                                               |
-|--------------------|----------|-----------------------------|-----------------------------------------------------------------------------------------------------------|
-| `maxMethodParams`   | false    | `4`                         | Maximum number of parameters before an input object is created. `0` means input objects are always used.   |
-
+<Table 
+  data={[
+    { name: "maxMethodParams", required: "false", default: "4", description: "Maximum number of parameters before an input object is created. `0` means input objects are always used." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Security configuration
 
@@ -85,9 +122,18 @@ java:
 java:
   flattenGlobalSecurity: true
 ```
-| Property                        | Description                                                                                              | Type     | Default   |
-|---------------------------------|----------------------------------------------------------------------------------------------------------|----------|-----------|
-| `flattenGlobalSecurity`         | Enables inline security credentials during SDK instantiation. **Recommended: `true`**                    | boolean  | `true`    |
+
+<Table 
+  data={[
+    { property: "flattenGlobalSecurity", description: "Enables inline security credentials during SDK instantiation. **Recommended: `true`**", type: "boolean", default: "true" }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "description", header: "Description" },
+    { key: "type", header: "Type" },
+    { key: "default", header: "Default" }
+  ]}
+/>
 
 ## Module management
 
@@ -96,10 +142,19 @@ java:
   moduleFormat: "dual"
   useIndexModules: true
 ```
-| Name                    | Required | Default Value     | Description                                                                                   |
-|-------------------------|----------|-------------------|-----------------------------------------------------------------------------------------------|
-| `useIndexModules`        | false    | `true`            | Determines if index modules (`index.ts`) are generated.                                        |
-| `moduleFormat`           | false    | `commonjs`        | Sets the module format to use when compiling the SDK (`commonjs`, `esm`, or `dual`).      |
+
+<Table 
+  data={[
+    { name: "useIndexModules", required: "false", default: "true", description: "Determines if index modules (`index.ts`) are generated." },
+    { name: "moduleFormat", required: "false", default: "commonjs", description: "Sets the module format to use when compiling the SDK (`commonjs`, `esm`, or `dual`)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Import management
 
@@ -113,25 +168,50 @@ java:
       shared: models/components
       webhooks: models/webhooks
 ```
-| Field   | Required | Default Value | Description                                                                                   |
-|---------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `paths` | false    | `{}`          | Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from. |
+
+<Table 
+  data={[
+    { field: "paths", required: "false", default: "{}", description: "Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Import paths
 
-| Component      | Default Value              | Description                                                                                                   |
-|----------------|----------------------------|---------------------------------------------------------------------------------------------------------------|
-| `callbacks`    | `models/callbacks`          | The directory where callback models will be imported from.                                                     |
-| `errors`       | `models/errors`             | The directory where error models will be imported from.                                                        |
-| `operations`   | `models/operations`         | The directory where operation models (i.e., API endpoints) will be imported from.                              |
-| `shared`       | `models/components`         | The directory for shared components, such as reusable schemas and data models, imported from the OpenAPI spec. |
-| `webhooks`     | `models/webhooks`           | The directory for webhook models, if your SDK includes support for webhooks.                                   |
+<Table 
+  data={[
+    { component: "callbacks", default: "models/callbacks", description: "The directory where callback models will be imported from." },
+    { component: "errors", default: "models/errors", description: "The directory where error models will be imported from." },
+    { component: "operations", default: "models/operations", description: "The directory where operation models (i.e., API endpoints) will be imported from." },
+    { component: "shared", default: "models/components", description: "The directory for shared components, such as reusable schemas and data models, imported from the OpenAPI spec." },
+    { component: "webhooks", default: "models/webhooks", description: "The directory for webhook models, if your SDK includes support for webhooks." }
+  ]}
+  columns={[
+    { key: "component", header: "Component" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Error and response handling
 ```yml
 java:
   clientServerStatusCodesAsErrors: false
 ```
-| Name                            | Required | Default Value   | Description                                                                                               |
-|---------------------------------|----------|-----------------|-----------------------------------------------------------------------------------------------------------|
-| `clientServerStatusCodesAsErrors`| false   | `true`          | Whether to treat 4xx and 5xx status codes as errors. Options: `true` or `false`.                           |
+
+<Table 
+  data={[
+    { name: "clientServerStatusCodesAsErrors", required: "false", default: "true", description: "Whether to treat 4xx and 5xx status codes as errors. Options: `true` or `false`." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
