--- a/docs/speakeasy-reference/generation/php-config.mdx
+++ b/docs/speakeasy-reference/generation/php-config.mdx
@@ -1,6 +1,3 @@
-
-
-
 # PHP Configuration Options
 
  This section details the available configuration options for the PHP SDK. All configuration is managed in the `gen.yaml` file under the `php` section.
@@ -14,12 +11,19 @@ php:
   namespace: "OpenAPI\\OpenAPI"
 ```
 
-| Name          | Required | Default Value      | Description                                                                                                                        |
-|---------------|----------|--------------------|------------------------------------------------------------------------------------------------------------------------------------|
-| `version`     | true     | `0.0.1`            | The current version of the SDK.                                                                                                    |
-| `packageName` | true     | `openapi/openapi`  | The name of the composer package. See [Composer Package Naming](https://getcomposer.org/doc/04-schema.md#name).                    |
-| `namespace`   | true     | `OpenAPI\\OpenAPI` | The namespace for the package. See [PHP Namespace Documentation](https://www.php.net/manual/en/language.namespaces.rationale.php). |
-
+<Table 
+  data={[
+    { name: "version", required: "true", default: "0.0.1", description: "The current version of the SDK." },
+    { name: "packageName", required: "true", default: "openapi/openapi", description: "The name of the composer package. See [Composer Package Naming](https://getcomposer.org/doc/04-schema.md#name)." },
+    { name: "namespace", required: "true", default: "OpenAPI\\OpenAPI", description: "The namespace for the package. See [PHP Namespace Documentation](https://www.php.net/manual/en/language.namespaces.rationale.php)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Method and parameter management
 ```yml
@@ -27,10 +31,17 @@ php:
   maxMethodParams: 4
 ```
 
-| Name              | Required | Default Value | Description                                                                                              |
-|-------------------|----------|---------------|----------------------------------------------------------------------------------------------------------|
-| `maxMethodParams` | false    | `4`           | Sets the maximum number of parameters before an input object is created. `0` means input objects are always used. |
-
+<Table 
+  data={[
+    { name: "maxMethodParams", required: "false", default: "4", description: "Sets the maximum number of parameters before an input object is created. `0` means input objects are always used." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Security configuration
 
@@ -38,10 +49,18 @@ php:
 php:
   flattenGlobalSecurity: true
 ```
-| Property                | Description                                                                           | Type    | Default |
-|-------------------------|---------------------------------------------------------------------------------------|---------|---------|
-| `flattenGlobalSecurity` | Enables inline security credentials during SDK instantiation. **Recommended: `true`** | boolean | `true`  |
 
+<Table 
+  data={[
+    { property: "flattenGlobalSecurity", description: "Enables inline security credentials during SDK instantiation. **Recommended: `true`**", type: "boolean", default: "true" }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "description", header: "Description" },
+    { key: "type", header: "Type" },
+    { key: "default", header: "Default" }
+  ]}
+/>
 
 ## Import management
 
@@ -57,20 +76,35 @@ php:
       webhooks: models/Webhooks
 ```
 
-| Field    | Required | Default Value | Description                                                                                                                        |
-|----------|----------|---------------|------------------------------------------------------------------------------------------------------------------------------------|
-| `option` | false    | `"openapi"`   | Defines the type of import strategy. Typically set to `"openapi"`, indicating that the structure is based on the OpenAPI document. |
-| `paths`  | false    | `{}`          | Customizes where different parts of the SDK (e.g., callbacks, errors, operations) will be imported from.                           |
+<Table 
+  data={[
+    { field: "option", required: "false", default: "\"openapi\"", description: "Defines the type of import strategy. Typically set to `\"openapi\"`, indicating that the structure is based on the OpenAPI document." },
+    { field: "paths", required: "false", default: "{}", description: "Customizes where different parts of the SDK (e.g., callbacks, errors, operations) will be imported from." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Import paths
 
-| Component    | Default Value       | Description                                                                                                    |
-|--------------|---------------------|----------------------------------------------------------------------------------------------------------------|
-| `callbacks`  | `models/callbacks`  | The directory where callback models will be imported from.                                                      |
-| `errors`     | `models/errors`     | The directory where error models will be imported from.                                                         |
-| `operations` | `models/operations` | The directory where operation models (i.e., API endpoints) will be imported from.                               |
-| `shared`     | `models/components` | The directory for shared components, such as reusable schemas, and data models imported from the OpenAPI spec.  |
-| `webhooks`   | `models/webhooks`   | The directory for webhook models, if your SDK includes support for webhooks.                                    |
+<Table 
+  data={[
+    { component: "callbacks", default: "models/callbacks", description: "The directory where callback models will be imported from." },
+    { component: "errors", default: "models/errors", description: "The directory where error models will be imported from." },
+    { component: "operations", default: "models/operations", description: "The directory where operation models (i.e., API endpoints) will be imported from." },
+    { component: "shared", default: "models/components", description: "The directory for shared components, such as reusable schemas, and data models imported from the OpenAPI spec." },
+    { component: "webhooks", default: "models/webhooks", description: "The directory for webhook models, if your SDK includes support for webhooks." }
+  ]}
+  columns={[
+    { key: "component", header: "Component" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Error and Response Handling
 
@@ -80,10 +114,19 @@ php:
   responseFormat: "flat"
   enumFormat: "enum"
 ```
-| Name                              | Required | Default Value | Description                                                                            |
-|-----------------------------------|----------|---------------|----------------------------------------------------------------------------------------|
-| `clientServerStatusCodesAsErrors` | false    | `true`        | Whether to treat 4XX and 5XX status codes as errors.                                  |
-| `responseFormat`                  | false    | `flat`        | Defines how responses are structured. Options: `envelope`, `envelope-http`, or `flat`.  |
+
+<Table 
+  data={[
+    { name: "clientServerStatusCodesAsErrors", required: "false", default: "true", description: "Whether to treat 4XX and 5XX status codes as errors." },
+    { name: "responseFormat", required: "false", default: "flat", description: "Defines how responses are structured. Options: `envelope`, `envelope-http`, or `flat`." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Laravel service provider
 
@@ -94,7 +137,6 @@ code to support seamless integration.
 >
 > But, what do we mean by "bootstrapped"? In general, we mean registering things, including registering service container bindings, event listeners, middleware, and even routes. Service providers are the central place to configure your application.
 
-
 To enable the Laravel Service Provider generation, update the `gen.yaml` configuration setting `enabled` to `true`, and set `svcName` appropriately.
 
 ```yml
@@ -104,16 +146,32 @@ php:
     svcName: "openapi"
 ```
 
-| Field                    | Required | Default Value | Description                                       |
-|--------------------------|----------|---------------|---------------------------------------------------|
-| `laravelServiceProvider` | false    | `{}`          | Configure the generation of the Service Provider. |
+<Table 
+  data={[
+    { field: "laravelServiceProvider", required: "false", default: "{}", description: "Configure the generation of the Service Provider." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Laravel service provider configuration
 
-| Field     | Required | Default Value | Description                                        |
-|-----------|----------|---------------|----------------------------------------------------|
-| `enabled` | false    | false         | Set to true to enable Service Provider generation. |
-| `svcName` | false    | `"openapi"`   | The name to be used for the service provider.     |
+<Table 
+  data={[
+    { field: "enabled", required: "false", default: "false", description: "Set to true to enable Service Provider generation." },
+    { field: "svcName", required: "false", default: "\"openapi\"", description: "The name to be used for the service provider." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Additional dependencies
 
@@ -136,15 +194,31 @@ php:
   }
 ```
 
-| Field                    | Required | Default Value | Description                                                                                             |
-|--------------------------|----------|---------------|---------------------------------------------------------------------------------------------------------|
-| `additionalDependencies` | false    | `{}`          | Adds additional dependencies and autoload mappings to the generated `composer.json` file. |
+<Table 
+  data={[
+    { field: "additionalDependencies", required: "false", default: "{}", description: "Adds additional dependencies and autoload mappings to the generated `composer.json` file." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Additional dependencies configuration
 
-| Name           | Required | Default Value | Description                                                                                        |
-|----------------|----------|---------------|----------------------------------------------------------------------------------------------------|
-| `autoload`     | false    | `{}`          | Defines autoload mappings for the `autoload.psr4` section.                                   |
-| `autoload-dev` | false    | `{}`          | Defines autoload mappings for the `autoload-dev.psr4` section (for development and testing). |
-| `require`      | false    | `{}`          | Adds additional dependencies to the `require` section.                                   |
-| `require-dev`  | false    | `{}`          | Adds additional dependencies to the `require-dev` section (for development and testing). |
+<Table 
+  data={[
+    { name: "autoload", required: "false", default: "{}", description: "Defines autoload mappings for the `autoload.psr4` section." },
+    { name: "autoload-dev", required: "false", default: "{}", description: "Defines autoload mappings for the `autoload-dev.psr4` section (for development and testing)." },
+    { name: "require", required: "false", default: "{}", description: "Adds additional dependencies to the `require` section." },
+    { name: "require-dev", required: "false", default: "{}", description: "Adds additional dependencies to the `require-dev` section (for development and testing)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
