--- a/docs/speakeasy-reference/generation/ruby-config.mdx
+++ b/docs/speakeasy-reference/generation/ruby-config.mdx
@@ -1,6 +1,3 @@
-
-
-
 # Ruby Configuration Options
 
  This section details the available configuration options for the Ruby SDK. All configuration is managed in the `gen.yaml` file under the `ruby` section.
@@ -14,12 +11,19 @@ ruby:
   packageName: "custom-sdk"
 ```
 
-| Name                   | Required | Default Value | Description                                                                                   |
-|------------------------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `version`              | true     | `0.0.1`       | The current version of the SDK.                                                               |
-| `packageName`           | true     | `openapi`     | The name of the package.  |
-| `author`               | true     | `Speakeasy`   | The name of the author of the published package. |
-
+<Table 
+  data={[
+    { name: "version", required: "true", default: "0.0.1", description: "The current version of the SDK." },
+    { name: "packageName", required: "true", default: "openapi", description: "The name of the package." },
+    { name: "author", required: "true", default: "Speakeasy", description: "The name of the author of the published package." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Method and parameter management
 ```yml
@@ -27,10 +31,17 @@ ruby:
   maxMethodParams: 4
 ```
 
-| Name                       | Required | Default Value               | Description                                                                                   |
-|----------------------------|----------|-----------------------------|-----------------------------------------------------------------------------------------------|
-| `maxMethodParams`           | false    | `4`                         | Sets the maximum number of parameters before an input object is created. `0` means input objects are always used. |
-
+<Table 
+  data={[
+    { name: "maxMethodParams", required: "false", default: "4", description: "Sets the maximum number of parameters before an input object is created. `0` means input objects are always used." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Module management
 
@@ -38,9 +49,18 @@ ruby:
 ruby:
   module: "OpenApiSdk"
 ```
-| Name                    | Required | Default Value     | Description                                                                                   |
-|-------------------------|----------|-------------------|-----------------------------------------------------------------------------------------------|
-| `module`        | true   | `OpenAPISdk`            | [See Docs](https://ruby-doc.org/core-2.5.3/Module.html).                                  |
+
+<Table 
+  data={[
+    { name: "module", required: "true", default: "OpenAPISdk", description: "[See Docs](https://ruby-doc.org/core-2.5.3/Module.html)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Import management
 
@@ -55,18 +75,34 @@ ruby:
       shared: models/components
       webhooks: models/webhooks
 ```
-| Field   | Required | Default Value | Description                                                                                   |
-|---------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `option`| false    | `"openapi"`   | Defines the type of import strategy. Typically set to `"openapi"`, indicating that the structure is based on the OpenAPI document. |
-| `paths` | false    | `{}`          | Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from. |
+
+<Table 
+  data={[
+    { field: "option", required: "false", default: "\"openapi\"", description: "Defines the type of import strategy. Typically set to `\"openapi\"`, indicating that the structure is based on the OpenAPI document." },
+    { field: "paths", required: "false", default: "{}", description: "Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Import paths
 
-| Component      | Default Value              | Description                                                                                                   |
-|----------------|----------------------------|---------------------------------------------------------------------------------------------------------------|
-| `callbacks`    | `models/callbacks`          | The directory where callback models will be imported from.                                                      |
-| `errors`       | `models/errors`             | The directory where error models will be imported from.                                                         |
-| `operations`   | `models/operations`         | The directory where operation models (i.e., API endpoints) will be imported from.                               |
-| `shared`       | `models/components`         | The directory for shared components, such as reusable schemas, and data models imported from the OpenAPI spec.  |
-| `webhooks`     | `models/webhooks`           | The directory for webhook models, if your SDK includes support for webhooks.                                    |
+<Table 
+  data={[
+    { component: "callbacks", default: "models/callbacks", description: "The directory where callback models will be imported from." },
+    { component: "errors", default: "models/errors", description: "The directory where error models will be imported from." },
+    { component: "operations", default: "models/operations", description: "The directory where operation models (i.e., API endpoints) will be imported from." },
+    { component: "shared", default: "models/components", description: "The directory for shared components, such as reusable schemas, and data models imported from the OpenAPI spec." },
+    { component: "webhooks", default: "models/webhooks", description: "The directory for webhook models, if your SDK includes support for webhooks." }
+  ]}
+  columns={[
+    { key: "component", header: "Component" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
