--- a/docs/speakeasy-reference/generation/terraform-config.mdx
+++ b/docs/speakeasy-reference/generation/terraform-config.mdx
@@ -1,6 +1,3 @@
-
-
-
 # Terraform configuration options
 
  This section details the available configuration options for the Terraform SDK. All configuration is managed in the `gen.yaml` file under the `terraform` section.
@@ -14,11 +11,19 @@ terraform:
   packageName: "custom-sdk"
 ```
 
-| Name                   | Required | Default Value | Description                                                                                   |
-|------------------------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `version`              | true     | `0.0.1`       | The current version of the SDK.                                                               |
-| `packageName`                     | true     | `terraform`        | The Terraform provider name.                                                                                |
-| `author`                          | true     | `speakeasy`        | The name of the author of the published package.                                                            |
+<Table 
+  data={[
+    { name: "version", required: "true", default: "0.0.1", description: "The current version of the SDK." },
+    { name: "packageName", required: "true", default: "terraform", description: "The Terraform provider name." },
+    { name: "author", required: "true", default: "speakeasy", description: "The name of the author of the published package." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Additions
 
@@ -29,11 +34,19 @@ terraform:
   additionalDataSources: []
 ```
 
-| Name                   | Required | Default Value | Description                                                                                   |
-|------------------------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `additionalDependencies`          | false    | `{}`               | Add additional dependencies to include in the generated `go.mod`.                                      |
-| `additionalResources`             | false    | `[]`               | A list of `{ importLocation?: string, importAlias?: string, resource: string }` objects to insert into the provider resource list.    |
-| `additionalDataSources`           | false    | `[]`               | A list of `{ importLocation?: string, importAlias?: string, datasource: string }` objects to insert into the provider data source list.  |
+<Table 
+  data={[
+    { name: "additionalDependencies", required: "false", default: "{}", description: "Add additional dependencies to include in the generated `go.mod`." },
+    { name: "additionalResources", required: "false", default: "[]", description: "A list of `{ importLocation?: string, importAlias?: string, resource: string }` objects to insert into the provider resource list." },
+    { name: "additionalDataSources", required: "false", default: "[]", description: "A list of `{ importLocation?: string, importAlias?: string, datasource: string }` objects to insert into the provider data source list." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Method and parameter management
 ```yml
@@ -41,9 +54,17 @@ terraform:
   allowUnknownFieldsInWeakUnions: false
 ```
 
-| Name                       | Required | Default Value               | Description                                                                                   |
-|----------------------------|----------|-----------------------------|-----------------------------------------------------------------------------------------------|
-|  `allowUnknownFieldsInWeakUnions`  | false    | `false`            | Allow unknown fields in weak (undiscriminated) unions.                                                     |
+<Table 
+  data={[
+    { name: "allowUnknownFieldsInWeakUnions", required: "false", default: "false", description: "Allow unknown fields in weak (undiscriminated) unions." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Environment variables
 
@@ -52,8 +73,16 @@ terraform:
   environmentVariables: []
 ```
 
-| Name                       | Required | Default Value               | Description                                                                                   |
-|----------------------------|----------|-----------------------------|-----------------------------------------------------------------------------------------------|
-| `environmentVariables`            | false    | `[]`               | A list of objects with `[env: string, providerAttribute: string]` keys/values to associate environment variables with a provider variable. |
+<Table 
+  data={[
+    { name: "environmentVariables", required: "false", default: "[]", description: "A list of objects with `[env: string, providerAttribute: string]` keys/values to associate environment variables with a provider variable." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 
