--- a/docs/speakeasy-reference/workflow-file.mdx
+++ b/docs/speakeasy-reference/workflow-file.mdx
@@ -41,7 +41,7 @@ speakeasyVersion: v1.250.0
 
 Sources can be added to a workflow programmatically `speakeasy configure sources` or manually by editing the workflow file.
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps `sources`
 
@@ -231,13 +231,13 @@ sources:
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Targets
 
 Targets can be added to a workflow programmatically `speakeasy configure targets` or manually by editing the workflow file.
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps `targets`
 
@@ -459,4 +459,4 @@ targets:
         location: registry.speakeasyapi.dev/my-org/my-api/code-samples
 ```
 
-</ScrollyCoding>  
+</Spotlight>  
