--- a/docs/supported/openapi.mdx
+++ b/docs/supported/openapi.mdx
@@ -9,104 +9,173 @@ The tables below provide an overview of the OpenAPI features supported by Speake
 
 ## ✅ Server configuration
 
-| Name | Notes | Swagger link |Support |
-|------|-------|--------------|--------|
-| ServerURL config | Global and per-method (include base URL and templating) | [API server and base path](https://swagger.io/docs/specification/api-host-and-base-path/) |✅ |
-| Authentication and security | Global and per-method | [Authentication](https://swagger.io/docs/specification/authentication/) |✅ |
-| Method generation |  |   |✅ |
-| Model generation |  Request and response |   |✅ |
+<Table 
+  data={[
+    { name: "ServerURL config", notes: "Global and per-method (include base URL and templating)", swaggerLink: "[API server and base path](https://swagger.io/docs/specification/api-host-and-base-path/)", support: "✅" },
+    { name: "Authentication and security", notes: "Global and per-method", swaggerLink: "[Authentication](https://swagger.io/docs/specification/authentication/)", support: "✅" },
+    { name: "Method generation", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Model generation", notes: "Request and response", swaggerLink: "", support: "✅" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
 ## ⚠️ Path parameters serialization ([Path parameters](https://swagger.io/docs/specification/describing-parameters/#path-parameters))
 
-| Name | Notes | Swagger link | Support |
-|------|-------|--------------|---------|
-| Default | `(style = simple, explode = false)` | [Parameter serialization](https://swagger.io/docs/specification/serialization/#path/) | ✅ |
-| Basic types | | | ✅ |
-| Simple objects | | | ✅ |
-| `label` | | | ❌ |
-| `matrix` | | | ❌ |
+<Table 
+  data={[
+    { name: "Default", notes: "`(style = simple, explode = false)`", swaggerLink: "[Parameter serialization](https://swagger.io/docs/specification/serialization/#path/)", support: "✅" },
+    { name: "Basic types", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Simple objects", notes: "", swaggerLink: "", support: "✅" },
+    { name: "label", notes: "", swaggerLink: "", support: "❌" },
+    { name: "matrix", notes: "", swaggerLink: "", support: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
 ## ⚠️ Query parameters serialization ([Query parameters](https://swagger.io/docs/specification/describing-parameters/#query-parameters) and [query](https://swagger.io/docs/specification/describing-parameters/#query))
 
-| Name | Notes | Swagger link | Support |
-|------|-------|--------------|---------|
-| `json` | | | ✅ |
-| `form` | | | ✅ |
-| `spaceDelimited` | | | ✅ |
-| `pipeDelimited` | | | ✅ |
-| `deepObject` | | | ✅ |
-| Basic types | | | ✅ |
-| Simple objects | | | ✅ |
+<Table 
+  data={[
+    { name: "json", notes: "", swaggerLink: "", support: "✅" },
+    { name: "form", notes: "", swaggerLink: "", support: "✅" },
+    { name: "spaceDelimited", notes: "", swaggerLink: "", support: "✅" },
+    { name: "pipeDelimited", notes: "", swaggerLink: "", support: "✅" },
+    { name: "deepObject", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Basic types", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Simple objects", notes: "", swaggerLink: "", support: "✅" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
-## ✅  Request headers ([Header](https://swagger.io/docs/specification/serialization/#header))
+## ✅ Request headers ([Header](https://swagger.io/docs/specification/serialization/#header))
 
-| Name | Notes | Swagger link | Support |
-|------|-------|--------------|---------|
-| Simple (explode = true)| | | ✅ |
-| Simple (explode = false)| | | ✅ |
+<Table 
+  data={[
+    { name: "Simple (explode = true)", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Simple (explode = false)", notes: "", swaggerLink: "", support: "✅" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
-## ⚠️  Request body serialization
+## ⚠️ Request body serialization
 
-| Name | Notes | Swagger link | Support |
-|------|-------|--------------|---------|
-| Multipart encoding | | [Multipart requests](https://swagger.io/docs/specification/describing-request-body/multipart-requests/)| ✅ |
-| Binary| | | ✅ |
-| Form data | | | ✅ |
-| JSON | Both `application/json` and `text/json`| | ✅ |
-| `x-www-form-urlencoded` |  Including encoding, but not non-object types | [Describing request body](https://swagger.io/docs/specification/describing-request-body)| ⚠️ |
-| Plain text | | | ✅ |
-| Raw byte | | | ✅ |
-| Handling `required` body | | | ✅ |
-| XML | | | ❌ |
-| Other media types| | | ❌ |
+<Table 
+  data={[
+    { name: "Multipart encoding", notes: "", swaggerLink: "[Multipart requests](https://swagger.io/docs/specification/describing-request-body/multipart-requests/)", support: "✅" },
+    { name: "Binary", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Form data", notes: "", swaggerLink: "", support: "✅" },
+    { name: "JSON", notes: "Both `application/json` and `text/json`", swaggerLink: "", support: "✅" },
+    { name: "x-www-form-urlencoded", notes: "Including encoding, but not non-object types", swaggerLink: "[Describing request body](https://swagger.io/docs/specification/describing-request-body)", support: "⚠️" },
+    { name: "Plain text", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Raw byte", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Handling `required` body", notes: "", swaggerLink: "", support: "✅" },
+    { name: "XML", notes: "", swaggerLink: "", support: "❌" },
+    { name: "Other media types", notes: "", swaggerLink: "", support: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
-## ⚠️  Response body deserialization
+## ⚠️ Response body deserialization
 
-| Name | Notes | Swagger link | Support |
-|------|-------|--------------|---------|
-| Return `StatusCode` and `Content-Type` | | | ✅ |
-| JSON | | | ✅ |
-| Plain text | | | ✅ |
-| Raw byte | | | ✅ |
-| JSON | | | ✅ |
-| Other media types| | | ❌ |
+<Table 
+  data={[
+    { name: "Return `StatusCode` and `Content-Type`", notes: "", swaggerLink: "", support: "✅" },
+    { name: "JSON", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Plain text", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Raw byte", notes: "", swaggerLink: "", support: "✅" },
+    { name: "JSON", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Other media types", notes: "", swaggerLink: "", support: "❌" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
 ## ✅ Media-type patterns ([Media types](https://swagger.io/docs/specification/media-types))
 
 ## ✅ Data types
 
-| Name | Notes | Swagger link | Support |
-|------|-------|--------------|---------|
-| Basic types | | [Data models: Data types](https://swagger.io/docs/specification/data-models/data-types/)| ✅ |
-| Enums | | | ✅ |
-| Number formats | float, double, int32, int64 | | ✅ |
-| Date-time | | | ✅ |
-| Binary | | | ✅ |
-| Arrays | | | ✅ |
-| Objects | | | ✅ |
-| Optional | | | ✅ |
-| Maps | | | ✅ |
-| Any type | | | ✅ |
-| `OneOf`, `AnyOf`, and `AllOf` |  |[oneOf, anyOf, allOf, not](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/)| ⚠️ See `union type` support below |
+<Table 
+  data={[
+    { name: "Basic types", notes: "", swaggerLink: "[Data models: Data types](https://swagger.io/docs/specification/data-models/data-types/)", support: "✅" },
+    { name: "Enums", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Number formats", notes: "float, double, int32, int64", swaggerLink: "", support: "✅" },
+    { name: "Date-time", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Binary", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Arrays", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Objects", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Optional", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Maps", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Any type", notes: "", swaggerLink: "", support: "✅" },
+    { name: "`OneOf`, `AnyOf`, and `AllOf`", notes: "", swaggerLink: "[oneOf, anyOf, allOf, not](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/)", support: "⚠️ See `union type` support below" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
 ### ✅ Union types
 
-| Name | Notes | Language support |
-|------|-------|---------|
-| `oneOf` | For languages that don't yet have native union type support in Speakeasy, `oneOf` will be treated as an `any` type. | ✅ TypeScript, Python, Go, C#, Java, PHP  |
-| `allOf` | To avoid construction of illogical types, Speakeasy currently constructs an object using the superset of fields from the listed schemas. In cases where the base schemas have a field name collision, Speakeasy will default to using the field from the object deepest in the list. | ✅ All languages  |
-| `anyOf` | `anyOf` is treated as `oneOf` to avoid the bloat of combinatorial data type creation. | ✅ TypeScript, Python, Go  |
+<Table 
+  data={[
+    { name: "oneOf", notes: "For languages that don't yet have native union type support in Speakeasy, `oneOf` will be treated as an `any` type.", languageSupport: "✅ TypeScript, Python, Go, C#, Java, PHP" },
+    { name: "allOf", notes: "To avoid construction of illogical types, Speakeasy currently constructs an object using the superset of fields from the listed schemas. In cases where the base schemas have a field name collision, Speakeasy will default to using the field from the object deepest in the list.", languageSupport: "✅ All languages" },
+    { name: "anyOf", notes: "`anyOf` is treated as `oneOf` to avoid the bloat of combinatorial data type creation.", languageSupport: "✅ TypeScript, Python, Go" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "languageSupport", header: "Language support" }
+  ]}
+/>
 
-## ✅  Miscellaneous
+## ✅ Miscellaneous
 
-| Name | Notes | Swagger link | Support |
-|------|-------|--------------|---------|
-| Auxiliary files* | | | ✅ |
-| `x-speakeasy-server-id` generation | | | ✅ |
-| Snippet generation | | | ✅ |
-| README generation | | | ✅ |
-| Documentation generation | | | ✅ |
-
-
+<Table 
+  data={[
+    { name: "Auxiliary files*", notes: "", swaggerLink: "", support: "✅" },
+    { name: "`x-speakeasy-server-id` generation", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Snippet generation", notes: "", swaggerLink: "", support: "✅" },
+    { name: "README generation", notes: "", swaggerLink: "", support: "✅" },
+    { name: "Documentation generation", notes: "", swaggerLink: "", support: "✅" }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "notes", header: "Notes" },
+    { key: "swaggerLink", header: "Swagger link" },
+    { key: "support", header: "Support" }
+  ]}
+/>
 
 \* Files needed for creating a fully compilable package that can be published to the relevant package manager without further changes.
