--- a/guides/openapi/x-codesamples.mdx
+++ b/guides/openapi/x-codesamples.mdx
@@ -18,11 +18,19 @@ When custom code samples are added using the code samples extension, documentati
 
 ## Anatomy of the extension
 
-| Field Name | Type     | Description                                                                                                                                      | Required |
-| ---------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | -------- |
-| `lang`     | `string` | The language of the code snippet. Can be one from this [list](https://github.com/github-linguist/linguist/blob/master/lib/linguist/popular.yml). | Yes      |
-| `label`    | `string` | Code sample label, for example, `Node` or `Python3`. The `lang` value is used by default.                                                        | No       |
-| `source`   | `string` | The code sample source code. In this case, the SDK usage snippet.                                                                                | Yes      |
+<Table 
+  data={[
+    { fieldName: "lang", type: "string", description: "The language of the code snippet. Can be one from this [list](https://github.com/github-linguist/linguist/blob/master/lib/linguist/popular.yml).", required: "Yes" },
+    { fieldName: "label", type: "string", description: "Code sample label, for example, `Node` or `Python3`. The `lang` value is used by default.", required: "No" },
+    { fieldName: "source", type: "string", description: "The code sample source code. In this case, the SDK usage snippet.", required: "Yes" }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" },
+    { key: "required", header: "Required" }
+  ]}
+/>
 
 Documentation providers that support `x-codeSamples` include but are not limited to:
 
