--- a/openapi/arazzo.mdx
+++ b/openapi/arazzo.mdx
@@ -19,7 +19,7 @@ Arazzo descriptions are useful for:
 
 An Arazzo description is a JSON or YAML document that follows the structure defined by the Arazzo Specification.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 #### !!steps `arazzo`
 
@@ -75,7 +75,7 @@ An array of [workflow objects](#workflow-object) defining the workflows. The arr
 # !focus(16:156)
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 This table shows all fields at the root of the Arazzo Specification:
 
