--- a/openapi/errors.mdx
+++ b/openapi/errors.mdx
@@ -1,5 +1,3 @@
-
-
 # Errors in OpenAPI
 
 In OpenAPI, errors are typically represented as [responses](/openapi/paths/operations/responses#response-object-in-openapi), with a clear body response structure and a status code in the range of **400-599** describing the error.
@@ -14,16 +12,22 @@ The status code and response body are the key elements of an error response.
 
 HTTP response status codes play a vital role in describing the nature of errors. You should use appropriate codes to indicate the error type:
 
-| Status code | Meaning                | Example use case                      |
-|-------------|------------------------|---------------------------------------|
-| `400`       | Bad Request            | Input validation failed               |
-| `401`       | Unauthorized           | Missing or invalid authentication     |
-| `403`       | Forbidden              | Insufficient permissions              |
-| `404`       | Not Found              | Resource does not exist               |
-| `413`       | Payload Too Large      | File or request body exceeds limit    |
-| `415`       | Unsupported Media Type | Invalid content type (for example, text or XML) |
-| `500`       | Internal Server Error  | Unexpected server-side issue          |
-
+<Table 
+  data={[
+    { statusCode: "400", meaning: "Bad Request", exampleUseCase: "Input validation failed" },
+    { statusCode: "401", meaning: "Unauthorized", exampleUseCase: "Missing or invalid authentication" },
+    { statusCode: "403", meaning: "Forbidden", exampleUseCase: "Insufficient permissions" },
+    { statusCode: "404", meaning: "Not Found", exampleUseCase: "Resource does not exist" },
+    { statusCode: "413", meaning: "Payload Too Large", exampleUseCase: "File or request body exceeds limit" },
+    { statusCode: "415", meaning: "Unsupported Media Type", exampleUseCase: "Invalid content type (for example, text or XML)" },
+    { statusCode: "500", meaning: "Internal Server Error", exampleUseCase: "Unexpected server-side issue" }
+  ]}
+  columns={[
+    { key: "statusCode", header: "Status code" },
+    { key: "meaning", header: "Meaning" },
+    { key: "exampleUseCase", header: "Example use case" }
+  ]}
+/>
 
 <Callout title="HTTP response status codes" type="info">
   You can find a comprehensive list of HTTP response status codes for client errors (400-499) [here](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status#client_error_responses) and server errors (500-599) [here](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status#server_error_responses).
