--- a/openapi/frameworks/django.mdx
+++ b/openapi/frameworks/django.mdx
@@ -58,7 +58,7 @@ To better understand the process of generating an OpenAPI document with Django, 
 
 ### Models, serializers, and views
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -116,7 +116,7 @@ In the `books_project/urls.py` file, the router is included in the main Django U
 ```
 
 
-</ScrollyCoding>
+</Spotlight>
 
 
 
@@ -130,7 +130,7 @@ Run the following to install `drf-spectacular`:
 pip install drf-spectacular
 ```
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -176,7 +176,7 @@ In the `books_project/urls.py` file, the new OpenAPI schema and Swagger UI endpo
 ```
 
 
-</ScrollyCoding>
+</Spotlight>
 
 
 ### Apply migrations and run the server
@@ -209,7 +209,7 @@ Now that we understand our Django REST API, we can generate the OpenAPI document
 python manage.py spectacular --file openapi.yaml
 ```
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -274,7 +274,7 @@ These same `Book` parameters are reflected in the OpenAPI document:
 !from ./assets/django/openapi.yaml.txt
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 
 ## OpenAPI document customization
@@ -288,7 +288,7 @@ The `drf-spectacular` package provides decorators to directly modify the schema 
 - `@extend_schema_view`: Allows customization of all methods in a viewset.
 - `@extend_schema`: Allows customization of individual methods or actions.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -430,7 +430,7 @@ It is also possible to apply the retries setting to specific views or viewsets u
 ```
 
 
-</ScrollyCoding>
+</Spotlight>
 
 In summary, the `drf-spectacular` package provides a variety of ways to customize the OpenAPI document for your Django REST API. You can use decorators, tags, descriptions, parameters, fields, examples, and global settings to modify the document according to your requirements.
 
@@ -470,7 +470,7 @@ After creating your SDK with Speakeasy, you will find a new directory containing
 
 These examples assume a Python SDK named `books-python` was generated from the example Django project above. Edit any paths to reflect your environment if you want to follow in your own project.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -547,7 +547,7 @@ You can also find a method implementing the retries strategy:
 ```
 
 
-</ScrollyCoding>
+</Spotlight>
 
 
 ## Summary
