--- a/openapi/frameworks/fastapi.mdx
+++ b/openapi/frameworks/fastapi.mdx
@@ -62,7 +62,7 @@ Let's get started with the basics – some things you probably do already.
 
 These straightforward examples are trivial but will help you better understand the three steps in the automation pipeline: How FastAPI setup influences OpenAPI documents, which, in turn, influences SDK code.
 
-<ScrollyCoding className="ch-scrollycoding-full-height">
+<Spotlight>
 
 ## !!steps Add a list of servers to your FastAPI app
 
@@ -835,7 +835,7 @@ def list_burgers(key: str = Depends(header_scheme)):
 
 Now when generating the OpenAPI document, the API key authentication scheme will be included and only required for the listing on the `/burger/` endpoint.
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Summary
 
