--- a/openapi/frameworks/grpc-gateway.mdx
+++ b/openapi/frameworks/grpc-gateway.mdx
@@ -158,7 +158,7 @@ By modifying the protobuf service definition, we can customize the generated Ope
 
 We'll start with a basic example and add options to enhance the schema.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps Meet the Speakeasy Bar Protobuf Service
 
@@ -382,7 +382,7 @@ In the code example, we added the `x-speakeasy-retries` extension to the `GetDri
 !from ./assets/grpc/speakeasy.openapi.json
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Create an SDK With Speakeasy
 
