--- a/openapi/frameworks/laravel.mdx
+++ b/openapi/frameworks/laravel.mdx
@@ -383,7 +383,7 @@ Let’s modify our Laravel code to get some useful information about our `200` r
 
 To achieve this we will use PHP 8.0 Attributes to add additional information to our controllers, this will use the built in Laravel ecosystem to make a request, inspect the information, and write the specification for you. Let’s have a look at our controller:
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps Adding tags
 
@@ -448,7 +448,7 @@ Finally, we want to add `#[ResponseFromApiResource]` to let Scribe know how this
 // !focus(12)
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 Now let’s see the OpenAPI spec:
 
