--- a/openapi/frameworks/springboot.mdx
+++ b/openapi/frameworks/springboot.mdx
@@ -67,7 +67,7 @@ All the code in this step can be found in our example application.
 
 Open the `src/main/java/com/bookstore/BookstoreApplication.java` file in your text editor to see where to begin when adding OpenAPI annotations to your project.
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -226,7 +226,7 @@ Use the `@Parameter` annotation to describe the requirements for input parameter
 ```
 
 
-</ScrollyCoding>
+</Spotlight>
 
 
 ## Step 5: View the generated OpenAPI document
@@ -249,7 +249,7 @@ curl http://localhost:8080/api-docs.yaml -o openapi.yaml
 This command saves the OpenAPI document as `openapi.yaml` in your current directory.
 
 
-<ScrollyCoding fullHeight>
+<Spotlight>
 
 
 ## !!steps
@@ -364,7 +364,7 @@ The `@Parameter` annotation documents the path parameter.
 ```
 
 
-</ScrollyCoding>
+</Spotlight>
 
 # Create an SDK from the OpenAPI document
 
