--- a/openapi/frameworks/zod.mdx
+++ b/openapi/frameworks/zod.mdx
@@ -57,7 +57,7 @@ Use npm to install `zod-openapi`:
 npm install zod-openapi yaml
 ```
 
-<ScrollyCoding className="ch-scrollycoding-full-height" fullHeight>
+<Spotlight>
 ### !!steps 3. Create Your App's First Zod Schema
 
 Save this TypeScript code in a new file called `index.ts`.
@@ -1235,7 +1235,7 @@ components:
 npx ts-node index.ts
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ### 19. Generate an SDK
 
