--- a/openapi/index.mdx
+++ b/openapi/index.mdx
@@ -32,7 +32,7 @@ import { Faq } from "~/features/pricing/recipes";
 
 ### OpenAPI Overview
 
-<ScrollyCoding>
+<Spotlight>
 
 ## !!steps \`openapi`
 
@@ -149,7 +149,7 @@ Contains an optional list of reusable schemas that can be referenced from other 
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
 <Separator className="opacity-10" />
 
