--- a/openapi/overlays.mdx
+++ b/openapi/overlays.mdx
@@ -1,6 +1,3 @@
-
-
-
 # OpenAPI Overlays
 
 Overlays allow us to modify an existing OpenAPI document without directly editing the original document. An overlay is a separate document that contains instructions for updating the original OpenAPI document.
@@ -21,11 +18,18 @@ Overlays are useful for:
 
 An Overlay document is a separate document from the OpenAPI document it modifies. It contains an ordered list of [Action Objects](#action-object) that describe the modifications to be made to the original OpenAPI document.
 
-<ScrollyCoding>
+<Spotlight>
 ## !!steps `overlay`
-| Field Name | Type     | Required  |
-|------------|----------|-----------|
-| `overlay`  | String   | ✅ |
+<Table 
+  data={[
+    { fieldName: "`overlay`", type: "String", required: "✅" }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" }
+  ]}
+/>
 
 The version of the Overlay Specification that the document uses. The value must be a supported [version number](#overlay-specification-versions)
 
@@ -173,17 +177,23 @@ If `true`, the objects referenced by the `target` are removed from the original 
 
 ---
 
-</ScrollyCoding>
+</Spotlight>
 
-| Field Name | Type                                | Required | Description                                                                                                                                                                                      |
-| ---------- | ----------------------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `overlay`  | String                              | ✅       | The version of the Overlay Specification that the document uses. The value must be a supported [version number](#overlay-specification-versions).                                                |
-| `info`     | [Info Object](#overlay-info-object) | ✅       | Provides metadata about the Overlay document.                                                                                                                                                    |
-| `extends`  | String                              |          | A URL to the original OpenAPI document this overlay applies to.                                                                                                                                  |
-| `actions`  | [[Action Object](#action-object)]   | ✅       | An ordered list of [Action Objects](#action-object) to be applied to the original OpenAPI document. The list must contain at least one [Action Object](#action-object).                          |
-| `x-*`      | [Extensions](#extensions)           |          | Any number of extension fields can be added to the Overlay document that can be used by tooling and vendors. When provided at this level, the extensions generally apply to the entire document. |
-
-The `extends` field is optional. If not provided, it is the responsibility of tooling to determine which OpenAPI documents the overlay should be applied to.
+<Table 
+  data={[
+    { fieldName: "overlay", type: "String", required: "✅", description: "The version of the Overlay Specification that the document uses. The value must be a supported [version number](#overlay-specification-versions)." },
+    { fieldName: "info", type: "[Info Object](#overlay-info-object)", required: "✅", description: "Provides metadata about the Overlay document." },
+    { fieldName: "extends", type: "String", required: "", description: "A URL to the original OpenAPI document this overlay applies to." },
+    { fieldName: "actions", type: "[[Action Object](#action-object)]", required: "✅", description: "An ordered list of [Action Objects](#action-object) to be applied to the original OpenAPI document. The list must contain at least one [Action Object](#action-object)." },
+    { fieldName: "x-*", type: "[Extensions](#extensions)", required: "", description: "Any number of extension fields can be added to the Overlay document that can be used by tooling and vendors. When provided at this level, they apply to the entire Overlay document." }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Overlay Specification Versions
 
@@ -195,11 +205,19 @@ The current version of the Overlay Specification is `1.0.0`, but keep in mind th
 
 Provides metadata about the Overlay document.
 
-| Field Name | Type   | Required | Description                                                                          |
-| ---------- | ------ | -------- | ------------------------------------------------------------------------------------ |
-| `title`    | String | ✅       | A human-readable title describing the purpose of the Overlay document.               |
-| `version`  | String | ✅       | A version identifier indicating the version of the Overlay document.                 |
-| `x-*`      | Any    |          | Any number of extension fields can be added that can be used by tooling and vendors. |
+<Table 
+  data={[
+    { fieldName: "title", type: "String", required: "✅", description: "A human-readable title describing the purpose of the Overlay document." },
+    { fieldName: "version", type: "String", required: "✅", description: "A version identifier indicating the version of the Overlay document." },
+    { fieldName: "x-*", type: "Any", required: "", description: "Any number of extension fields can be added that can be used by tooling and vendors." }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Action Object in OpenAPI
 
@@ -374,3 +392,63 @@ actions:
 <Callout title="Overlay Creation Tool" type="info">
   Check out <a href="https://overlay.speakeasy.com/" target="_blank" rel="noopener noreferrer">overlay.speakeasy.com</a> to create and edit your overlays visually.
 </Callout>
+
+<Table 
+  data={[
+    { fieldName: "version", type: "String", required: "" }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" }
+  ]}
+/>
+
+<Table 
+  data={[
+    { fieldName: "actions", type: "[[Action Object](#action-object)]", required: "✅" }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" }
+  ]}
+/>
+
+<Table 
+  data={[
+    { fieldName: "target", type: "String", required: "✅", description: "A [JSONPath](https://datatracker.ietf.org/wg/jsonpath/documents/) expression that specifies the location in the original OpenAPI document where the change should be applied." },
+    { fieldName: "description", type: "String", required: "", description: "A description of the action. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description." },
+    { fieldName: "update", type: "Any", required: "", description: "An object containing the properties and values to be merged with the objects referenced by the `target`. This field has no effect if the `remove` field is `true`." },
+    { fieldName: "remove", type: "Boolean", required: "", description: "If `true`, the objects referenced by the `target` are removed from the original document. If `false` or not provided, the objects are not removed. This field takes precedence over the `update` field." },
+    { fieldName: "x-*", type: "Any", required: "", description: "Any number of extension fields can be added to the Action Object that can be used by tooling and vendors." }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
+
+<Table 
+  data={[
+    { jsonpathExpression: "$.info.title", description: "Selects the `title` field of the `info` object." },
+    { jsonpathExpression: "$.servers[0].url", description: "Selects the `url` field of the first server in the `servers` array." }
+  ]}
+  columns={[
+    { key: "jsonpathExpression", header: "JSONPath Expression" },
+    { key: "description", header: "Description" }
+  ]}
+/>
+
+<Table 
+  data={[
+    { fieldName: "`overlay`", type: "String", required: "✅" }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" }
+  ]}
+/>
