--- a/openapi/security.mdx
+++ b/openapi/security.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Security 
+# OpenAPI Security
 
-When designing an API, it is important to consider the security requirements for accessing the API. OpenAPI 3.1 provides a way to define security requirements at both the document and operation levels. 
+When designing an API, it is important to consider the security requirements for accessing the API. OpenAPI 3.1 provides a way to define security requirements at both the document and operation levels.
 
 Security requirements are defined as a list of [Security Requirement Objects](/openapi/security#security-requirement-object) in the `security` section. Each object in the list represents a set of security requirements that must be satisfied to access the API.
 
@@ -31,9 +31,17 @@ In valid OpenAPI 3.1, the [Security Requirement Objects](/openapi/security#secur
 
 A Security Requirement Object defines a map of security scheme names to [scopes or roles](#security-requirement-scopes-or-roles) that are required to access the API. The names **_must_** match the names of [Security Scheme Objects](/openapi/security/security-schemes) defined in the [Components Object](/openapi/components) under the `securitySchemes` field.
 
-| Field                  |      Type      | Required | Description                                                                                                                                                                                                                                                                                                                                                  |
-| ---------------------- | :------------: | :------: | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `{securitySchemeName}` | List\<string\> |          | A list of [scopes or roles](#security-requirement-scopes-or-roles) required for the security scheme. If the security scheme type is `oauth2` or `openIdConnect`, this is a list of scope names required by the API consumer to be able to access or use the API. For any other type, this could contain a list of roles or similar required for the API consumer to obtain to authenticate with the API. |
+<Table
+  data={[
+    { field: "{securitySchemeName}", type: "List<string>", required: "", description: "A list of [scopes or roles](#security-requirement-scopes-or-roles) required for the security scheme. If the security scheme type is `oauth2` or `openIdConnect`." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Supported Security Schemes in OpenAPI
 
@@ -81,7 +89,7 @@ security:
   - {}
 ```
 
-### Adding Optional Security to a Specific Operation 
+### Adding Optional Security to a Specific Operation
 
 Security can be made _optional_ for a specific operation by providing an empty object (`{}`) in the list of security requirements.
 
