--- a/openapi/server-sent-events.mdx
+++ b/openapi/server-sent-events.mdx
@@ -4,16 +4,23 @@ Server-sent events (SSE) allow servers to push real-time updates to clients over
 
 The following table summarizes the main differences between SSE and WebSockets.
 
-| Feature                 | Server-sent events (SSE)                                               | WebSockets                                              |
-|-------------------------|------------------------------------------------------------------------|---------------------------------------------------------|
-| **Connection**          | Persistent, maintained by the client                                   | Persistent, maintained by both client and server        |
-| **Direction**           | One-way: Server to Client                                              | Two-way: Bidirectional communication                    |
-| **Initiator**           | Client initiates the connection                                        | Client initiates a WebSocket handshake                  |
-| **Use case**            | Real-time updates (for example, stock prices)                                 | Interactive applications (e.g., chat, gaming)           |
-| **Data push mechanism** | Server streams events continuously                                     | Both server and client can push messages                |
-| **Protocol**            | Single HTTP connection (`text/event-stream`)                             | WebSocket protocol (`ws://` or `wss://`)                    |
-| **Client role**         | Opens and maintains the connection                                     | Maintains and interacts with the connection             |
-| **Reconnection**        | Handled by the browser or client-side code using the `EventSource` API | Managed by custom reconnection logic in the application |
+<Table 
+  data={[
+    { feature: "Connection", sse: "Persistent, maintained by the client", websockets: "Persistent, maintained by both client and server" },
+    { feature: "Direction", sse: "One-way: Server to Client", websockets: "Two-way: Bidirectional communication" },
+    { feature: "Initiator", sse: "Client initiates the connection", websockets: "Client initiates a WebSocket handshake" },
+    { feature: "Use case", sse: "Real-time updates (for example, stock prices)", websockets: "Interactive applications (e.g., chat, gaming)" },
+    { feature: "Data push mechanism", sse: "Server streams events continuously", websockets: "Both server and client can push messages" },
+    { feature: "Protocol", sse: "Single HTTP connection (`text/event-stream`)", websockets: "WebSocket protocol (`ws://` or `wss://`)" },
+    { feature: "Client role", sse: "Opens and maintains the connection", websockets: "Maintains and interacts with the connection" },
+    { feature: "Reconnection", sse: "Handled by the browser or client-side code using the `EventSource` API", websockets: "Managed by custom reconnection logic in the application" }
+  ]}
+  columns={[
+    { key: "feature", header: "Feature" },
+    { key: "sse", header: "Server-sent events (SSE)" },
+    { key: "websockets", header: "WebSockets" }
+  ]}
+/>
 
 SSE is ideal for simple, efficient, one-way server-to-client communication scenarios. The WebSocket protocol is better suited to applications that require interactive, low-latency, two-way communication between the client and server.
 
