--- a/blog/open-source-pledge-2024/index.mdx
+++ b/blog/open-source-pledge-2024/index.mdx
@@ -23,19 +23,26 @@ We donate a total of $3,523 per month ($42,276 per year) to OSS projects which a
 
 Here's a breakdown of our monthly sponsorships:
 
-| Project | Maintainer | Monthly Contribution |
-|---------|------------|----------------------|
-| [libopenapi](https://github.com/pb33f/libopenapi) | [quobix](https://github.com/daveshanley) | $500 |
-| [nextra](https://github.com/shuding/nextra) | [dimaMachina](https://github.com/dimaMachina) | $100 |
-| [pydantic](https://github.com/pydantic/pydantic) | [pydantic](https://github.com/pydantic) | $500 |
-| [codehike](https://github.com/code-hike/codehike) | [pomber](https://github.com/pomber) | $299 |
-| [zod](https://github.com/colinhacks/zod) | [colinhacks](https://github.com/colinhacks) | $499 |
-| [openapi-codegen](https://github.com/oapi-codegen/oapi-codegen) | [jamietanna](https://github.com/jamietanna) | $150 |
-| [openapi-typescript](https://github.com/openapi-ts/openapi-typescript) | [drwpow](https://github.com/drwpow) | $250 |
-| [FastAPI](https://github.com/fastapi/fastapi) | [tiangolo](https://github.com/tiangolo) | $250 |
-| [Goa](https://github.com/goadesign/goa) | [raphael](https://github.com/raphael) | $125 |
-| [HTTPX](https://github.com/encode/httpx) | [Encode](https://github.com/encode) | $400 |
-| [OpenAPI](https://github.com/OAI/OpenAPI-Specification) | [handrews](https://github.com/handrews) | $50 |
+<Table
+  data={[
+    { project: "[libopenapi](https://github.com/pb33f/libopenapi)", maintainer: "[quobix](https://github.com/daveshanley)", monthlyContribution: "$500" },
+    { project: "[nextra](https://github.com/shuding/nextra)", maintainer: "[dimaMachina](https://github.com/dimaMachina)", monthlyContribution: "$100" },
+    { project: "[pydantic](https://github.com/pydantic/pydantic)", maintainer: "[pydantic](https://github.com/pydantic)", monthlyContribution: "$500" },
+    { project: "[codehike](https://github.com/code-hike/codehike)", maintainer: "[pomber](https://github.com/pomber)", monthlyContribution: "$299" },
+    { project: "[zod](https://github.com/colinhacks/zod)", maintainer: "[colinhacks](https://github.com/colinhacks)", monthlyContribution: "$499" },
+    { project: "[openapi-codegen](https://github.com/oapi-codegen/oapi-codegen)", maintainer: "[jamietanna](https://github.com/jamietanna)", monthlyContribution: "$150" },
+    { project: "[openapi-typescript](https://github.com/openapi-ts/openapi-typescript)", maintainer: "[drwpow](https://github.com/drwpow)", monthlyContribution: "$250" },
+    { project: "[FastAPI](https://github.com/fastapi/fastapi)", maintainer: "[tiangolo](https://github.com/tiangolo)", monthlyContribution: "$250" },
+    { project: "[Goa](https://github.com/goadesign/goa)", maintainer: "[raphael](https://github.com/raphael)", monthlyContribution: "$125" },
+    { project: "[HTTPX](https://github.com/encode/httpx)", maintainer: "[Encode](https://github.com/encode)", monthlyContribution: "$400" },
+    { project: "[OpenAPI](https://github.com/OAI/OpenAPI-Specification)", maintainer: "[handrews](https://github.com/handrews)", monthlyContribution: "$50" }
+  ]}
+  columns={[
+    { key: "project", header: "Project" },
+    { key: "maintainer", header: "Maintainer" },
+    { key: "monthlyContribution", header: "Monthly Contribution" }
+  ]}
+/>
 
 ## Why we support open source
 
