--- a/docs/enterprise-support.mdx
+++ b/docs/enterprise-support.mdx
@@ -25,11 +25,20 @@ Speakeasy is committed to providing rapid response and resolution to any issues 
 * Prioritized ticket resolution based on severity (P0, P1, P2 SLAs).
 * SLAs for question response and ticket triage are detailed below.
 
-| Priority level | Definition | SLA | Initiation | Credits |
-| -------- | -------- | -------- | -------- | -------- |
-| P0 | Generated Terraform providers or SDKs do not work (severe functional issues) | First response within 1 hour | E-mail support@speakeasy.com | 5% of the fee applicable in the month per incident of SLA breach |
-| P1 | Generated Terraform providers or SDKs exhibit severe ergonomic or functional issues that significantly impact customers, with no available workaround | First response within 3 hours | E-mail support@speakeasy.com | 2% of the fee applicable in the month per incident of SLA breach |
-| P2 | Generated Terraform providers or SDKs have bugs with minor ergonomic impact on customers, feature requests | Prioritize as part of standard Speakeasy development practice, visible in public roadmap | E-mail support@speakeasy.com | n/a |
+<Table 
+  data={[
+    { priorityLevel: "P0", definition: "Generated Terraform providers or SDKs do not work (severe functional issues)", sla: "First response within 1 hour", initiation: "E-mail support@speakeasy.com", credits: "5% of the fee applicable in the month per incident" },
+    { priorityLevel: "P1", definition: "Generated Terraform providers or SDKs exhibit severe ergonomic or functional issues that significantly impact customers, with no available workaround", sla: "First response within 3 hours", initiation: "E-mail support@speakeasy.com", credits: "3% of the fee applicable in the month per incident" },
+    { priorityLevel: "P2", definition: "Generated Terraform providers or SDKs have bugs with minor ergonomic impact on customers, feature requests", sla: "Prioritize as part of standard Speakeasy development practice, visible in public roadmap", initiation: "E-mail support@speakeasy.com", credits: "1% of the fee applicable in the month per incident" }
+  ]}
+  columns={[
+    { key: "priorityLevel", header: "Priority level" },
+    { key: "definition", header: "Definition" },
+    { key: "sla", header: "SLA" },
+    { key: "initiation", header: "Initiation" },
+    { key: "credits", header: "Credits" }
+  ]}
+/>
 
 
 ## 3. Uptime SLAs
