--- a/docs/languages/maturity.mdx
+++ b/docs/languages/maturity.mdx
@@ -11,38 +11,56 @@ Speakeasy creates and maintains SDKs (generation targets) for your API. This pag
 
 ## Maturity levels
 
-
-| Maturity level         | Description                                                                                                                      |
-|------------------------|----------------------------------------------------------------------------------------------------------------------------------|
-| **Alpha**              | An early preview of upcoming features intended for gathering feedback. Alpha versions are less complete and likely to be unstable, with frequent updates and significant changes expected. |
-| **Beta**               | A pre-release version that includes many features of GA but is still subject to significant modifications based on user feedback. The interface is considered stable enough for general usage and wide coverage of OpenAPI is available. |
-| **General availability (GA)** | A fully supported release that includes all functionalities altering the type interface from OpenAPI Specification keywords (for example, [`oneOf`](/docs/customize-sdks/oneof-schemas), [`anyOf`](/openapi/schemas/objects/polymorphism), [`allOf`](/openapi/schemas/objects/polymorphism), [`const`](/docs/customize-sdks/types#const), and [`default`](/docs/customize-sdks/types#default)). GA versions follow semantic versioning (SemVer) and maintain interface stability for non-breaking OpenAPI changes unless you opt into such changes. |
+<Table 
+  data={[
+    { level: "Alpha", description: "An early preview of upcoming features intended for gathering feedback. Alpha versions are less complete and likely to be unstable, with frequent updates and significant changes." },
+    { level: "Beta", description: "A pre-release version that includes many features of GA but is still subject to significant modifications based on user feedback. The interface is considered stable enough for testing." },
+    { level: "General availability (GA)", description: "A fully supported release that includes all functionalities altering the type interface from OpenAPI Specification keywords (for example, [`oneOf`](/docs/customize-sdks/oneof))." }
+  ]}
+  columns={[
+    { key: "level", header: "Maturity level" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Feature support levels
 
 Feature support levels indicate the extent of additional functionalities provided.
 
-| Feature support level | Description                                                                                                                                                                                                                              |
-|-----------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Gold**              | Indicates full feature support, including all opt-in enhancements such as [Pagination](/docs/customize-sdks/pagination), [Retries](/docs/customize-sdks/retries), [Server Templates](/docs/customize-sdks/servers), [Hooks](/docs/customize/code/sdk-hooks), [OAuth 2.0 Client Credentials](/docs/customize/authentication/oauth#client-credentials-flow), and more. A target can be in Beta and still have Gold-level feature support. |
-| **Level 2**           | Extends the type interface by synthesizing multiple API calls into single interactions. This is achieved using specified [links](https://spec.openapis.org/oas/v3.1.0#link-object) (hyperlinks between API operations as defined by the OpenAPI Specification), [Arazzo workflows](https://github.com/OAI/Arazzo-Specification/blob/main/versions/1.0.0.md) (predefined sequences of API calls), and [Speakeasy extensions](/docs/terraform) (custom enhancements for better API integration). |
-| **Level 1**           | Provides essential functionalities and basic support without the advanced features found in Gold or Level 2. Targets with Standard support are stable and reliable but do not include all opt-in enhancements or extended interface capabilities. |
+<Table 
+  data={[
+    { level: "Gold", description: "Indicates full feature support, including all opt-in enhancements such as [Pagination](/docs/customize-sdks/pagination), [Retries](/docs/customize-sdks/retries), [Server Templates](/docs/customize-sdks/server-templates), and [OneOf](/docs/customize-sdks/oneof)." },
+    { level: "Level 2", description: "Extends the type interface by synthesizing multiple API calls into single interactions. This is achieved using specified [links](https://spec.openapis.org/oas/v3.1.0#link-object) in the OpenAPI spec." },
+    { level: "Level 1", description: "Provides essential functionalities and basic support without the advanced features found in Gold or Level 2. Targets with Standard support are stable and reliable but do not include advanced features." }
+  ]}
+  columns={[
+    { key: "level", header: "Feature support level" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Target language support
 
-| Target      | Maturity level | Feature support level |
-|-------------|----------------|-----------------------|
-| [TypeScript](/docs/languages/typescript/methodology-ts) | GA | Gold |
-| [Go](/docs/languages/golang/methodology-go) | GA | Gold |
-| [Java](/docs/languages/java/methodology-java) | GA | Gold |
-| [Python - Pydantic & Async](/docs/languages/python/methodology-python) | GA | Gold |
-| [C#](/docs/languages/csharp/methodology-csharp) | GA | Gold |
-| [Terraform](/docs/create-terraform) | GA | Level 2 |
-| [PHP](/docs/languages/php/methodology-php) | GA | Level 1 |
-| [Unity](/docs/languages/unity/methodology-unity) | Beta | Level 1 |
-| [PHP](/docs/languages/php/methodology-php) | Beta | Level 1 |
-| [Ruby](/docs/languages/ruby/methodology-ruby) | Alpha | Level 1 |
-| Postman | Alpha | Level 1 |
+<Table 
+  data={[
+    { target: "[TypeScript](/docs/languages/typescript/methodology-ts)", maturity: "GA", support: "Gold" },
+    { target: "[Go](/docs/languages/golang/methodology-go)", maturity: "GA", support: "Gold" },
+    { target: "[Java](/docs/languages/java/methodology-java)", maturity: "GA", support: "Gold" },
+    { target: "[Python - Pydantic & Async](/docs/languages/python/methodology-python)", maturity: "GA", support: "Gold" },
+    { target: "[C#](/docs/languages/csharp/methodology-csharp)", maturity: "GA", support: "Gold" },
+    { target: "[Terraform](/docs/create-terraform)", maturity: "GA", support: "Level 2" },
+    { target: "[PHP](/docs/languages/php/methodology-php)", maturity: "GA", support: "Level 1" },
+    { target: "[Unity](/docs/languages/unity/methodology-unity)", maturity: "Beta", support: "Level 1" },
+    { target: "[PHP](/docs/languages/php/methodology-php)", maturity: "Beta", support: "Level 1" },
+    { target: "[Ruby](/docs/languages/ruby/methodology-ruby)", maturity: "Alpha", support: "Level 1" },
+    { target: "Postman", maturity: "Alpha", support: "Level 1" }
+  ]}
+  columns={[
+    { key: "target", header: "Target" },
+    { key: "maturity", header: "Maturity level" },
+    { key: "support", header: "Feature support level" }
+  ]}
+/>
 
 ## Deprecated generation targets
 
