--- a/docs/speakeasy-reference/extensions.mdx
+++ b/docs/speakeasy-reference/extensions.mdx
@@ -6,28 +6,34 @@ slug: "/speakeasy-extensions"
 
 # List of Speakeasy extensions
 
-| Extension                                 | Description                                                                                                                                                                                                                                        | Docs                                                                         |
-| ----------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
-| `x-speakeasy-name-override`               | Use it globally to change method names or inline to change the name of a method, parameter, or class.                                                                                                                                             | [Full docs](/docs/methods/#change-method-names)               |
-| `x-speakeasy-group`                       | Allows you to define custom namespaces when adding this property to any operation in your OpenAPI spec. If added, the tags for that method will be ignored and the value of `x-speakeasy-group` will define the namespace for that method instead. | [Full docs](/docs/structure/namespaces/#define-namespaces-without-tags) |
-| `x-speakeasy-ignore`                      | Exclude certain methods from your SDK with this extension.                                                                                                                                                                                         | [Full docs](/docs/methods/#exclude-methods-from-sdk)          |
-| `x-speakeasy-enums`                       | Use this extension to control generated enum members by providing alternative names for each value in the enum field.                                                                                                                              | [Full docs](/docs/data-model/enums/#enum-member-names)                   |
-| `x-speakeasy-enum-format`                 | Customize how the enum type is generated for the schema, either `enum` for a native enum type or `union` for a union of values.                                                                                                                    | [Full docs](/docs/data-model/enums/#mixing-enum-formats)                 |
-| `x-speakeasy-retries`                     | Enable retries globally or on a per-request basis. A backoff strategy is applied to specified status codes.                                                                                                                                        | [Full docs](/docs/runtime/retries/#global-retries)                    |
-| `x-speakeasy-pagination`                  | Use to customize offset- or cursor-based pagination rules for each API operation.                                                                                                                                                                  | [Full docs](/docs/runtime/pagination/)                                |
-| `x-speakeasy-usage-example`               | Feature a method in your SDK's `README.md` by adding this property to the method.                                                                                                                                                                  | [Full docs](/docs/sdk-docs/#values)                           |
-| `x-speakeasy-example`                     | The OpenAPI specification doesn't allow example values for `securityscheme` property. Using this extension overcomes this limitation.                                                                                                              | [Full docs](/docs/sdk-docs/#securityschemes)                  |
-| `x-speakeasy-docs`                        | Configure comments that only show up in the SDK for a single language.                                                                                                                                                                             | [Full docs](/docs/sdk-docs/#per-sdk-comments)                 |
-| `x-speakeasy-globals`                     | Define parameters that can be configured globally on the main SDK instance and populated automatically for any operations that use them.                                                                                                           | [Full docs](/docs/globals/)                                   |
-| `x-speakeasy-globals-hidden`              | Define parameters that can be configured globally on the main SDK instance but are not shown in the matching method's signature.                                                                                                                   | [Full docs](/docs/globals/)                                   |
-| `x-speakeasy-errors`                      | Apply this extension at the level of `paths`, `path` `item`, or `operation` in the document to override the default error-handling behavior of the SDKs.                                                                                               | [Full docs](/docs/responses/errors/)                                    |
-| `x-speakeasy-error-message`               | Used to mark a field in an error response as containing the error message to use.                                                                                                                                                                       | [Full docs](/docs/responses/errors/)                                    |
-| `x-speakeasy-server-id`                   | Enable users to pick a server when instantiating the SDK. Use this extension to define an ID for each server in the `servers` array in the OpenAPI spec.                                                                                           | [Full docs](/docs/servers/#declare-multiple-servers)          |
-| `x-speakeasy-deprecation-message`         | Allows you to add a message to deprecated operations, parameters, and schemas.                                                                                                                                                                     | [Full docs](/docs/deprecations/)                              |
-| `x-speakeasy-deprecation-replacement`     | Allows you to specify an alternate operation to use in place of a deprecated operation.                                                                                                                                                            | [Full docs](/docs/deprecations/)                              |
-| `x-speakeasy-type-override`               | Use this to override a schema's type, forcing it to be handled as `any` to accept arbitrary data.                                                                                                                                                  | [Full docs](/docs/data-model/oneof-schemas)                                      |
-| `x-speakeasy-max-method-params`           | Allows you to set the maximum number of parameters that can be passed to a method. If the number of parameters exceeds this value, a request object will be used instead.                                                                          | [Full docs](/docs/methods#configuring-method-signatures)      |
-| `x-speakeasy-param-encoding-override`     | When set with a value of `allowReserved`, path parameters will appear in a request URL with reserved characters `:/?#[]@!$&'()*+,;=` unencoded. Currently in Java only.                                                                                               | [Full docs](/docs/languages/java/param-encoding)      |
+<Table 
+  data={[
+    { extension: "x-speakeasy-name-override", description: "Use it globally to change method names or inline to change the name of a method, parameter, or class." },
+    { extension: "x-speakeasy-group", description: "Allows you to define custom namespaces when adding this property to any operation in your OpenAPI spec. If added, the tags for that method will be ignored" },
+    { extension: "x-speakeasy-ignore", description: "Exclude certain methods from your SDK with this extension." },
+    { extension: "x-speakeasy-enums", description: "Use this extension to control generated enum members by providing alternative names for each value in the enum field." },
+    { extension: "x-speakeasy-enum-format", description: "Customize how the enum type is generated for the schema, either `enum` for a native enum type or `union` for a union of values." },
+    { extension: "x-speakeasy-retries", description: "Enable retries globally or on a per-request basis. A backoff strategy is applied to specified status codes." },
+    { extension: "x-speakeasy-pagination", description: "Use to customize offset- or cursor-based pagination rules for each API operation." },
+    { extension: "x-speakeasy-usage-example", description: "Feature a method in your SDK's `README.md` by adding this property to the method." },
+    { extension: "x-speakeasy-example", description: "The OpenAPI specification doesn't allow example values for `securityscheme` property. Using this extension overcomes this limitation." },
+    { extension: "x-speakeasy-docs", description: "Configure comments that only show up in the SDK for a single language." },
+    { extension: "x-speakeasy-globals", description: "Define parameters that can be configured globally on the main SDK instance and populated automatically for any operations that use them." },
+    { extension: "x-speakeasy-globals-hidden", description: "Define parameters that can be configured globally on the main SDK instance but are not shown in the matching method's signature." },
+    { extension: "x-speakeasy-errors", description: "Apply this extension at the level of `paths`, `path` `item`, or `operation` in the document to override the default error-handling behavior of the SDKs." },
+    { extension: "x-speakeasy-error-message", description: "Used to mark a field in an error response as containing the error message to use." },
+    { extension: "x-speakeasy-server-id", description: "Enable users to pick a server when instantiating the SDK. Use this extension to define an ID for each server in the `servers` array in the OpenAPI spec." },
+    { extension: "x-speakeasy-deprecation-message", description: "Allows you to add a message to deprecated operations, parameters, and schemas." },
+    { extension: "x-speakeasy-deprecation-replacement", description: "Allows you to specify an alternate operation to use in place of a deprecated operation." },
+    { extension: "x-speakeasy-type-override", description: "Use this to override a schema's type, forcing it to be handled as `any` to accept arbitrary data." },
+    { extension: "x-speakeasy-max-method-params", description: "Allows you to set the maximum number of parameters that can be passed to a method. If the number of parameters exceeds this value, a request object will be used." },
+    { extension: "x-speakeasy-param-encoding-override", description: "When set with a value of `allowReserved`, path parameters will appear in a request URL with reserved characters `:/?#[]@!$&'()*+,;=` unencoded." }
+  ]}
+  columns={[
+    { key: "extension", header: "Extension" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 You can use `x-speakeasy-extension-rewrite` to map any extension from the wider OpenAPI ecosystem or another vendor to the equivalent Speakeasy extension. This allows you to use your existing OpenAPI spec without needing to make changes to it, if necessary.
 
@@ -42,19 +48,25 @@ x-speakeasy-extension-rewrite:
 
 ## Terraform-specific extensions
 
-| Terraform extension                | Description                                                                                                                                                                                                                                | Docs                                                                    |
-| ----------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
-| `x-speakeasy-entity`                      |   Map API entities to Terraform resources by annotating objects in your OpenAPI spec as entities in the Terraform provider.                                                                                                          | [Full docs](/docs/terraform/entity-mapping)   |
-| `x-speakeasy-entity-operation`            |   Specify CRUD operations for API endpoints to map to Terraform resources, such as create, read, update, or delete operations.                                                                                                       | [Full docs](/docs/terraform/entity-mapping#specify-crud-operations-for-api-endpoints)         |
-| `x-speakeasy-name-override`               |   Remap API properties to Terraform attribute names while keeping API data handling intact.                                                                                                                                          | [Full docs](/docs/terraform/property-customization#remap-api-property-to-terraform) |
-| `x-speakeasy-param-sensitive`             |   Hide sensitive properties from Terraform console output for security purposes.                                                                                                                                                     | [Full docs](/docs/terraform/property-customization#hide-sensitive-properties)       |
-| `x-speakeasy-terraform-ignore`            |   Use this extension to exclude properties from Terraform state management.                                                                                                                                                          | [Full docs](/docs/terraform/property-customization#exclude-property-from-terraform-state) |
-| `x-speakeasy-type-override`               |   Allows the conversion of an attribute to a JSON string, accommodating dynamic structures in Terraform configurations.                                                                                                               | [Full docs](/docs/terraform/property-customization#allow-json-string-attributes)    |
-| `x-speakeasy-plan-validators`             |   Add custom validation logic to Terraform plan operations to ensure configurations meet predefined criteria before execution.                                                                                                       | [Full docs](/docs/terraform/validation-dependencies#add-custom-validation-logic)     |
-| `x-speakeasy-plan-modifiers`              |   Add custom plan modification logic to Terraform plan operations for advanced default values or resource replacement logic.                                                                                                          | [Full docs](/docs/terraform/plan-modification#add-custom-plan-modification)    |
-| `x-speakeasy-entity-version`              |   Specify the version of a Terraform resource to support state migrations for breaking changes.                                                                                                                                      | [Full docs](/docs/terraform/plan-modification#specify-resource-version)        |
-| `x-speakeasy-conflicts-with`              |   Indicate conflicting properties to prevent incompatible combinations in Terraform configurations.                                                                                                                                 | [Full docs](/docs/terraform/validation-dependencies#prevent-conflicting-attributes)  |
-| `x-speakeasy-param-readonly`              |   Mark properties as read-only in Terraform, preventing modifications by the user.                                                                                                                                                  | [Full docs](/docs/terraform/advanced-features#force-mark-property-as-read-only)|
-| `x-speakeasy-param-optional`              |   Force a property to be optional, overriding the required attribute in JSON Schema specifications.                                                                                                                                  | [Full docs](/docs/terraform/advanced-features#force-designate-a-property-as-optional) |
-| `x-speakeasy-param-force-new`             |   Force resource recreation in Terraform when certain property values change.                                                                                                                                                        | [Full docs](/docs/terraform/advanced-features#force-resource-recreation)       |
-| `x-speakeasy-terraform-plan-only`         |   Ensure that only values from the Terraform plan are used during updates, overriding prior state or default values.                                                                                                                 | [Full docs](/docs/terraform/advanced-features#update-behavior-for-plan-only-attributes)   |
+<Table 
+  data={[
+    { extension: "x-speakeasy-entity", description: "Map API entities to Terraform resources by annotating objects in your OpenAPI spec as entities in the Terraform provider." },
+    { extension: "x-speakeasy-entity-operation", description: "Specify CRUD operations for API endpoints to map to Terraform resources, such as create, read, update, or delete operations." },
+    { extension: "x-speakeasy-name-override", description: "Remap API properties to Terraform attribute names while keeping API data handling intact." },
+    { extension: "x-speakeasy-param-sensitive", description: "Hide sensitive properties from Terraform console output for security purposes." },
+    { extension: "x-speakeasy-terraform-ignore", description: "Use this extension to exclude properties from Terraform state management." },
+    { extension: "x-speakeasy-type-override", description: "Allows the conversion of an attribute to a JSON string, accommodating dynamic structures in Terraform configurations." },
+    { extension: "x-speakeasy-plan-validators", description: "Add custom validation logic to Terraform plan operations to ensure configurations meet predefined criteria before execution." },
+    { extension: "x-speakeasy-plan-modifiers", description: "Add custom plan modification logic to Terraform plan operations for advanced default values or resource replacement logic." },
+    { extension: "x-speakeasy-entity-version", description: "Specify the version of a Terraform resource to support state migrations for breaking changes." },
+    { extension: "x-speakeasy-conflicts-with", description: "Indicate conflicting properties to prevent incompatible combinations in Terraform configurations." },
+    { extension: "x-speakeasy-param-readonly", description: "Mark properties as read-only in Terraform, preventing modifications by the user." },
+    { extension: "x-speakeasy-param-optional", description: "Force a property to be optional, overriding the required attribute in JSON Schema specifications." },
+    { extension: "x-speakeasy-param-force-new", description: "Force resource recreation in Terraform when certain property values change." },
+    { extension: "x-speakeasy-terraform-plan-only", description: "Ensure that only values from the Terraform plan are used during updates, overriding prior state or default values." }
+  ]}
+  columns={[
+    { key: "extension", header: "Terraform extension" },
+    { key: "description", header: "Description" }
+  ]}
+/>
