--- a/docs/speakeasy-reference/generation/csharp-config.mdx
+++ b/docs/speakeasy-reference/generation/csharp-config.mdx
@@ -1,6 +1,3 @@
-
-
-
 # C# configuration options
 
  This section details the available configuration options for the C# SDK. All configuration is managed in the `gen.yaml` file under the `csharp` section.
@@ -15,12 +12,20 @@ csharp:
   dotnetVersion: "net8.0"
 ```
 
-| Name                   | Required | Default Value | Description                                                                                   |
-|------------------------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `version`              | true     | `0.0.1`       | The current version of the SDK.                                                               |
-| `packageName`           | true     | `openapi`     | The [NuGet package ID]( https://learn.microsoft.com/en-us/dotnet/standard/design-guidelines/names-of-namespaces), also used as the root namespace. |
-| `author`               | true     | `Speakeasy`   | The name of the [author](https://learn.microsoft.com/en-us/nuget/create-packages/package-authoring-best-practices#authors) of the published package. |
-| `dotnetVersion`               | false    | `dotnetVersion`   | The [version](https://learn.microsoft.com/en-us/dotnet/standard/frameworks) of .NET to target. net8.0 (default), net6.0 and net5.0 supported. |
+<Table 
+  data={[
+    { name: "version", required: "true", default: "0.0.1", description: "The current version of the SDK." },
+    { name: "packageName", required: "true", default: "openapi", description: "The [NuGet package ID](https://learn.microsoft.com/en-us/dotnet/standard/design-guidelines/names-of-namespaces), also used as the root namespace" },
+    { name: "author", required: "true", default: "Speakeasy", description: "The name of the [author](https://learn.microsoft.com/en-us/nuget/create-packages/package-authoring-best-practices#authors) of the published package." },
+    { name: "dotnetVersion", required: "false", default: "dotnetVersion", description: "The [version](https://learn.microsoft.com/en-us/dotnet/standard/frameworks) of .NET to target. net8.0 (default), net6.0 and net5.0 supported." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Publishing configuration
 ```yml
@@ -30,11 +35,19 @@ csharp:
   enableSourceLink: true
 ```
 
-| Name                | Required | Default Value | Description                                                                                               |
-|---------------------|----------|---------------|-----------------------------------------------------------------------------------------------------------|
-| `packageTags`        | false    | `""`          | Space-delimited list of tags and keywords used when searching for packages on NuGet.                       |
-| `includeDebugSymbols`| false    | `false`       | Whether to generate `.pdb` files and publish a `.snupkg` symbol package to NuGet.                          |
-| `enableSourceLink`   | false    | `false`       | Whether to produce and publish the package with Source Link. See [Source Link](https://github.com/dotnet/sourcelink). |
+<Table 
+  data={[
+    { name: "packageTags", required: "false", default: "\"\"", description: "Space-delimited list of tags and keywords used when searching for packages on NuGet." },
+    { name: "includeDebugSymbols", required: "false", default: "false", description: "Whether to generate `.pdb` files and publish a `.snupkg` symbol package to NuGet." },
+    { name: "enableSourceLink", required: "false", default: "false", description: "Whether to produce and publish the package with Source Link. See [Source Link](https://github.com/dotnet/sourcelink)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Additional dependencies
 
@@ -44,10 +57,18 @@ csharp:
     - "Newtonsoft.Json"
     - "RestSharp"
 ```
-| Name                        | Required | Default Value                | Description                                                                                   |
-|-----------------------------|----------|------------------------------|-----------------------------------------------------------------------------------------------|
-| `additionalDependencies`               | false    | `[]`                         | Add additional dependencies to include in the generated `.csproj` file.                           |
 
+<Table 
+  data={[
+    { name: "additionalDependencies", required: "false", default: "[]", description: "Add additional dependencies to include in the generated `.csproj` file." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Method and parameter management
 ```yml
@@ -55,9 +76,17 @@ csharp:
   maxMethodParams: 4
 ```
 
-| Name                       | Required | Default Value               | Description                                                                                   |
-|----------------------------|----------|-----------------------------|-----------------------------------------------------------------------------------------------|
-| `maxMethodParams`           | false    | `4`                         | Maximum number of parameters before an input object is created. `0` means input objects are always used. |
+<Table 
+  data={[
+    { name: "maxMethodParams", required: "false", default: "4", description: "Maximum number of parameters before an input object is created. `0` means input objects are always used." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Security configuration
 
@@ -65,9 +94,18 @@ csharp:
 csharp:
   flattenGlobalSecurity: true
 ```
-| Property                        | Description                                                                                              | Type     | Default   |
-|---------------------------------|----------------------------------------------------------------------------------------------------------|----------|-----------|
-| `flattenGlobalSecurity`         | Enables inline security credentials during SDK instantiation. **Recommended: `true`**                    | boolean  | `true`    |
+
+<Table 
+  data={[
+    { property: "flattenGlobalSecurity", description: "Enables inline security credentials during SDK instantiation. **Recommended: `true`**", type: "boolean", default: "true" }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "description", header: "Description" },
+    { key: "type", header: "Type" },
+    { key: "default", header: "Default" }
+  ]}
+/>
 
 ## Module management
 
@@ -76,10 +114,19 @@ csharp:
   sourceDirectory: "src"
   disableNamespacePascalCasingApr2024: false
 ```
-| Name                    | Required | Default Value     | Description                                                                                   |
-|-------------------------|----------|-------------------|-----------------------------------------------------------------------------------------------|
-| `sourceDirectory`        | false    | `src`            | The name of the source directory.                                     |
-| `disableNamespacePascalCasingApr2024`    | false    | `false`        | Whether to disable Pascal Casing sanitization on the `packageName` when setting the root namespace and NuGet package ID.      |
+
+<Table 
+  data={[
+    { name: "sourceDirectory", required: "false", default: "src", description: "The name of the source directory." },
+    { name: "disableNamespacePascalCasingApr2024", required: "false", default: "false", description: "Whether to disable Pascal Casing sanitization on the `packageName` when setting the root namespace and NuGet package ID." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Import management
 
@@ -94,20 +141,36 @@ csharp:
       shared: models/components
       webhooks: models/webhooks
 ```
-| Field   | Required | Default Value | Description                                                                                   |
-|---------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `option`| false    | `"openapi"`   | Defines the type of import strategy. Typically set to `"openapi"`, indicating that the structure is based on the OpenAPI document. |
-| `paths` | false    | `{}`          | Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from. |
+
+<Table 
+  data={[
+    { field: "option", required: "false", default: "\"openapi\"", description: "Defines the type of import strategy. Typically set to `\"openapi\"`, indicating that the structure is based on the OpenAPI document." },
+    { field: "paths", required: "false", default: "{}", description: "Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Import paths
 
-| Component      | Default Value              | Description                                                                                                   |
-|----------------|----------------------------|---------------------------------------------------------------------------------------------------------------|
-| `callbacks`    | `models/callbacks`          | The directory where callback models will be imported from.                                                     |
-| `errors`       | `models/errors`             | The directory where error models will be imported from.                                                        |
-| `operations`   | `models/operations`         | The directory where operation models (i.e., API endpoints) will be imported from.                              |
-| `shared`       | `models/components`         | The directory for shared components, such as reusable schemas, and data models, imported from the OpenAPI spec. |
-| `webhooks`     | `models/webhooks`           | The directory for webhook models, if your SDK includes support for webhooks.                                   |
+<Table 
+  data={[
+    { component: "callbacks", default: "models/callbacks", description: "The directory where callback models will be imported from." },
+    { component: "errors", default: "models/errors", description: "The directory where error models will be imported from." },
+    { component: "operations", default: "models/operations", description: "The directory where operation models (i.e., API endpoints) will be imported from." },
+    { component: "shared", default: "models/components", description: "The directory for shared components, such as reusable schemas, and data models, imported from the OpenAPI spec." },
+    { component: "webhooks", default: "models/webhooks", description: "The directory for webhook models, if your SDK includes support for webhooks." }
+  ]}
+  columns={[
+    { key: "component", header: "Component" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Error and response handling
 ```yml
@@ -115,7 +178,16 @@ csharp:
   clientServerStatusCodesAsErrors: true
   responseFormat: "envelope-http"
 ```
-| Name                            | Required | Default Value   | Description                                                                                               |
-|---------------------------------|----------|-----------------|-----------------------------------------------------------------------------------------------------------|
-| `responseFormat`                | false    | `envelope-http` | Defines how responses are structured. Options: `envelope`, `envelope-http`, or `flat`.                     |
-| `clientServerStatusCodesAsErrors`| false    | `true`          | Treats `4XX` and `5XX` status codes as errors. Set to `false` to treat them as normal responses.           |
+
+<Table 
+  data={[
+    { name: "responseFormat", required: "false", default: "envelope-http", description: "Defines how responses are structured. Options: `envelope`, `envelope-http`, or `flat`." },
+    { name: "clientServerStatusCodesAsErrors", required: "false", default: "true", description: "Treats `4XX` and `5XX` status codes as errors. Set to `false` to treat them as normal responses." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
