--- a/docs/speakeasy-reference/generation/go-config.mdx
+++ b/docs/speakeasy-reference/generation/go-config.mdx
@@ -1,5 +1,3 @@
-
-
 # Go configuration options
 
  This section details the available configuration options for the Go SDK. All configuration is managed in the `gen.yaml` file under the `go` section.
@@ -12,10 +10,18 @@ go:
   packageName: "custom-sdk"
 ```
 
-| Name          | Required | Default Value | Description                                                                                                      |
-|---------------|----------|---------------|------------------------------------------------------------------------------------------------------------------|
-| `version`     | true     | `0.0.1`       | The current version of the SDK. |
-| `packageName` | true     | `openapi`     | The Go module package name. See [Go Module Path Documentation](https://go.dev/ref/mod#module-path). |
+<Table 
+  data={[
+    { name: "version", required: "true", default: "0.0.1", description: "The current version of the SDK." },
+    { name: "packageName", required: "true", default: "openapi", description: "The Go module package name. See [Go Module Path Documentation](https://go.dev/ref/mod#module-path)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Additional dependencies
 
@@ -25,9 +31,18 @@ go:
     dependencies:
       axios: "^0.21.0"
 ```
-| Name                        | Required | Default Value  | Description                                                                                                                                |
-|-----------------------------|----------|----------------|--------------------------------------------------------------------------------------------------------------------------------------------|
-| `additionalDependencies`     | false    | `{}`           | Add additional dependencies to include in the generated `go.mod`.                                                                      |
+
+<Table 
+  data={[
+    { name: "additionalDependencies", required: "false", default: "{}", description: "Add additional dependencies to include in the generated `go.mod`." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Method and parameter management
 ```yml
@@ -36,10 +51,18 @@ go
   methodArguments: "require-security-and-request"
 ```
 
-| Name                            | Required | Default Value  | Description                                                                                                                                   |
-|---------------------------------|----------|----------------|-----------------------------------------------------------------------------------------------------------------------------------------------|
-| `maxMethodParams`               | false    | `4`            | The maximum number of parameters a method can have before the resulting SDK endpoint is no longer "flattened" and an input object is created. `0` will use input objects always. Must match the regex pattern `/^\d+$/`." |
-| `methodArguments`               | false    | `require-security-and-request` | Determines how arguments for SDK methods are generated. Options: `"infer-optional-args"` or `"require-security-and-request"`. |
+<Table 
+  data={[
+    { name: "maxMethodParams", required: "false", default: "4", description: "The maximum number of parameters a method can have before the resulting SDK endpoint is no longer \"flattened\" and an input object is created. `0` will use input objects always. Must match the regex pattern `/^\\d+$/`." },
+    { name: "methodArguments", required: "false", default: "require-security-and-request", description: "Determines how arguments for SDK methods are generated. Options: `\"infer-optional-args\"` or `\"require-security-and-request\"`." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Security configuration
 
@@ -49,13 +72,18 @@ go
   flattenGlobalSecurity: true
 ```
 
-
-| Name                            | Required | Default Value  | Description                                                                                                                                |
-|---------------------------------|----------|----------------|--------------------------------------------------------------------------------------------------------------------------------------------|
-| `clientServerStatusCodesAsErrors`| false    | `true`         | Whether to treat `4xx` and `5xx` status codes as errors. |
-| `flattenGlobalSecurity`         | false    | `newSDK`       | Flatten the global security configuration if there is only a single option in the spec.                                                     |
-                                                                                  |
-
+<Table 
+  data={[
+    { name: "clientServerStatusCodesAsErrors", required: "false", default: "true", description: "Whether to treat `4xx` and `5xx` status codes as errors." },
+    { name: "flattenGlobalSecurity", required: "false", default: "newSDK", description: "Flatten the global security configuration if there is only a single option in the spec." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Import management
 
@@ -70,19 +98,35 @@ go
       webhooks: models/webhooks
 ```
 
-| Path        | Default Value         | Description                                                                                                |
-|-------------|-----------------------|------------------------------------------------------------------------------------------------------------|
-| `shared`    | `models/components`   | The directory for shared components, such as reusable schemas, and data models.                                                                  |
-| `operations`| `models/operations`   | The directory where operation models (i.e., API endpoints) will be imported from.                                                                 |
-| `errors`    | `models/sdkerrors`    | The directory where error models will be imported from.                                                                                           |
-| `callbacks` | `models/callbacks`    | The directory where callback models will be imported from.                                                                                         |
-| `webhooks`  | `models/webhooks`     | The directory where webhook models will be imported from.                                                                                          |
+<Table 
+  data={[
+    { path: "shared", default: "models/components", description: "The directory for shared components, such as reusable schemas, and data models." },
+    { path: "operations", default: "models/operations", description: "The directory where operation models (i.e., API endpoints) will be imported from." },
+    { path: "errors", default: "models/sdkerrors", description: "The directory where error models will be imported from." },
+    { path: "callbacks", default: "models/callbacks", description: "The directory where callback models will be imported from." },
+    { path: "webhooks", default: "models/webhooks", description: "The directory where webhook models will be imported from." }
+  ]}
+  columns={[
+    { key: "path", header: "Path" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Error and response handling
 ```yml
 go:
   responseFormat: "envelope-http"
 ```
-| Name                            | Required | Default Value  | Description                                                                                                                                |
-|---------------------------------|----------|----------------|--------------------------------------------------------------------------------------------------------------------------------------------|
-| `responseFormat`                | false    | `envelope-http` | Determines the shape of the response envelope that is returned from SDK methods. Must be `envelope-http`, `envelope`, or `flat` only.' |
+
+<Table 
+  data={[
+    { name: "responseFormat", required: "false", default: "envelope-http", description: "Determines the shape of the response envelope that is returned from SDK methods. Must be `envelope-http`, `envelope`, or `flat` only." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
