--- a/docs/speakeasy-reference/generation/ts-config.mdx
+++ b/docs/speakeasy-reference/generation/ts-config.mdx
@@ -1,6 +1,3 @@
-
-
-
 # Typescript Configuration Options
 
  This section details the available configuration options for the TypeScript SDK. All configuration is managed in the `gen.yaml` file under the `typescript` section.
@@ -14,11 +11,19 @@ typescript:
   packageName: "custom-sdk"
 ```
 
-| Name                   | Required | Default Value | Description                                                                                   |
-|------------------------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `version`              | true     | `0.0.1`       | The current version of the SDK.                                                               |
-| `packageName`           | true     | `openapi`     | The name of the npm package. See [npm package guidelines](https://docs.npmjs.com/package-name-guidelines). |
-| `author`               | true     | `Speakeasy`   | The name of the author of the published package. See [npm author field](https://docs.npmjs.com/cli/v9/configuring-npm/package-json#people-fields-author-contributors). |
+<Table 
+  data={[
+    { name: "version", required: "true", default: "0.0.1", description: "The current version of the SDK." },
+    { name: "packageName", required: "true", default: "openapi", description: "The name of the npm package. See [npm package guidelines](https://docs.npmjs.com/package-name-guidelines)." },
+    { name: "author", required: "true", default: "Speakeasy", description: "The name of the author of the published package. See [npm author field](https://docs.npmjs.com/cli/v9/configuring-npm/package-json#people-fields-author-contributors)." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Additional JSON package
 
@@ -28,9 +33,17 @@ typescript:
     license: "MIT"
 ```
 
-| Name                   | Required | Default Value | Description                                                                                   |
-|------------------------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `additionalPackageJSON` | false    | `{}`          | Additional key/value pairs for the `package.json` file. Example: license, keywords, etc.       |
+<Table 
+  data={[
+    { name: "additionalPackageJSON", required: "false", default: "{}", description: "Additional key/value pairs for the `package.json` file. Example: license, keywords, etc." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Additional dependencies
 
@@ -44,12 +57,20 @@ typescript:
     peerDependencies:
       react: "^16.0.0"
 ```
-| Name                        | Required | Default Value                | Description                                                                                   |
-|-----------------------------|----------|------------------------------|-----------------------------------------------------------------------------------------------|
-| `dependencies`               | false    | `{}`                         | Additional production dependencies to include in the `package.json`.                           |
-| `devDependencies`            | false    | `{}`                         | Additional development dependencies to include in the `package.json`.                          |
-| `peerDependencies`           | false    | `{}`                         | Peer dependencies for compatibility.                                                          |
 
+<Table 
+  data={[
+    { name: "dependencies", required: "false", default: "{}", description: "Additional production dependencies to include in the `package.json`." },
+    { name: "devDependencies", required: "false", default: "{}", description: "Additional development dependencies to include in the `package.json`." },
+    { name: "peerDependencies", required: "false", default: "{}", description: "Peer dependencies for compatibility." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Method and parameter management
 ```yml
@@ -58,12 +79,19 @@ typescript:
   methodArguments: "require-security-and-request"
 ```
 
-| Name                       | Required | Default Value               | Description                                                                                   |
-|----------------------------|----------|-----------------------------|-----------------------------------------------------------------------------------------------|
-| `maxMethodParams`           | false    | `0`                         | Maximum number of parameters before an input object is created. `0` means input objects are always used. |
-| `flatteningOrder`           | false    | `parameters-first` or `body-first` | Determines the ordering of method arguments when flattening parameters and body fields.        |
-| `methodArguments`           | false    | `require-security-and-request` | Determines how arguments for SDK methods are generated.                                        |
-
+<Table 
+  data={[
+    { name: "maxMethodParams", required: "false", default: "0", description: "Maximum number of parameters before an input object is created. `0` means input objects are always used." },
+    { name: "flatteningOrder", required: "false", default: "parameters-first or body-first", description: "Determines the ordering of method arguments when flattening parameters and body fields." },
+    { name: "methodArguments", required: "false", default: "require-security-and-request", description: "Determines how arguments for SDK methods are generated." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Security configuration
 
@@ -72,10 +100,19 @@ typescript:
   envVarPrefix: SPEAKEASY
   flattenGlobalSecurity: true
 ```
-| Property                        | Description                                                                                              | Type     | Default   |
-|---------------------------------|----------------------------------------------------------------------------------------------------------|----------|-----------|
-| `flattenGlobalSecurity`         | Enables inline security credentials during SDK instantiation. **Recommended: `true`**                    | boolean  | `true`    |
-| `envVarPrefix`                  | Sets a prefix for environment variables that allows users to configure global parameters and security.     | string   | N/A    |
+
+<Table 
+  data={[
+    { property: "flattenGlobalSecurity", description: "Enables inline security credentials during SDK instantiation. **Recommended: `true`**", type: "boolean", default: "true" },
+    { property: "envVarPrefix", description: "Sets a prefix for environment variables that allows users to configure global parameters and security.", type: "string", default: "N/A" }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "description", header: "Description" },
+    { key: "type", header: "Type" },
+    { key: "default", header: "Default" }
+  ]}
+/>
 
 ## Module management
 
@@ -84,10 +121,19 @@ typescript:
   moduleFormat: "dual"
   useIndexModules: true
 ```
-| Name                    | Required | Default Value     | Description                                                                                   |
-|-------------------------|----------|-------------------|-----------------------------------------------------------------------------------------------|
-| `useIndexModules`        | false    | `true`            | Controls generation of index modules (`index.ts`). Setting to `false` improves tree-shaking and build performance by avoiding barrel files. |
-| `moduleFormat`           | false    | `commonjs`        | Sets the module format to use when compiling the SDK (`commonjs`, `esm`, or `dual`). Using `dual` provides optimal compatibility while enabling modern bundler optimizations. |
+
+<Table 
+  data={[
+    { name: "useIndexModules", required: "false", default: "true", description: "Controls generation of index modules (`index.ts`). Setting to `false` improves tree-shaking and build performance by avoiding barrel files." },
+    { name: "moduleFormat", required: "false", default: "commonjs", description: "Sets the module format to use when compiling the SDK (`commonjs`, `esm`, or `dual`). Using `dual` provides optimal compatibility while enabling modern bundler optimizations." }
+  ]}
+  columns={[
+    { key: "name", header: "Name" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 <Callout title="Performance optimization" type="info">
 For optimal bundle size and tree-shaking performance in modern applications, we recommend using `moduleFormat: "dual"` together with `useIndexModules: false`. This combination ensures maximum compatibility while enabling the best possible bundler optimizations.
@@ -108,20 +154,36 @@ typescript:
       shared: models/components
       webhooks: models/webhooks
 ```
-| Field   | Required | Default Value | Description                                                                                   |
-|---------|----------|---------------|-----------------------------------------------------------------------------------------------|
-| `option`| false    | `"openapi"`   | Defines the type of import strategy. Typically set to `"openapi"`, indicating that the structure is based on the OpenAPI document. |
-| `paths` | false    | `{}`          | Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from. |
+
+<Table 
+  data={[
+    { field: "option", required: "false", default: "\"openapi\"", description: "Defines the type of import strategy. Typically set to `\"openapi\"`, indicating that the structure is based on the OpenAPI document." },
+    { field: "paths", required: "false", default: "{}", description: "Customizes where different parts of the SDK (e.g., callbacks, errors, and operations) will be imported from." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Import paths
 
-| Component      | Default Value              | Description                                                                                                   |
-|----------------|----------------------------|---------------------------------------------------------------------------------------------------------------|
-| `callbacks`    | `models/callbacks`          | The directory where callback models will be imported from.                                                      |
-| `errors`       | `models/errors`             | The directory where error models will be imported from.                                                         |
-| `operations`   | `models/operations`         | The directory where operation models (i.e., API endpoints) will be imported from.                               |
-| `shared`       | `models/components`         | The directory for shared components, such as reusable schemas, and data models imported from the OpenAPI spec.  |
-| `webhooks`     | `models/webhooks`           | The directory for webhook models, if your SDK includes support for webhooks.                                    |
+<Table 
+  data={[
+    { component: "callbacks", default: "models/callbacks", description: "The directory where callback models will be imported from." },
+    { component: "errors", default: "models/errors", description: "The directory where error models will be imported from." },
+    { component: "operations", default: "models/operations", description: "The directory where operation models (i.e., API endpoints) will be imported from." },
+    { component: "shared", default: "models/components", description: "The directory for shared components, such as reusable schemas, and data models imported from the OpenAPI spec." },
+    { component: "webhooks", default: "models/webhooks", description: "The directory for webhook models, if your SDK includes support for webhooks." }
+  ]}
+  columns={[
+    { key: "component", header: "Component" },
+    { key: "default", header: "Default Value" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Error and response handling
 ```yml
@@ -130,8 +192,17 @@ typescript:
   responseFormat: "envelope-http"
   enumFormat: "union"
 ```
-| Property          | Description                                                                                       | Type    | Default           |
-|-------------------|---------------------------------------------------------------------------------------------------|---------|-------------------|
-| `responseFormat`   | Defines how responses are structured. Options: `envelope`, `envelope-http`, or `flat`.             | string  | `envelope-http`    |
-| `enumFormat`       | Determines how enums are generated. Options: `enum` (TypeScript enums) or `union` (union types).   | string  | `union`            |
-| `clientServerStatusCodesAsErrors`| Treats `4XX` and `5XX` status codes as errors. Set to `false` to treat them as normal responses.         | boolean  | `true`    |
+
+<Table 
+  data={[
+    { property: "responseFormat", description: "Defines how responses are structured. Options: `envelope`, `envelope-http`, or `flat`.", type: "string", default: "envelope-http" },
+    { property: "enumFormat", description: "Determines how enums are generated. Options: `enum` (TypeScript enums) or `union` (union types).", type: "string", default: "union" },
+    { property: "clientServerStatusCodesAsErrors", description: "Treats `4XX` and `5XX` status codes as errors. Set to `false` to treat them as normal responses.", type: "boolean", default: "true" }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "description", header: "Description" },
+    { key: "type", header: "Type" },
+    { key: "default", header: "Default" }
+  ]}
+/>
