--- a/examples/terraform/crud.mdx
+++ b/examples/terraform/crud.mdx
@@ -30,9 +30,8 @@ Terraform providers, built with the [terraform-plugin-framework](https://github.
 
 Let's explore how to define a resource and map API operations to Terraform methods using annotations for CRUD actions.
 
-{/* <ScrollyCoding className="ch-scrollycoding-full-height"> */}
 
-<ScrollyCoding>
+<Spotlight>
 
 ### !!steps Defining a Resource
 
@@ -209,7 +208,7 @@ components:
         - price
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Managing Complex API Semantics with Speakeasy
 
