--- a/examples/terraform/merged-entity.mdx
+++ b/examples/terraform/merged-entity.mdx
@@ -25,9 +25,8 @@ Consider a scenario where managing a `drink` resource requires setting a `visibi
 1. **Create the drink**: Invoke `POST /drink` to create the drink entity.
 2. **Set visibility**: Follow with `POST /drink/{id}/visibility` to configure visibility.
 
-{/* <ScrollyCoding className="ch-scrollycoding-full-height"> */}
 
-<ScrollyCoding>
+<Spotlight>
 
 ## !!steps Step 1: Define API Endpoints
 
@@ -197,13 +196,13 @@ Use `x-speakeasy-entity` annotations to simplify response handling by hoisting, 
         description: OK
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Advanced Example Step-by-Step
 
 When an [x-speakeasy-entity-operation](/docs/terraform/extensions#the-x-speakeasy-entity-operation-annotation) is defined, the request body, parameters, and response bodies of `CREATE` and `READ` operations are considered the root of the Terraform Type Schema.
 
-<ScrollyCoding>
+<Spotlight>
 
 ## !!steps Step 1:
 
@@ -630,4 +629,4 @@ func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, 
 }
 ```
 
-</ScrollyCoding>
+</Spotlight>
