--- a/openapi/frameworks/gnostic.mdx
+++ b/openapi/frameworks/gnostic.mdx
@@ -46,7 +46,7 @@ The first endpoint is `createDrink`: Create a new drink based on the provided in
 
 Our second endpoint is `getDrink`: Create a new drink based only on the drink's name. Return a list of ingredients with quantities, a recipe, and a photo.
 
-<ScrollyCoding className="ch-scrollyCoding-full-height ch-scrollyCoding-force-focus-scroll" fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -246,7 +246,7 @@ Finally, we'll expose port 50051 and run our server.
 !from ./assets/gnostic/Dockerfile.txt
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ### Dev Container Configuration
 
@@ -351,7 +351,7 @@ Update the `buf.yaml` file created in the project root with the following conten
 
 We depend on `googleapis` because the gRPC Go plugin requires it.
 
-<ScrollyCoding className="ch-scrollyCoding-full-height" fullHeight>
+<Spotlight>
 
 ## !!steps
 
@@ -381,7 +381,7 @@ We also specify the plugins we want to use and where to output the generated cod
 # !focus(9:21)
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 Update Buf's dependencies using the following command:
 
