--- a/openapi/frameworks/pydantic.mdx
+++ b/openapi/frameworks/pydantic.mdx
@@ -57,7 +57,7 @@ pip install pyyaml
 
 Let's follow a step-by-step process to generate an OpenAPI schema from a Pydantic model without any additional libraries.
 
-<ScrollyCoding className="ch-scrollycoding-full-height ch-scrollycoding-force-focus-scroll" fullHeight>
+<Spotlight>
 
 ### !!steps Define a Simple Pydantic Model
 
@@ -1436,7 +1436,7 @@ components:
 
 This enum is represented as a separate schema in the OpenAPI document.
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Adding Paths and Operations to the OpenAPI Schema
 
@@ -1462,7 +1462,7 @@ Install the `openapi-pydantic` library:
 pip install openapi-pydantic
 ```
 
-<ScrollyCoding className="ch-scrollycoding-full-height ch-scrollycoding-force-focus-scroll">
+<Spotlight>
 
 ## !!steps
 
@@ -2058,7 +2058,7 @@ We'll leave the rest of the `openapi.yaml` file, as it is similar to the compone
 
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ## Generating an SDK from the OpenAPI Schema
 
@@ -2100,7 +2100,7 @@ Alternatively, you can add extensions directly to the OpenAPI schema using the `
 
 For example, you can add the [`x-speakeasy-retries` extension](../../docs/customize-sdks/retries.mdx) to have Speakeasy generate retry logic in the SDK.
 
-<ScrollyCoding className="ch-scrollycoding-full-height ch-scrollycoding-force-focus-scroll">
+<Spotlight>
 
 ## !!steps
 
@@ -2335,7 +2335,7 @@ x-speakeasy-retries:
   retryConnectionErrors: true
 ```
 
-</ScrollyCoding>
+</Spotlight>
 
 ### Add Tags to the OpenAPI Schema
 
